--- a/views/dca101welcomepage.ejs
+++ b/views/dca101welcomepage.ejs
@@ -38,7 +38,7 @@
             
             <p class="fw-normal">Awle, tunah hian DCA I Semester hnuaia subject hmasa ber (a code hming <code>DCA-101) </code>kan zir dawn a, a subject hming chu  <code> Fundamental of Computer </code> a ni. 
             
-            Kan hriat angin tuna kan zir tur hi <code>theory </code> a ni dawn a. Syllabus milin kan zir dawn a ni. </p>
+            Kan hriat angin tuna kan zir tur hi <code>theory </code> a ni dawn a. Syllabus leh question hlui milin kan zir dawn a ni. </p>
             
             <h5 class="text-dark fw-normal mt-4 ">DCA-101 Chapter te</h5>
             
