--- a/views/dca102onlineclasschapter1.ejs
+++ b/views/dca102onlineclasschapter1.ejs
@@ -250,48 +250,49 @@ various devices that are being used to accomplish the task of  the user.</p>
 utility programs and other software packages to various users working on the computer system.</p>
 
 <p><code>(viii)	Security Management:</code> It establishes data security and integrity.</p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. A pre-coded program to perform over all set of instruction is => Operating System
+1. A pre-coded program to perform over all set of instruction is <br><b>Ans... </b> Operating System
 </p><p>
-2. Word Processor that comes with windows Operating System is => Wordpad
+2. Word Processor that comes with windows Operating System is <br><b>Ans... </b> Wordpad
 </p><p>
-3. Process scheduling is performed by => Operating System
+3. Process scheduling is performed by <br><b>Ans... </b> Operating System
 </p><p>
-4. Early operating system that were designed with little concern about structure are referred to as => Monolithic OS
+4. Early operating system that were designed with little concern about structure are referred to as <br><b>Ans... </b> Monolithic OS
 </p><p>
-5. Application program need to interact with the operating system for using hardware resources.
+5. ________ need to interact with the operating system for using hardware resources <br><b>Ans... </b> Application program
 </p><p>
-6. The operating system is primarily concerned with allocating and deallocating computer resources to => one or more jobs
+6. The operating system is primarily concerned with allocating and deallocating computer resources to <br><b>Ans... </b> one or more jobs
 </p><p>
-7. ________ is responsible for controlling and directing process => Operating System
+7. ________ is responsible for controlling and directing process <br><b>Ans... </b> Operating System
 </p><p>
-8. DOS => Disk Operating System
+8. DOS <br><b>Ans... </b> Disk Operating System
 </p><p>
-9. The full form of MS-DOS is => Microsoft Disk operating System
+9. The full form of MS-DOS is <br><b>Ans... </b> Microsoft Disk operating System
 </p><p>
-10. A software program that control internal activities in a computer is called => Operating System
+10. A software program that control internal activities in a computer is called <br><b>Ans... </b> Operating System
 </p><p>
-11. Which of the following is Multi User Operating System => Linux
+11. Which of the following is Multi User Operating System <br><b>Ans... </b> Linux
 </p><p>
-12. One of the primary function of the Operating System is to provide interface between the user and the => Hardware
+12. One of the primary function of the Operating System is to provide interface between the user and the <br><b>Ans... </b> Hardware
 </p><p>
-13. Just after a PC is switch on which of the following program is loaded first => Operating System
+13. Just after a PC is switch on which of the following program is loaded first <br><b>Ans... </b> Operating System
 </p><p>
-14. Which of the following is not the main function of Operating System => Temperature Management <br>
+14. Which of the following is not the main function of Operating System <br><b>Ans... </b> Temperature Management <br>
 { 1) Input/ Output Management 2) RAM Management 3) Temperature Management 4) Task management }
 </p><p>
-15. Operating System is a => Software program
+15. Operating System is a <br><b>Ans... </b> Software program
 </p><p>
-18. The most commonly used Operating System is => Microsoft Windows
+18. The most commonly used Operating System is <br><b>Ans... </b> Microsoft Windows
 </p><p>
-19. Which of the following is not the function of Operating System? => Virus Removal <br> 
+19. Which of the following is not the function of Operating System? <br><b>Ans... </b> Virus Removal <br> 
 { a) Processor management c) Virus Removal b) Input/Output management d) Scheduling }
 </p><p>
-20. A computer Operating System provides => User interface.
+20. A computer Operating System provides <br><b>Ans... </b> User interface.
 </p><p>
-21. A program used to detect overall system malfunction is system diagnostic.
+21. A program used to detect overall system malfunction is ________ <br><b>Ans... </b> system diagnostic.
 </p>
 
              
@@ -470,10 +471,7 @@ utility programs and other software packages to various users working on the com
               
               </div>
               
-           <hr>
-            
- 
-            
+       
             </div>
             
             </div>
