--- a/views/dca102onlineclasschapter10.ejs
+++ b/views/dca102onlineclasschapter10.ejs
@@ -229,80 +229,81 @@ or graphical user interface (GUI). It is named a shell because it is the outermo
 
 <p>
 15.	<code>BOOTING: </code> Boot means ‘start’ or make the computer system ready for taking instructions. When the computer is first switched on, it is called cold booting. When the computer is already ON and is being reset, it is  called  warm  booting.             
- </p>                   
+ </p>  
+ <hr>
  <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. The wildcard in <em> *.exe</em>  represents of executable file => All primary file name
+1. The wildcard in <em> *.exe</em>  represents of executable file <br><b>Ans... </b> All primary file name
 </p><p>
-2. In process scheduling stack is also known as => FIFO
+2. In process scheduling stack is also known as <br><b>Ans... </b> FIFO
 </p><p>
-3. BPS => Bits per second
+3. BPS <br><b>Ans... </b> Bits per second
 </p><p>
-4. ASCII => American Standard code for Information Interchange
+4. ASCII <br><b>Ans... </b> American Standard code for Information Interchange
 </p><p>
-5. To switch between two or more opened windows => ALT + TAB
+5. To switch between two or more opened windows <br><b>Ans... </b> ALT + TAB
 </p><p>
 6. When a computer is switch on a program automatically run and load
-the OS then the computer is ready to be used, this process is called => Booting
+the OS then the computer is ready to be used, this process is called <br><b>Ans... </b> Booting
 </p><p>
-7. To ensure have the latest version of windows Microsoft introduce a feature a called => Windows System update
+7. To ensure have the latest version of windows Microsoft introduce a feature a called <br><b>Ans... </b> Windows System update
 </p><p>
-8. When we click on start button of Windows 7 the => Start Menu appear
+8. When we click on start button of Windows 7 the <br><b>Ans... </b> Start Menu appear
 </p><p>
-9. The default web browser in Microsoft Windows 7 is => Internet Explorer
+9. The default web browser in Microsoft Windows 7 is <br><b>Ans... </b> Internet Explorer
 </p><p>
-10. After the computer is switch ON the OS is loaded into Computer's => Main Memory
+10. After the computer is switch ON the OS is loaded into Computer's <br><b>Ans... </b> Main Memory
 </p><p>
-11. A computer Operating System provides => User Interface
+11. A computer Operating System provides <br><b>Ans... </b> User Interface
 </p><p>
-12. Option button is also called => Radio Button
+12. Option button is also called <br><b>Ans... </b> Radio Button
 </p><p>
-13. What is the full form of PPP => Point to Point Protocol
+13. What is the full form of PPP <br><b>Ans... </b> Point to Point Protocol
 </p><p>
-14. Example of peripheral device are => All of the above <br> 
+14. Example of peripheral device are <br><b>Ans... </b> All of the above <br> 
 { 1) Monitor 2) Keyboard 3) Printer 4) All of the above }
 </p><p>
-15. An illusion of extremely large main memory is called => Virtual memory
+15. An illusion of extremely large main memory is called <br><b>Ans... </b> Virtual memory
 </p><p>
-16. The default folder where all installed software are put into is => Program files
+16. The default folder where all installed software are put into is <br><b>Ans... </b> Program files
 </p><p>
-17. Area occupied by each job residing simultaneously in the main memory is known as a => Memory partition
+17. Area occupied by each job residing simultaneously in the main memory is known as a <br><b>Ans... </b> Memory partition
 </p><p>
-18. A binary number system has ________ digits => 2
+18. A binary number system has ________ digits <br><b>Ans... </b> 2
 </p><p>
-19. CRT => Cathode Ray Tube
+19. CRT <br><b>Ans... </b> Cathode Ray Tube
 </p><p>
-20. DLL => Dynamic Linked Library
+20. DLL <br><b>Ans... </b> Dynamic Linked Library
 </p><p>
-21. A folder 'A' is invisible folder 'B', then folder 'A' is => A folder is subfolder of B
+21. A folder 'A' is invisible folder 'B', then folder 'A' is <br><b>Ans... </b> A folder is subfolder of B
 </p><p>
-22. BAT => Batch File
+22. BAT <br><b>Ans... </b> Batch File
 </p><p>
-23. +R => Read Only
+23. +R <br><b>Ans... </b> Read Only
 </p><p>
-24. Volatile memory is _______ memory => primary
+24. Volatile memory is _______ memory <br><b>Ans... </b> primary
 </p><p>
-25. Which of the following is not Windows Utility Software? => Adobe <br>
+25. Which of the following is not Windows Utility Software? <br><b>Ans... </b> Adobe <br>
 { a) Notepad c) Paint b) Adobe d) Wordpad }
 </p><p>
-26. A square shape button containing an X which is located at the right edge of the title bar in Windows 7 is => Close button
+26. A square shape button containing an X which is located at the right edge of the title bar in Windows 7 is <br><b>Ans... </b> Close button
 </p><p>
-27. To free up space on a hard drive by removing temporary file we can do => Disk cleanup
+27. To free up space on a hard drive by removing temporary file we can do <br><b>Ans... </b> Disk cleanup
 </p><p>
-28. The full form of DMA is => Direct memory access
+28. The full form of DMA is <br><b>Ans... </b> Direct memory access
 </p><p>
-29. If the user is currently working on a local hard drive in DOS environment, the screen will prompt => C:\>
+29. If the user is currently working on a local hard drive in DOS environment, the screen will prompt <br><b>Ans... </b> C:\>
 </p><p>
-30. Which among the following is not taskbar elements of Windows 7 => Speed meter <br>
+30. Which among the following is not taskbar elements of Windows 7 <br><b>Ans... </b> Speed meter <br>
 { a) Task button b) Toolbar c) Start button d) Speed meter }
 </p><p>
-31. Which of the following is among the content of start menu in Windows 7 => All programs <br>
+31. Which of the following is among the content of start menu in Windows 7 <br><b>Ans... </b> All programs <br>
 { a) Decipher b) Save c) Wi-fi d) All programs }
 </p><p>
-32. To select all the items in a folder we click the edit menu and press => Ctrl + A
+32. To select all the items in a folder we click the edit menu and press <br><b>Ans... </b> Ctrl + A
 </p><p>
-33. Basic file and folder operations in Windows 7 are => Selecting, Creating, Naming, Opening
+33. Basic file and folder operations in Windows 7 are <br><b>Ans... </b> Selecting, Creating, Naming, Opening
 </p>
 
 
@@ -480,10 +481,7 @@ the OS then the computer is ready to be used, this process is called => Booting
               
               </div>
               
-           <hr>
-            
- 
-            
+        
             </div>
             
             </div>
