--- a/views/dca102onlineclasschapter2.ejs
+++ b/views/dca102onlineclasschapter2.ejs
@@ -293,74 +293,75 @@ the category are as follows.</p>
 </ul>
 
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Software is divided into ________ types => 2
+1. Software is divided into ________ major types <br><b>Ans... </b> 2
 </p><p>
-2. DOS is a _______ OS => Character user interface
+2. DOS is a _______ OS <br><b>Ans... </b> Character user interface
 </p><p>
-3. OS which allows only one user to work in a computer at a time is known as => Single user OS
+3. OS which allows only one user to work in a computer at a time is known as <br><b>Ans... </b> Single user OS
 </p><p>
-4. MS Windows is a => Multi Tasking
+4. MS Windows is a <br><b>Ans... </b> Multi Tasking
 </p><p>
-5. Example of single tasking OS is => DOS
+5. Example of single tasking OS is <br><b>Ans... </b> DOS
 </p><p>
-6. LINUX is a => Multi user OS
+6. LINUX is a <br><b>Ans... </b> Multi user OS
 </p><p>
-7. DOS is single user OS which is developed in => 1980's
+7. DOS is single user OS which is developed in <br><b>Ans... </b> 1980's
 </p><p>
-8. Which of the following is Multi User Operating System => Linux
+8. Which of the following is Multi User Operating System <br><b>Ans... </b> Linux
 </p><p>
-9. What type of operating system support execution of more than one job at a time => Multi-tasking OS
+9. What type of operating system support execution of more than one job at a time <br><b>Ans... </b> Multi-tasking OS
 </p><p>
-10. MMX stands for => Multimedia Extension
+10. MMX stands for <br><b>Ans... </b> Multimedia Extension
 </p><p>
-11. Utility Software package in Windows 7 does not include => Anti-virus
+11. Utility Software package in Windows 7 does not include <br><b>Ans... </b> Anti-virus
 </p><p>
-12. To speed up and gain efficiency of a hard disk access time we use => Disk Defragment tools
+12. To speed up and gain efficiency of a hard disk access time we use <br><b>Ans... </b> Disk Defragment tools
 </p><p>
-13. Which is not Microsoft Windows job => Uninterrupted power management
+13. Which is not Microsoft Windows job <br><b>Ans... </b> Uninterrupted power management
 </p><p>
-14. To enhance efficiency of a computer system and gain access of file and folder we use => Disk Defragment Tools
+14. To enhance efficiency of a computer system and gain access of file and folder we use <br><b>Ans... </b> Disk Defragment Tools
 </p><p>
-15. Utility Software package in Windows7 includes => Notepad
+15. Utility Software package in Windows7 includes <br><b>Ans... </b> Notepad
 </p><p>
-16. Which of the following is not Windows utility software => MS Office <br>
+16. Which of the following is not Windows utility software <br><b>Ans... </b> MS Office <br>
 { 1) MS Office 2) Notepad 3) Paint 4) Wordpad }
 </p><p>
-17. If we want to run a specific Program every time our Windows based PC startup we can use => Task Scheduler Utility
+17. If we want to run a specific Program every time our Windows based PC startup we can use <br><b>Ans... </b> Task Scheduler Utility
 </p><p>
-18. Which of the following is not Windows Utility Software? => Adobe <br>
+18. Which of the following is not Windows Utility Software? <br><b>Ans... </b> Adobe <br>
 { a) Notepad c) Paint b) Adobe d) Wordpad }
 </p><p>
-19. The full form of GUI is => Graphical User Interface
+19. The full form of GUI is <br><b>Ans... </b> Graphical User Interface
 </p><p>
-20. Full form of ICF is => Internet Connection Firewall
+20. Full form of ICF is <br><b>Ans... </b> Internet Connection Firewall
 </p><p>
-21. Consolidating fragmental file and folder on your hard disk is called => Defragment
+21. Consolidating fragmental file and folder on your hard disk is called <br><b>Ans... </b> Defragment
 </p><p>
-22. Notepad can open file with extension => TXT
+22. Notepad can open file with extension <br><b>Ans... </b> TXT
 </p><p>
-23. Recycle bin provides temporary storage for files and folders that were deleted.
+23. ________ provides temporary storage for files and folders that were deleted <br><b>Ans... </b> Recycle bin
 </p><p>
-24. Application program need to interact with the operating system for using hardware resources.
+24. ________ need to interact with the operating system for using hardware resources <br><b>Ans... </b> Application program
 </p><p>
-25. Basic file and folder operation are selecting, creating, naming and opening.
+25. Basic file and folder operation are <br><b>Ans... </b> selecting, creating, naming and opening.
 </p><p>
-26. CPU scheduling 'stack' is of _______ => First in first out
+26. CPU scheduling 'stack' is of _______ <br><b>Ans... </b> First in first out
 </p><p>
-27. On MS-DOS, file names are case-insensitive and limited to eight characters, plus optionally a period and three more characters.
+27. On ________, file names are case-insensitive and limited to eight characters, plus optionally a period and three more characters <br><b>Ans... </b> MS-DOS
 </p><p>
-28. What is the default size limitation of MS DOS file name? => 8,3
+28. What is the default size limitation of MS DOS file name? <br><b>Ans... </b> 8,3
 </p><p>
-29. DLL => Dynamic Linked Library
+29. DLL <br><b>Ans... </b> Dynamic Linked Library
 </p><p>
-30. CRT => Cathode Ray Tube
+30. CRT <br><b>Ans... </b> Cathode Ray Tube
 </p><p>
-31. PIXEL => Picture Element
+31. PIXEL <br><b>Ans... </b> Picture Element
 </p><p>
-32. Essential windows tool are located in => Accessories
+32. Essential windows tool are located in <br><b>Ans... </b> Accessories
 </p>
 
              
@@ -539,10 +540,7 @@ the category are as follows.</p>
               
               </div>
               
-           <hr>
-            
- 
-            
+       
             </div>
             
             </div>
