--- a/views/dca102onlineclasschapter3.ejs
+++ b/views/dca102onlineclasschapter3.ejs
@@ -204,39 +204,41 @@ and the latest in the series is  Windows  10  (July  29, 2015).
 
                       </p>
                       
+                      <hr>
+                      
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. With windows XP, you can make network files available offline
+1. With windows XP, you can make network files available <br><b>Ans... </b> offline
 </p><p>
-2. Windows 98 was launched => September 1998
+2. Windows 98 was launched <br><b>Ans... </b> September 1998
 </p><p>
-3. Which of the following is not system icon in Windows 7 => Desktop <br>
+3. Which of the following is not system icon in Windows 7 <br><b>Ans... </b> Desktop <br>
 { a) My Computer c) My Network Place b) My Document d) Desktop }
 </p><p>
-4. In which year Microsoft Windows 3.0 introduced => 1990
+4. In which year Microsoft Windows 3.0 introduced <br><b>Ans... </b> 1990
 </p><p>
-5. Which of the following is world's largest selling OS for PC => Microsoft Windows
+5. Which of the following is world's largest selling OS for PC <br><b>Ans... </b> Microsoft Windows
 </p><p>
-6. Windows 8 is a (an) => Operating System
+6. Windows 8 is a (an) <br><b>Ans... </b> Operating System
 </p><p>
-7. In which year Microsoft start working on Windows => 1983
+7. In which year Microsoft start working on Windows <br><b>Ans... </b> 1983
 </p><p>
-8. Which of the following is not Microsoft windows version => Windows Live <br>
+8. Which of the following is not Microsoft windows version <br><b>Ans... </b> Windows Live <br>
 { 1) Windows 3.0 2) Windows 98 3) Windows XP 4) Windows Live }
 </p><p>
-9. What is the main function of Active Movie in Windows 98 => Media-Streaming
+9. What is the main function of Active Movie in Windows 98 <br><b>Ans... </b> Media-Streaming
 </p><p>
-10. In windows XP a default location of newly created document is => My Document
+10. In windows XP a default location of newly created document is <br><b>Ans... </b> My Document
 </p><p>
-11. Taskbar in Windows XP include => All of the above <br>
+11. Taskbar in Windows XP include <br><b>Ans... </b> All of the above <br>
 { 1) Start menu Button 2) Toolbar 3) Notification Area 4) All of the above }
 </p><p>
-12. Which element of Windows XP display name of the program or document => Title Bar
+12. Which element of Windows XP display name of the program or document <br><b>Ans... </b> Title Bar
 </p><p>
-13. The final version of first Microsoft Windows was released in the year => 1985
+13. The final version of first Microsoft Windows was released in the year <br><b>Ans... </b> 1985
 </p><p>
-14. Windows 3.0 was introduced in the year => 1990
+14. Windows 3.0 was introduced in the year <br><b>Ans... </b> 1990
 </p>
 
              
@@ -415,10 +417,7 @@ and the latest in the series is  Windows  10  (July  29, 2015).
               
               </div>
               
-           <hr>
-            
- 
-            
+      
             </div>
             
             </div>
