--- a/views/dca102onlineclasschapter4.ejs
+++ b/views/dca102onlineclasschapter4.ejs
@@ -235,52 +235,52 @@ iii) On the extreme right is the notification area.
 <p><code>Dialog box tabs:</code> Using the keyboard, you can press the Tab key to move between sections and press the Spacebar to select them.</p>
 
 </p>
-
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. There are 2 type of icon in the desktop they are => System Icon and shortcut icon
+1. There are 2 type of icon in the desktop they are <br><b>Ans... </b> System Icon and shortcut icon
 </p><p>
-2. In the element of Windows 7 the four edge that define the perimeter of windows are known as => Border
+2. In the element of Windows 7 the four edge that define the perimeter of windows are known as <br><b>Ans... </b> Border
 </p><p>
-3. Which menu display an Application Program menu in Windows 7 => All program
+3. Which menu display an Application Program menu in Windows 7 <br><b>Ans... </b> All program
 </p><p>
-4. Which of the following is part of start menu in windows 7 => Search <br>
+4. Which of the following is part of start menu in windows 7 <br><b>Ans... </b> Search <br>
 { a) MS Paint c) Search b) Disk management d) None of the above }
 </p><p>
-5. The taskbar sits at ________ of the desktop => Bottom of the window
+5. The taskbar sits at ________ of the desktop <br><b>Ans... </b> Bottom of the window
 </p><p>
-6. A pictorial representation of application, file command or a tool is called => icon
+6. A pictorial representation of application, file command or a tool is called <br><b>Ans... </b> icon
 </p><p>
-7. What are icons? => Pictures
+7. What are icons? <br><b>Ans... </b> Pictures
 </p><p>
-8. Pictorial representation of an item/program is called => Icon
+8. Pictorial representation of an item/program is called <br><b>Ans... </b> Icon
 </p><p>
-9. To open any object in a windows explorer or folder we can => Double click on its icon
+9. To open any object in a windows explorer or folder we can <br><b>Ans... </b> Double click on its icon
 </p><p>
-10. When a folder is closed in Windows 7, all we see is => Name and icon of Folder
+10. When a folder is closed in Windows 7, all we see is <br><b>Ans... </b> Name and icon of Folder
 </p><p>
-11. Which of the following taskbar elements are displayed in the center portion of a taskbar => Task button
+11. Which of the following taskbar elements are displayed in the center portion of a taskbar <br><b>Ans... </b> Task button
 </p><p>
-12. The taskbar is at the ________ of the desktop => Bottom
+12. The taskbar is at the ________ of the desktop <br><b>Ans... </b> Bottom
 </p><p>
-13. Taskbar in Windows XP include => All of the above <br>
+13. Taskbar in Windows XP include <br><b>Ans... </b> All of the above <br>
 { 1) Start menu Button 2) Toolbar 3) Notification Area 4) All of the above }
 </p><p>
-14. Which of the following windows element is located at the left end of a taskbar in windows 7 => Start button
+14. Which of the following windows element is located at the left end of a taskbar in windows 7 <br><b>Ans... </b> Start button
 </p><p>
-15. When a window in Windows XP is not a long enough to display its content we use => Scrollbar
+15. When a window in Windows XP is not a long enough to display its content we use <br><b>Ans... </b> Scrollbar
 </p><p>
-16. Text Box in Windows XP are also known as => Edit box
+16. Text Box in Windows XP are also known as <br><b>Ans... </b> Edit box
 </p><p>
-17. Option button is also called => Radio button
+17. Option button is also called <br><b>Ans... </b> Radio button
 </p><p>
-18. The function key ________ opens Save AS dialogue box in an Application Progam => F12
+18. The function key ________ opens Save AS dialogue box in an Application Progam <br><b>Ans... </b> F12
 </p><p>
-19. Windows OS communicates with the user using => All of the above <br>
+19. Windows OS communicates with the user using <br><b>Ans... </b> All of the above <br>
 { 1) Radio buttons 2) Dialog boxes 3) Check boxes 4) All of the above }
 </p><p>
-20. Turn off Dialog Box in Windows XP does not include =>  Power Saver Mode
+20. Turn off Dialog Box in Windows XP does not include <br><b>Ans... </b>  Power Saver Mode
 </p>
 
                       </div>
@@ -458,10 +458,7 @@ iii) On the extreme right is the notification area.
               
               </div>
               
-           <hr>
-            
- 
-            
+      
             </div>
             
             </div>
