--- a/views/dca102onlineclasschapter5.ejs
+++ b/views/dca102onlineclasschapter5.ejs
@@ -238,63 +238,64 @@ Copy from the shortcut menu that appears.<br>
 1.	Right-click the file or folder that you want to delete, and then choose Delete.<br>
 2.	You can press the Delete key on your keyboard or choose delete from Edit menu.<br>
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. The deleted file from the hard disk are contain in => Recycle bin
+1. The deleted file from the hard disk are contain in <br><b>Ans... </b> Recycle bin
 </p><p>
-2. Filename is of two parts, they are => Primary file name, extension
+2. Filename is of two parts, they are <br><b>Ans... </b> Primary file name, extension
 </p><p>
-3. File name extension is given by => System
+3. File name extension is given by <br><b>Ans... </b> System
 </p><p>
-4. File is a any collection of related information that is given a name and stored on a disk so that it can be read/write whenever required
+4. ________ is a any collection of related information that is given a name and stored on a disk so that it can be read/write whenever required <br><b>Ans... </b> File
 </p><p>
-5. BAT => Batch File
+5. BAT <br><b>Ans... </b> Batch File
 </p><p>
-6. In window, the fundamental device for managing file is a => Folder
+6. In window, the fundamental device for managing file is a <br><b>Ans... </b> Folder
 </p><p>
-7. To rename file or folder, press ________ key => F2
+7. To rename file or folder, press ________ key <br><b>Ans... </b> F2
 </p><p>
-8. The deleted file from the Hard Disk are contained in => Recycle Bin
+8. The deleted file from the Hard Disk are contained in <br><b>Ans... </b> Recycle Bin
 </p><p>
-9. The default folder where all installed software are put into is => Program files
+9. The default folder where all installed software are put into is <br><b>Ans... </b> Program files
 </p><p>
-10. The fundamental file management tool in Windows 7 is => Folder
+10. The fundamental file management tool in Windows 7 is <br><b>Ans... </b> Folder
 </p><p>
-11. To free up space on a hard drive by removing temporary file we can do => Disk Cleanup
+11. To free up space on a hard drive by removing temporary file we can do <br><b>Ans... </b> Disk Cleanup
 </p><p>
-12. File editing menu are found in ________ menu => Edit
+12. File editing menu are found in ________ menu <br><b>Ans... </b> Edit
 </p><p>
-13. The primary file name is given by the => The User
+13. The primary file name is given by the <br><b>Ans... </b> The User
 </p><p>
-14. A ________ + delete key combination delete file permanently => shift
+14. A ________ + delete key combination delete file permanently <br><b>Ans... </b> shift
 </p><p>
-15. Which key combination delete file permanently after confirmation? => Shift
+15. Which key combination delete file permanently after confirmation? <br><b>Ans... </b> Shift
 </p><p>
-16. File name extension has ________ characters => 3
+16. File name extension has ________ characters <br><b>Ans... </b> 3
 </p><p>
-17. A file can contain any kind of information like => All of the above <br>
+17. A file can contain any kind of information like <br><b>Ans... </b> All of the above <br>
 { 1) Programs 2) Images 3) Documents 4) All of the above }
 </p><p>
-18. The wildcard in *.exe represents of executable file => All primary file name <br>
+18. The wildcard in *.exe represents of executable file <br><b>Ans... </b> All primary file name <br>
 Note: <em> Wildcard character * hi a hawrrawp vaiin / a hawrrawp zawng zawngin tihna a ni. </em>
 </p><p>
-19. . Ctrl + O is use to => Open an existing file.
+19. . Ctrl + O is use to <br><b>Ans... </b> Open an existing file.
 </p><p>
-20. Notepad can open files with the extension => such as batch files, INI files, and log files.
+20. Notepad can open files with the extension <br><b>Ans... </b> such as batch files, INI files, and log files.
 </p><p>
-21. To rename a file in Windows 7 we press => F2
+21. To rename a file in Windows 7 we press <br><b>Ans... </b> F2
 </p><p>
-22. Which of the following is among the correct step while creating new file? => Right Click Mouse Inside a folder <br>
+22. Which of the following is among the correct step while creating new file? <br><b>Ans... </b> Right Click Mouse Inside a folder <br>
 { a) Press Alt+F4 c) Hold Enter b) Left Click Mouse d) Right Click Mouse Inside a folder }
 </p><p>
-23. The fundamental file management tool in Windows 7 is => Folder
+23. The fundamental file management tool in Windows 7 is <br><b>Ans... </b> Folder
 </p><p>
-24. A collection of information which is given a name and stores in a Disk is called => File
+24. A collection of information which is given a name and stores in a Disk is called <br><b>Ans... </b> File
 </p><p>
-25. A file name has two parts, which are => Primary and secondary
+25. A file name has two parts, which are <br><b>Ans... </b> Primary and secondary
 </p><p>
-26. FAT =>  File Allocation Table
+26. FAT <br><b>Ans... </b>  File Allocation Table
 </p>
 
 
@@ -472,10 +473,7 @@ Note: <em> Wildcard character * hi a hawrrawp vaiin / a hawrrawp zawng zawngin t
               
               </div>
               
-           <hr>
-            
- 
-            
+  
             </div>
             
             </div>
