--- a/views/dca102onlineclasschapter6.ejs
+++ b/views/dca102onlineclasschapter6.ejs
@@ -304,65 +304,66 @@
   
 </table>
  </p>
+ <hr>
  <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. To Open Calculator: Click Start button, Choose all programs, highlight Accessories and then choose calculator.
+1. To Open Calculator <br><b>Ans... </b> Click Start button, Choose all programs, highlight Accessories and then choose calculator.
 </p><p>
-2. Which menu display an Application Program menu Windows 7 => All programs
+2. Which menu display an Application Program menu Windows 7 <br><b>Ans... </b> All programs
 </p><p>
-3. To use Calculator in Windows 7 we click Start button, choose all programs and then we highlight => Accessories
+3. To use Calculator in Windows 7 we click Start button, choose all programs and then we highlight <br><b>Ans... </b> Accessories
 </p><p>
-4. Which start menu allow us to change date and time => Control Panel <br>
+4. Which start menu allow us to change date and time <br><b>Ans... </b> Control Panel <br>
 { a) My Recent Document c) Run b) Control Panel d) Search }
 </p><p>
-5. Which one of the following contain many application you can run => All programs
+5. Which one of the following contain many application you can run <br><b>Ans... </b> All programs
 </p><p>
-6. In windows 7 a default location of newly created document is => My Document
+6. In windows 7 a default location of newly created document is <br><b>Ans... </b> My Document
 </p><p>
-7. Control panel allows you to => Install software & Change different setting
+7. Control panel allows you to <br><b>Ans... </b> Install software & Change different setting
 </p><p>
-8. Control panel in Windows 7 include setting of => All of the above <br>
+8. Control panel in Windows 7 include setting of <br><b>Ans... </b> All of the above <br>
 { a) Date & Time c) Password b) Sound d) All of the above }
 </p><p>
-9. Which start menu allow us to change date and time => Control panel
+9. Which start menu allow us to change date and time <br><b>Ans... </b> Control panel
 </p><p>
-10. Example of peripheral device are => All of the above <br>
+10. Example of peripheral device are <br><b>Ans... </b> All of the above <br>
 { 1) Monitor 2) Printer 3) Keyboard 4) All of the above }
 </p><p>
-11. Amongst computer peripherals which one doesn't need H/W driver? => None of the above <br>
+11. Amongst computer peripherals which one doesn't need H/W driver? <br><b>Ans... </b> None of the above <br>
 { 1) Printer 2) Mouse 3) Scanner 4) None of the above }
 </p><p>
-12. The function key ________ open help window in windows OS => F1
+12. The function key ________ open help window in windows OS <br><b>Ans... </b> F1
 </p><p>
 13. Which of the following Windows 7 features helps in connecting offices
-network computer even if the computer does not have internet connection => Internet connection sharing
+network computer even if the computer does not have internet connection <br><b>Ans... </b> Internet connection sharing
 </p><p>
-14. Which is not Microsoft windows job => Uninterrupted Power Management
+14. Which is not Microsoft windows job <br><b>Ans... </b> Uninterrupted Power Management
 </p><p>
-15. Full form of OEM is => Original Equipment Manufacturer
+15. Full form of OEM is <br><b>Ans... </b> Original Equipment Manufacturer
 </p><p>
-16. When we click on start button of Windows 7 the => Start Menu appear
+16. When we click on start button of Windows 7 the <br><b>Ans... </b> Start Menu appear
 </p><p>
-17. Which Windows7 start menu allow us to run any program just by typing its name and location => Run
+17. Which Windows7 start menu allow us to run any program just by typing its name and location <br><b>Ans... </b> Run
 </p><p>
-18. Run box allow you to run an program by typing name and location of a program
+18. ________ allow you to run an program by typing name and location of a program <br><b>Ans... </b> Run box
 </p><p>
-19. To open Calculator from windows run box you type => Calc
+19. To open Calculator from windows run box you type <br><b>Ans... </b> Calc
 </p><p>
-20. If we want to run a specific Program every time our Windows based PC startup we can use => Task Scheduler Utility
+20. If we want to run a specific Program every time our Windows based PC startup we can use <br><b>Ans... </b> Task Scheduler Utility
 </p><p>
-21. Calculator provided in windows can operate in two option namely => Standard and Scientific
+21. Calculator provided in windows can operate in two option namely <br><b>Ans... </b> Standard and Scientific
 </p><p>
-22. A notepad is useful for => Editing textual data
+22. A notepad is useful for <br><b>Ans... </b> Editing textual data
 </p><p>
-23. To prepare our computer to be used by someone else for logging in we use => Log off
+23. To prepare our computer to be used by someone else for logging in we use <br><b>Ans... </b> Log off
 </p><p>
-24. When a computer is first turned on or restarted, a special type of absolute loader called ________ is executed => bootstrap loader
+24. When a computer is first turned on or restarted, a special type of absolute loader called ________ is executed <br><b>Ans... </b> bootstrap loader
 </p><p>
-25. When a computer is turned on, it conducts a series of self-diagnostic test called => Power on self test
+25. When a computer is turned on, it conducts a series of self-diagnostic test called <br><b>Ans... </b> Power on self test
 </p><p>
-26. Paging is a function of memory management where a computer will store and retrieve data from a device's secondary storage to the primary storage.
+26. ________ is a function of memory management where a computer will store and retrieve data from a device's secondary storage to the primary storage <br><b>Ans... </b> Paging
 </p>
 
                       </div>
@@ -537,10 +538,7 @@ network computer even if the computer does not have internet connection => Inter
               
               </div>
               
-           <hr>
-            
- 
-            
+       
             </div>
             
             </div>
