--- a/views/dca102onlineclasschapter7.ejs
+++ b/views/dca102onlineclasschapter7.ejs
@@ -216,35 +216,36 @@ A shortcut is a pointer to an object, and not the object itself.</p>
 1.	Right-click the shortcut and then choose Delete.<br>
 2.	You can press the Delete key on your keyboard or choose delete from Edit menu.<br>
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Shortcut icon are the icon with =>  Small arrow in the lower left corner
+1. Shortcut icon are the icon with <br><b>Ans... </b>  Small arrow in the lower left corner
 </p><p>
-2. There are 2 type of icon in the desktop they are => System Icon and shortcut icon
+2. There are 2 type of icon in the desktop they are <br><b>Ans... </b> System Icon and shortcut icon
 </p><p>
-3. The shortcut icon once created can be renamed in this way => Both a & b <br>
+3. The shortcut icon once created can be renamed in this way <br><b>Ans... </b> Both a & b <br>
 { a) Right click, click rename, type new name b) Click two times, name is highlight, type new name c) Only B d) Both a & b
 </p><p>
-4. The shortcut has extension => None
+4. The shortcut has extension <br><b>Ans... </b> None
 </p><p>
-5. A shortcut in Windows 7 can be created by using the create shortcut wizard or by using => Copy and paste
+5. A shortcut in Windows 7 can be created by using the create shortcut wizard or by using <br><b>Ans... </b> Copy and paste
 </p><p>
-6. The first step to create a shortcut using Shortcut Wizard is => Right Click on a file
+6. The first step to create a shortcut using Shortcut Wizard is <br><b>Ans... </b> Right Click on a file
 </p><p>
-7. Shortcut icon contains an ________ mark => arrow
+7. Shortcut icon contains an ________ mark <br><b>Ans... </b> arrow
 </p><p>
-8. Which of the following statement is true in respect to shortcut => All of the above statement is true <br>
+8. Which of the following statement is true in respect to shortcut <br><b>Ans... </b> All of the above statement is true <br>
  { a) A shortcut is a small file which link to Document 
 b) A shortcut is a small file which link to Program <br>
 c) A shortcut is a small file which link to Folder 
 d) All of the above statement is true }
 </p><p>
-9. The correct step to delete a shortcut is => Select the icon and press delete
+9. The correct step to delete a shortcut is <br><b>Ans... </b> Select the icon and press delete
 </p><p>
-10. In windows 7 system a shortcut icon has an arrow in the => Lower left corner of Icon
+10. In windows 7 system a shortcut icon has an arrow in the <br><b>Ans... </b> Lower left corner of Icon
 </p><p>
-11. A shortcut can be located => All of the above <br>
+11. A shortcut can be located <br><b>Ans... </b> All of the above <br>
  { a) In Desktop only c) In the Taskbar b) Anywhere on local disk d) All of the above }
 </p>
 
@@ -410,10 +411,7 @@ d) All of the above statement is true }
               
               </div>
               
-           <hr>
-            
- 
-            
+   
             </div>
             
             </div>
