--- a/views/dca102onlineclasschapter8.ejs
+++ b/views/dca102onlineclasschapter8.ejs
@@ -262,61 +262,62 @@ option that appears on either the left side or top of the window. </p>
 <p><code>
 Entertainment:</code> The entertainment tools, such as Sound Recorder, volume Control, Windows Media Player, etc., allow you to play audio, video, or animation files and to control the settings for multimedia hardware devices.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Calculator provided in windows can operate in two option namely =>  Standard and Scientific <br>
+1. Calculator provided in windows can operate in two option namely <br><b>Ans... </b>  Standard and Scientific <br>
 Note: <em>Hei hi Windows XP zir hun laia question a ni maithei a. Windows 7 ah chuan calculator-ah hian programmer leh statistics pawh a tel tawh a ni. </em>
 </p><p>
-2. To Open Calculator: Click Start button, Choose all programs, high
+2. To Open Calculator <br><b>Ans... </b> Click Start button, Choose all programs, high
 light Accessories and then choose calculator.
 </p><p>
-3. To open Calculator from windows run box you type => Calc
+3. To open Calculator from windows run box you type <br><b>Ans... </b> Calc
 </p><p>
 4. To use Calculator in Windows 7 we click Start button, choose all
-programs and then we highlight => Accessories
+programs and then we highlight <br><b>Ans... </b> Accessories
 </p><p>
-5. Notepad can open file with extension => .txt
+5. Notepad can open file with extension <br><b>Ans... </b> .txt
 </p><p>
-6. Utility Software package in Windows7 includes => Notepad
+6. Utility Software package in Windows7 includes <br><b>Ans... </b> Notepad
 </p><p>
-7. A notepad is useful for => Editing textual data
+7. A notepad is useful for <br><b>Ans... </b> Editing textual data
 </p><p>
-8. The default software package to draw picture in Windows 7 is => Paint
+8. The default software package to draw picture in Windows 7 is <br><b>Ans... </b> Paint
 </p><p>
-9. Word processor that comes with window OS is => Wordpad
+9. Word processor that comes with window OS is <br><b>Ans... </b> Wordpad
 </p><p>
-10. Image processor that comes with windows operating system is => MS Paint
+10. Image processor that comes with windows operating system is <br><b>Ans... </b> MS Paint
 </p><p>
-11. The default software package to draw picture in Windows 7 is => Paint
+11. The default software package to draw picture in Windows 7 is <br><b>Ans... </b> Paint
 </p><p>
-12. Word Processor that comes with windows Operating System is => Wordpad
+12. Word Processor that comes with windows Operating System is <br><b>Ans... </b> Wordpad
 </p><p>
-13. To enhance efficiency of a computer system and gain access of file and folder we use => Disk Defragment Tools
+13. To enhance efficiency of a computer system and gain access of file and folder we use <br><b>Ans... </b> Disk Defragment Tools
 </p><p>
-14. ________ consolidates fragmented files and folders on your computer's hard disk => Disk Defragmenter
+14. ________ consolidates fragmented files and folders on your computer's hard disk <br><b>Ans... </b> Disk Defragmenter
 </p><p>
-15. PPTP stands for => Point to Point Tunneling Protocol
+15. PPTP stands for <br><b>Ans... </b> Point to Point Tunneling Protocol
 </p><p>
-16. Which key combination close an active window? => Alt + F4
+16. Which key combination close an active window? <br><b>Ans... </b> Alt + F4
 </p><p>
-17. To speed up and gain efficiency of a hard disk access time we use => Disk Defragment tools
+17. To speed up and gain efficiency of a hard disk access time we use <br><b>Ans... </b> Disk Defragment tools
 </p><p>
-18. Control panel allows you to => Install software & Change different setting
+18. Control panel allows you to <br><b>Ans... </b> Install software & Change different setting
 </p><p>
-19. Essential windows tool are located in => Accessories
+19. Essential windows tool are located in <br><b>Ans... </b> Accessories
 </p><p>
-20. Control panel in Windows 7 include setting of => Date & Time, Password, Sound etc.
+20. Control panel in Windows 7 include setting of <br><b>Ans... </b> Date & Time, Password, Sound etc.
 </p><p>
-21. Which start menu allow us to change date and time => Control Panel
+21. Which start menu allow us to change date and time <br><b>Ans... </b> Control Panel
 </p><p>
-22. Intra-System communication occurs => Within a single computer
+22. Intra-System communication occurs <br><b>Ans... </b> Within a single computer
 </p><p>
-23. MMX stands for => Multimedia Extension
+23. MMX stands for <br><b>Ans... </b> Multimedia Extension
 </p><p>
-24. In process scheduling stack is also known as => FIFO
+24. In process scheduling stack is also known as <br><b>Ans... </b> FIFO
 </p><p>
-25. AGP stands for => Accelerated Graphic Port
+25. AGP stands for <br><b>Ans... </b> Accelerated Graphic Port
 </p>
 
                       </div>
@@ -493,10 +494,7 @@ programs and then we highlight => Accessories
               
               </div>
               
-           <hr>
-            
- 
-            
+         
             </div>
             
             </div>
