--- a/views/dca102onlineclasschapter9.ejs
+++ b/views/dca102onlineclasschapter9.ejs
@@ -358,53 +358,53 @@ The most common MS-DOS internal command is listed below:-
   </tbody>
   
 </table>                
-             
                         </p>
+                        <hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. What is the command to create a new directory in MSDOS => MD
+1. What is the command to create a new directory in MSDOS <br><b>Ans... </b> MD
 </p><p>
-2. COMMAND.COM is the default command-line interpreter for MS-DOS, Windows 95-98, Windows 98SE and Windows Me.
+2. ________ is the default command-line interpreter for MS-DOS, Windows 95-98, Windows 98SE and Windows ME <br><b>Ans... </b> COMMAND.COM
 </p><p>
-3. The command RD or Rmdir => Remove the directory
+3. The command RD or Rmdir <br><b>Ans... </b> Remove the directory
 </p><p>
-4. DOS command divided into ________ commands  => 2
+4. DOS command divided into ________ commands  <br><b>Ans... </b> 2
 </p><p>
-5. ________ is one of the main parts of DOS => Command.com
+5. ________ is one of the main parts of DOS <br><b>Ans... </b> Command.com
 </p><p>
-6. The command tree displays => The directories in the form of Tree
+6. The command tree displays <br><b>Ans... </b> The directories in the form of Tree
 </p><p>
-7. DOS Command 'date' shows => Date only
+7. DOS Command 'date' shows <br><b>Ans... </b> Date only
 </p><p>
-8. DOS command format for COPY is => copy [source][destination]
+8. DOS command format for COPY is <br><b>Ans... </b> copy [source][destination]
 </p><p>
-9. What is the command to erase a file from a disk? => del
+9. What is the command to erase a file from a disk? <br><b>Ans... </b> del
 </p><p>
-10. To search a file, which command is use in MS DOS? => DIR /S
+10. To search a file, which command is use in MS DOS? <br><b>Ans... </b> DIR /S
 </p><p>
-11. What command is use to list directory in page wise? => DIR /P
+11. What command is use to list directory in page wise? <br><b>Ans... </b> DIR /P
 </p><p>
-12. In DOS, listing of file hierarchically is done using which of the commands => TREE
+12. In DOS, listing of file hierarchically is done using which of the commands <br><b>Ans... </b> TREE
 </p><p>
-13. DIR, COPY, MD, CD, CLS, TIME are => Internal command
+13. DIR, COPY, MD, CD, CLS, TIME are <br><b>Ans... </b> Internal command
 </p><p>
-14. - s Command is use to => Turn off the system attribute
+14. -S Command is use to <br><b>Ans... </b> Turn off the system attribute
 </p><p>
-15. A '?' Wild-card character represents => Any character with special symbol
+15. A '?' Wild-card character represents <br><b>Ans... </b> Any character with special symbol
 </p><p>
-16. Which one from the list is an external command of DOS? => mem <br>
+16. Which one from the list is an external command of DOS? <br><b>Ans... </b> mem <br>
 { 1) Del 2) Date 3) Mem 4) type }
 </p><p>
-17. DOS command to change active drive i.e from Drive C to Drive A we use => C:\>A:
+17. DOS command to change active drive i.e from Drive C to Drive A we use <br><b>Ans... </b> C:\>A:
 </p><p>
-18. The DOS command C:\> indicate the user is => Currently working on sub folder of drive c drive
+18. The DOS command C:\> indicate the user is <br><b>Ans... </b> Currently working on sub folder of C drive
 </p><p>
-19. When Booting an MS-DOS a program which is used to load the OS is stored in => ROM-BIOS
+19. When Booting an MS-DOS a program which is used to load the OS is stored in <br><b>Ans... </b> ROM-BIOS
 </p><p>
-20. Example of character user interface is MSDOS
+20. Example of character user interface is <br><b>Ans... </b> MS-DOS
 </p><p>
-21. DOS file system always begin with a directory called as => Root
+21. DOS file system always begin with a directory called as <br><b>Ans... </b> Root
 </p>
                         
                         
@@ -585,10 +585,7 @@ The most common MS-DOS internal command is listed below:-
               
               </div>
               
-           <hr>
-            
- 
-            
+       
             </div>
             
             </div>
