--- a/views/dca103onlineclasschapter10.ejs
+++ b/views/dca103onlineclasschapter10.ejs
@@ -222,24 +222,24 @@ worksheet, exiting Excel) (1 MARK)
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Spreadsheet is also known as => MS Excel
+1. Spreadsheet is also known as <br><b>Ans... </b> MS Excel
 </p><p>
-2. A collection of worksheets is called ________ => Workbook
+2. A collection of worksheets is called ________ <br><b>Ans... </b> Workbook
 </p><p>
-3. Excel comprises a total of 16,384 columns and 1,048,576 rows.
+3. Excel comprises a total of ________  and ________ <br><b>Ans... </b> 16,384 columns and 1,048,576 rows
 </p><p>
-4. The cell on which you click is the ________ => Active cell
+4. The cell on which you click is the ________ <br><b>Ans... </b> Active cell
 </p><p>
-5. In a worksheet, text is left aligned in a cell whereas numeric data is right aligned.
+5. In a worksheet, text is ________ aligned in a cell whereas numeric data is right aligned <br><b>Ans... </b> left
 </p><p>
-6. To save your work, press ________ => Ctrl + S
+6. To save your work, press ________ <br><b>Ans... </b> Ctrl + S
 </p><p>
 7. To change the file name and or location of the file of saved filed
-after editing we use => Save as
+after editing we use <br><b>Ans... </b> Save as
 </p><p>
-8. F12 is used to open ________ dialogue box => Save as
+8. F12 is used to open ________ dialogue box <br><b>Ans... </b> Save as
 </p><p>
-9. In which pull down menu 'Close' command is present? => File <br>
+9. In which pull down menu 'Close' command is present? <br><b>Ans... </b> File <br>
 <em>Note: Msword 2007 version-ah chuan file menu hi a awm lo va, Office button tiin an thlak.</em>
 </p>
              
@@ -404,10 +404,7 @@ after editing we use => Save as
               
               </div>
               
-           <hr>
-            
- 
-            
+    
             </div>
             
             </div>
