--- a/views/dca103onlineclasschapter11.ejs
+++ b/views/dca103onlineclasschapter11.ejs
@@ -193,36 +193,36 @@ calculations using formula, concept of worksheets and workbook) (2 MARKS)
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Ctrl + O is used to _________ existing file => Open
+1. Ctrl + O is used to _________ existing file <br><b>Ans... </b> Open
 </p><p>
-2. Open shortcut key is => Ctrl + O
+2. Open shortcut key is <br><b>Ans... </b> Ctrl + O
 </p><p>
-3. Ctrl+N open new blank document in: => All of the above <br>
+3. Ctrl+N open new blank document in: <br><b>Ans... </b> All of the above <br>
 { a. MS excel c. MS power point b. MS word d. All of the above }
 </p><p>
-4. Ctrl+N open new document/slide/sheet.
+4. ________ open new document/slide/sheet <br><b>Ans... </b> Ctrl+N
 </p><p>
-5. F12 is used to open ________ dialogue box => Save as
+5. F12 is used to open ________ dialogue box <br><b>Ans... </b> Save as
 </p><p>
-6. Excel recognizes and entry as formula if it is preceded by a ________ =>  + or =
+6. Excel recognizes and entry as formula if it is preceded by a ________ <br><b>Ans... </b>  + or =
 </p><p>
-7. Formulae must be preceded by => =
+7. Formulae must be preceded by <br><b>Ans... </b> =
 </p><p>
-8. Name this sign <img src="/img/insertFormulaButton.jpg"> => Insert Function
+8. Name this sign <img src="/img/insertFormulaButton.jpg"> <br><b>Ans... </b> Insert Function
 </p><p>
-9. Formulae must be preceded by ________ sign in excel => =
+9. Formulae must be preceded by ________ sign in excel <br><b>Ans... </b> =
 </p><p>
-10. A collection of worksheets is called => Workbook
+10. A collection of worksheets is called <br><b>Ans... </b> Workbook
 </p><p>
-11. Text excel spread sheet is ________ by default => left aligned
+11. Text excel spread sheet is ________ by default <br><b>Ans... </b> left aligned
 </p><p>
-12. <img src="/img/orientationExcel.jpg"> represent => Orientation (or Text orientation)
+12. <img src="/img/orientationExcel.jpg"> represent <br><b>Ans... </b> Orientation (or Text orientation)
 </p><p>
-13. A series if number can easily be added up using => Autosum
+13. A series if number can easily be added up using <br><b>Ans... </b> Autosum
 </p><p>
-14. Which formula joins several text strings into one text string => Concatenate
+14. Which formula joins several text strings into one text string <br><b>Ans... </b> Concatenate
 </p><p>
-15. Moving sheet to another sheet location is done using ________ key => Alt + Mouse drag <br>
+15. Moving sheet to another sheet location is done using ________ key <br><b>Ans... </b> Alt + Mouse drag <br>
 Note: <em>Sheet dangah i thil chhut i move duh chuan mouse hmanga i pawh tawlh laiin ALT key i hmehbeh a ngai tihna a ni. </em>
 </p>
 
@@ -395,10 +395,6 @@ Note: <em>Sheet dangah i thil chhut i move duh chuan mouse hmanga i pawh tawlh l
               
               </div>
               
-           <hr>
-            
- 
-            
             </div>
             
             </div>
