--- a/views/dca103onlineclasschapter12.ejs
+++ b/views/dca103onlineclasschapter12.ejs
@@ -182,32 +182,33 @@ referencing) (2 MARKS)
 
 7.	<code>E$4</code> is an example of column relative, row absolute.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Absolute referencing is => $E$1
+1. Absolute referencing is <br><b>Ans... </b> $E$1
 </p><p>
-2. Reference that change automatically when you copy them to a new cell are called ________ => Relative Reference
+2. Reference that change automatically when you copy them to a new cell are called ________ <br><b>Ans... </b> Relative Reference
 </p><p>
-3. Which one of this is an example of 'Absolute referencing' => $E$1 <br>
+3. Which one of this is an example of 'Absolute referencing' <br><b>Ans... </b> $E$1 <br>
 { a. E$1 c. $E1 b. $E$1 d. Both a & c }
 </p><p>
-4. MS Excel use relative reference => True
+4. MS Excel use relative reference <br><b>Ans... </b> True
 </p><p>
-5. Excel follows relative reference => True
+5. Excel follows relative reference <br><b>Ans... </b> True
 </p><p>
-6. By default all references in MS Excel are ________ reference => Relative
+6. By default all references in MS Excel are ________ reference <br><b>Ans... </b> Relative
 </p><p>
-7. When you link data maintained in a excel workbook to a word document => 
+7. When you link data maintained in a excel workbook to a word document <br><b>Ans... </b> 
 The word document contains a reference to the original source application
 </p><p>
-8. By default, excel provides 3 worksheets. You need only two of them, how will you delete the third one? => Right click
+8. By default, excel provides 3 worksheets. You need only two of them, how will you delete the third one? <br><b>Ans... </b> Right click
 on sheet tab of the third sheet and choose delete from the context menu.
 </p><p>
-9. Which of the following is not a valid data type in excel => Label <br>
+9. Which of the following is not a valid data type in excel <br><b>Ans... </b> Label <br>
 a) Character b) Date/time c) Number d) Label
 </p><p>
-10. The cell reference for cell range of G2 to M12 is => G2:M12
+10. The cell reference for cell range of G2 to M12 is <br><b>Ans... </b> G2:M12
 </p>
 
              
@@ -379,10 +380,7 @@ a) Character b) Date/time c) Number d) Label
               
               </div>
               
-           <hr>
-            
- 
-            
+      
             </div>
             
             </div>
