--- a/views/dca103onlineclasschapter13.ejs
+++ b/views/dca103onlineclasschapter13.ejs
@@ -225,47 +225,47 @@ shortcut menu.
 <hr>
 <p>
   <b>OLD QUESTION:</b><br>
-1. In MS Excel F2 function key is use to => Edit cell value
+1. In MS Excel F2 function key is use to <br><b>Ans... </b> Edit cell value
 </p><p>
-2. A4 size paper dimension is => 8.27" X 11.69"
+2. A4 size paper dimension is <br><b>Ans... </b> 8.27" X 11.69"
 </p><p>
-3. Function key for editing cell to alter its content we press => F2
+3. Function key for editing cell to alter its content we press <br><b>Ans... </b> F2
 </p><p>
-4. To edit cell value, ________ is the key that similarly functions as the mouse double click => F2
+4. To edit cell value, ________ is the key that similarly functions as the mouse double click <br><b>Ans... </b> F2
 </p><p>
-5. <img src="/img/deleteExcel.jpg"> represents => All of the above <br>
+5. <img src="/img/deleteExcel.jpg"> represents <br><b>Ans... </b> All of the above <br>
 { 1) Delete sheet rows 2) Delete sheet Columns 3) Delete sheet 4) All of the above }
 </p><p>
-6. Underlined letter in the menu bar is activated by which key? => F10
+6. Underlined letter in the menu bar is activated by which key? <br><b>Ans... </b> F10
 </p><p>
-7. Print shortcut key is => Ctrl + P
+7. Print shortcut key is <br><b>Ans... </b> Ctrl + P
 </p><p>
-8. In MS Excel, when enter key is press, the cursor moves => Downward
+8. In MS Excel, when enter key is press, the cursor moves <br><b>Ans... </b> Downward
 </p><p>
-9. MS Excel 2007 file extension is => xlsx
+9. MS Excel 2007 file extension is <br><b>Ans... </b> xlsx
 </p><p>
-10. A ghosted text behind the content of the page is called => watermark
+10. A ghosted text behind the content of the page is called <br><b>Ans... </b> watermark
 </p><p>
-11. Shift+F3 (Change case) do not function in MS Excel.
+11. Shift+F3 (Change case) do not function in MS Excel <br><b>Ans... </b> True
 </p><p>
-12. Summation of values possible in MS Excel from => All of the above <br>
+12. Summation of values possible in MS Excel from <br><b>Ans... </b> All of the above <br>
 { 1) Different cell value 3) Values from column 2) Values from row 4) All of the above }
 </p><p>
-13. To replace cell in MS Excel, we use => Ctrl + H
+13. To replace cell in MS Excel, we use <br><b>Ans... </b> Ctrl + H
 </p><p>
-14. For tabulation and for calculation => MS Excel is more useful than MS Word
+14. For tabulation and for calculation <br><b>Ans... </b> MS Excel is more useful than MS Word
 </p><p>
-15. In excel sheet addition/ summation is done using ________ expression => All of the above <br>
+15. In excel sheet addition/ summation is done using ________ expression <br><b>Ans... </b> All of the above <br>
 { a) =A1+A2+A3+A4 c) +A1+A2+A3+A4 b) =Sum(A1:A4) d) All of the above }
 </p><p>
-16. To keep a portion of the sheet visible while the rest of the sheet scrolls is => Freeze
+16. To keep a portion of the sheet visible while the rest of the sheet scrolls is <br><b>Ans... </b> Freeze
 </p><p>
-17. What will be the output if you format the cell containing 5436.8 as '#,##0.00'? => 5,436.80
+17. What will be the output if you format the cell containing 5436.8 as '#,##0.00'? <br><b>Ans... </b> 5,436.80
 </p><p>
-18. How should you print a selected area of a worksheet, if you'll want to print a different area next time? =>
+18. How should you print a selected area of a worksheet, if you'll want to print a different area next time? <br><b>Ans... </b>
 On the office button, click print, and then click selection under print what.
 </p><p>
-19. The default header for a worksheet is => No default header
+19. The default header for a worksheet is <br><b>Ans... </b> No default header
 </p>
                       </div>
                   
@@ -443,10 +443,7 @@ On the office button, click print, and then click selection under print what.
               
               </div>
               
-           <hr>
-            
- 
-            
+         
             </div>
             
             </div>
