--- a/views/dca103onlineclasschapter16.ejs
+++ b/views/dca103onlineclasschapter16.ejs
@@ -215,31 +215,31 @@ charts, Updating charts, changing the chart type, previewing and printing charts
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. A ________ is a visual representation of numeric data => Chart
+1. A ________ is a visual representation of numeric data <br><b>Ans... </b> Chart
 </p><p>
-2. Name this sign <img src="/img/pieChart.jpg"> => Pie Chart
+2. Name this sign <img src="/img/pieChart.jpg"> <br><b>Ans... </b> Pie Chart
 </p><p>
-3. MS Excel chart sheet is also use in => Ms word and Ms powerpoint
+3. MS Excel chart sheet is also use in <br><b>Ans... </b> Ms word and Ms powerpoint
 </p><p>
-4. Name this sign <img src="/img/columnChart.jpg"> => Column Chart
+4. Name this sign <img src="/img/columnChart.jpg"> <br><b>Ans... </b> Column Chart
 </p><p>
-5. Name this sign <img src="/img/increaseAndDecreaseDecimal.jpg"> => Increase and Decrease Decimal
+5. Name this sign <img src="/img/increaseAndDecreaseDecimal.jpg"> <br><b>Ans... </b> Increase and Decrease Decimal
 </p><p>
-6. Pie chart is one of many pictorial representation of => numeric data
+6. Pie chart is one of many pictorial representation of <br><b>Ans... </b> numeric data
 </p><p>
-7. You can change a chart type to any other type and embed that into your workbook => True
+7. You can change a chart type to any other type and embed that into your workbook <br><b>Ans... </b> True
 </p><p>
-8. Circular representation of graph in MS Office is called => Pie Chart
+8. Circular representation of graph in MS Office is called <br><b>Ans... </b> Pie Chart
 </p><p>
-9. ________ are limited to one data series => Pie Chart
+9. ________ are limited to one data series <br><b>Ans... </b> Pie Chart
 </p><p>
-10. Identify this column chart <img src="/img/stackedChart.jpg"> => Stacked
+10. Identify this column chart <img src="/img/stackedChart.jpg"> <br><b>Ans... </b> Stacked
 </p><p>
-11. When the selection is one with multiple rows/columns it is called => Data series
+11. When the selection is one with multiple rows/columns it is called <br><b>Ans... </b> Data series
 </p><p>
-12. Multiple drawing objects are ________ to form one object => Group
+12. Multiple drawing objects are ________ to form one object <br><b>Ans... </b> Group
 </p><p>
-13. Underlined letter in the menu bar is activated by ________ key => Alt or F10
+13. Underlined letter in the menu bar is activated by ________ key <br><b>Ans... </b> Alt or F10
 </p>
 
              
@@ -411,10 +411,7 @@ charts, Updating charts, changing the chart type, previewing and printing charts
               
               </div>
               
-           <hr>
-            
- 
-            
+        
             </div>
             
             </div>
