--- a/views/dca103onlineclasschapter17.ejs
+++ b/views/dca103onlineclasschapter17.ejs
@@ -197,38 +197,38 @@ Different types of slide layouts, Getting started, Creating a presentation) (3 M
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. ________ is the extension for Powerpoint presentation => pptx
+1. ________ is the extension for Powerpoint presentation <br><b>Ans... </b> pptx
 </p><p>
-2. PowerPoint offer ________ different types of slide layouts called Auto Layouts => 24
+2. PowerPoint offer ________ different types of slide layouts called Auto Layouts <br><b>Ans... </b> 24
 
 </p><p>
-3. Microsoft Powerpoint is => Presentation Program
+3. Microsoft Powerpoint is <br><b>Ans... </b> Presentation Program
 </p><p>
-4. Microsoft word is => Word processor
+4. Microsoft word is <br><b>Ans... </b> Word processor
 </p><p>
-5. Powerpoint presentation is not equippes with Autosum command => True
+5. Powerpoint presentation is not equippes with Autosum command <br><b>Ans... </b> True
 </p><p>
 6. Powerpoint presentation uses different Clipart which the word
-and Excel does not have => False
+and Excel does not have <br><b>Ans... </b> False
 </p><p>
 7. To make a table in MS Powerpoint Presentation Row is more
-important than that of column => False
+important than that of column <br><b>Ans... </b> False
 </p><p>
 8. To draw a chart in MS Powerpoint Presentation MS Excel
-worksheet is link => True
+worksheet is link <br><b>Ans... </b> True
 </p><p>
-9. Print what: combo box is present in _______ print dialog box => All of the above <br>
+9. Print what: combo box is present in _______ print dialog box <br><b>Ans... </b> All of the above <br>
 { a. MS Word c. Ms PowerPoint b. Ms Excel d. All of the above }
 </p><p>
-10. To make a table in MS PowerPoint Presentation => Row and Column have equal importance
+10. To make a table in MS PowerPoint Presentation <br><b>Ans... </b> Row and Column have equal importance
 </p><p>
-11. <img src="/img/arrangePowerpoint.jpg"> represents => Arrange
+11. <img src="/img/arrangePowerpoint.jpg"> represents <br><b>Ans... </b> Arrange
 </p><p>
-12. To insert new slide; which of the following key is used? => Ctrl+M
+12. To insert new slide; which of the following key is used? <br><b>Ans... </b> Ctrl+M
 </p><p>
-13. <img src="/img/newSlide.jpg"> represents => New Slide
+13. <img src="/img/newSlide.jpg"> represents <br><b>Ans... </b> New Slide
 </p><p>
-14. Ctrl+M in power point open new slide => True
+14. Ctrl+M in power point open new slide <br><b>Ans... </b> True
 </p>
 
              
@@ -401,10 +401,7 @@ worksheet is link => True
               
               </div>
               
-           <hr>
-            
- 
-            
+          
             </div>
             
             </div>
