--- a/views/dca103onlineclasschapter18.ejs
+++ b/views/dca103onlineclasschapter18.ejs
@@ -193,40 +193,40 @@ Normal view further gives the options of Slide and Outline views.
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Which one allows you to work on individual slides => Slide view
+1. Which one allows you to work on individual slides <br><b>Ans... </b> Slide view
 </p><p>
-2. ________ is a miniature view of slides => Slide sorter
+2. ________ is a miniature view of slides <br><b>Ans... </b> Slide sorter
 </p><p>
-3. <img src="/img/slideSorter.jpg"> represents => Slide sorter view
+3. <img src="/img/slideSorter.jpg"> represents <br><b>Ans... </b> Slide sorter view
 </p><p>
 4. ________ allows you to organize the order and status of the slides in
-your presentation => Slide sorter view
+your presentation <br><b>Ans... </b> Slide sorter view
 </p><p>
-5. The header and footer tools is activated via the => View menu <em>(2007 version-ah chuan Insert Tab tih chu a chhanna dik a ni.)</em>
+5. The header and footer tools is activated via the <br><b>Ans... </b> View menu <em>(2007 version-ah chuan Insert Tab tih chu a chhanna dik a ni.)</em>
 </p><p>
-6. Status bar is a bar at the ________ of the screen => Bottom
+6. Status bar is a bar at the ________ of the screen <br><b>Ans... </b> Bottom
 </p><p>
-7. Status bar shows the page number on which you are working at => True
+7. Status bar shows the page number on which you are working at <br><b>Ans... </b> True
 </p><p>
-8. Slide show is activated by ________ key => F5
+8. Slide show is activated by ________ key <br><b>Ans... </b> F5
 </p><p>
-9. In PowerPoint presentation F5 is used to => Slide show
+9. In PowerPoint presentation F5 is used to <br><b>Ans... </b> Slide show
 </p><p>
-10. Shortcut key for Spelling and Grammar is => F7
+10. Shortcut key for Spelling and Grammar is <br><b>Ans... </b> F7
 </p><p>
-11. Which key change the text cases? => Shift + F3
+11. Which key change the text cases? <br><b>Ans... </b> Shift + F3
 </p><p>
-12. Shift+F5 slide show the presentation => True
+12. Shift+F5 slide show the presentation <br><b>Ans... </b> True
 </p><p>
-13. To slide show the presentation, which key is use? => F5
+13. To slide show the presentation, which key is use? <br><b>Ans... </b> F5
 </p><p>
-14. <img src="/img/slideShowFromBeginning.jpg"> represents => Start slide show from the beginning
+14. <img src="/img/slideShowFromBeginning.jpg"> represents <br><b>Ans... </b> Start slide show from the beginning
 </p><p>
-15. ________ is used to end slide show => Esc
+15. ________ is used to end slide show <br><b>Ans... </b> Esc
 </p><p>
-18. What is Custom shows in powerpoint? => Creating Presentations within a Presentation
+16. What is Custom shows in powerpoint? <br><b>Ans... </b> Creating Presentations within a Presentation
 </p><p>
-19. To select one hyperlink after another during a slide presentation, what do you press? => Tab
+17. To select one hyperlink after another during a slide presentation, what do you press? <br><b>Ans... </b> Tab
 </p>
 
              
@@ -398,10 +398,7 @@ your presentation => Slide sorter view
               
               </div>
               
-           <hr>
-            
- 
-            
+         
             </div>
             
             </div>
