--- a/views/dca103onlineclasschapter19.ejs
+++ b/views/dca103onlineclasschapter19.ejs
@@ -192,18 +192,17 @@ option available under the Background group in the Design tab.
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Print what: combo box is present in ________ print dialog box => Powerpoint
+1. Print what: combo box is present in ________ print dialog box <br><b>Ans... </b> Powerpoint
 </p><p>
-2. Print shortcut key is => Ctrl + P
+2. Print shortcut key is <br><b>Ans... </b> Ctrl + P
 </p><p>
-3. <img src="/img/slideOrientation.jpg"> represent => Slide Orientation
+3. <img src="/img/slideOrientation.jpg"> represent <br><b>Ans... </b> Slide Orientation
 </p><p>
-4. <img src="/img/slideReset.jpg"> represent => Slide reset
+4. <img src="/img/slideReset.jpg"> represent <br><b>Ans... </b> Slide reset
 </p><p>
-5. Which of the following should you use if you want all the slides in the presentation to have the same look?
-=> A presentation design template
+5. Which of the following should you use if you want all the slides in the presentation to have the same look? <br><b>Ans... </b> A presentation design template
 </p><p>
-6. What is the best way to create another copy of slide? => From New Slide button, choose duplicate selected slide.
+6. What is the best way to create another copy of slide? <br><b>Ans... </b> From New Slide button, choose duplicate selected slide.
 </p>
 
              
@@ -381,10 +380,7 @@ option available under the Background group in the Design tab.
               
               </div>
               
-           <hr>
-            
- 
-            
+     
             </div>
             
             </div>
