--- a/views/dca103onlineclasschapter2.ejs
+++ b/views/dca103onlineclasschapter2.ejs
@@ -214,57 +214,58 @@ footers and page numbers) (2 MARKS)
 
 16.	<code>Menu path for turning on AutoFormat </code>is: Office button > Word Option > Proofing > AutoCorrect > AutoFormat as You Type.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. ________ refers to the formats that effect the appearance of the individual characters => Text style
+1. ________ refers to the formats that effect the appearance of the individual characters <br><b>Ans... </b> Text style
 </p><p>
-2. Font size are measured in ________ => Points
+2. Font size are measured in ________ <br><b>Ans... </b> Points
 </p><p>
-3. Which of these toolbar allows changing font and their size? => Formatting
+3. Which of these toolbar allows changing font and their size? <br><b>Ans... </b> Formatting
 </p><p>
-4. Which of the following shortcut keys changes the font size? =>  Ctrl + }
+4. Which of the following shortcut keys changes the font size? <br><b>Ans... </b>  Ctrl + }
 </p><p>
-5. Name this sign <img src="/img/characterStyle.jpg"> => Change Styles
+5. Name this sign <img src="/img/characterStyle.jpg"> <br><b>Ans... </b> Change Styles
 </p><p>
-6. Name this sign <img src="/img/sortButton.jpg"> => Sort
+6. Name this sign <img src="/img/sortButton.jpg"> <br><b>Ans... </b> Sort
 </p><p>
-7. Name this  sign <img src="/img/nonPrintingCharacter.jpg"> => Show paragraph marks and other hidden formatting symbols
+7. Name this  sign <img src="/img/nonPrintingCharacter.jpg"> <br><b>Ans... </b> Show paragraph marks and other hidden formatting symbols
 </p><p>
-8. Name this  sign <img src="/img/findButton.jpg"> => Find
+8. Name this  sign <img src="/img/findButton.jpg"> <br><b>Ans... </b> Find
 </p><p>
-9. ________ lets you copy a format applied in one section of a document to other portion of the document => Format painter
+9. ________ lets you copy a format applied in one section of a document to other portion of the document <br><b>Ans... </b> Format painter
 </p><p>
-10. Name this  sign <img src="/img/formatPainter.jpg"> => Format Painter
+10. Name this  sign <img src="/img/formatPainter.jpg"> <br><b>Ans... </b> Format Painter
 </p><p>
 11. To select multiple lines vertically in MS word what key
-combination with mouse is use => Ctrl
+combination with mouse is use <br><b>Ans... </b> Ctrl
 </p><p>
-12. Word has ________ alignment where as excel has three alignment => 4
+12. Word has ________ alignment where as excel has three alignment <br><b>Ans... </b> 4
 </p><p>
-13. Alignment can also be made using ________ => Indentation
+13. Alignment can also be made using ________ <br><b>Ans... </b> Indentation
 </p><p>
-14. Alignment can also be made using ________ => All of the above <br>
+14. Alignment can also be made using ________ <br><b>Ans... </b> All of the above <br>
 { 1) Tab position tools 3) Alignment tools 2) Indentation 4) All of the above }
 </p><p>
-15. Text alignment in word document is of ________ types => 4
+15. Text alignment in word document is of ________ types <br><b>Ans... </b> 4
 </p><p>
-16. Header and Footer appears in which menu _______ => Insert
+16. Header and Footer appears in which menu _______ <br><b>Ans... </b> Insert
 </p><p>
-17. Footer appear at the bottom of ________ page(s) once inserted => All
+17. Footer appear at the bottom of ________ page(s) once inserted <br><b>Ans... </b> All
 </p><p>
-18. Page Number appears on all pages once inserted.
+18. ________ appears on all pages once inserted <br><b>Ans... </b> Page Number 
 </p><p>
-19. The status bar displays the => All of the above <br>
+19. The status bar displays the <br><b>Ans... </b> All of the above <br>
 { a) Current page number c) Live and column number b) Total number of page d) All of the above }
 </p><p>
-20. To undo the last action, Ctrl+Z is use.
+20. To undo the last action, ________ is use <br><b>Ans... </b> Ctrl + Z
 </p><p>
-21. MS office word zoom range is 10 to 500.
+21. MS office word zoom range is <br><b>Ans... </b> 10 to 500.
 </p><p>
-22. In MS Word, Typing '=rand (4,2)' gives ________ => 4 paragraphs and 2 sentences of text
+22. In MS Word, Typing '=rand (4,2)' gives ________ <br><b>Ans... </b> 4 paragraphs and 2 sentences of text
 </p><p>
-23. Page down key => Moves the cursor one screen down
+23. Page down key <br><b>Ans... </b> Moves the cursor one screen down
 </p>
 
              
@@ -442,10 +443,6 @@ combination with mouse is use => Ctrl
               
               </div>
               
-           <hr>
-            
- 
-            
             </div>
             
             </div>
