--- a/views/dca103onlineclasschapter20.ejs
+++ b/views/dca103onlineclasschapter20.ejs
@@ -197,26 +197,26 @@ sound effects, Setting slide timings, Rehearse timings, Grouping and ungrouping 
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Adding special effect to a ppt enhance the ________ of the presentation => Effectiveness
+1. Adding special effect to a ppt enhance the ________ of the presentation <br><b>Ans... </b> Effectiveness
 </p><p>
-2. Transitions that are applied to the element of the slide is also called => Animation
+2. Transitions that are applied to the element of the slide is also called <br><b>Ans... </b> Animation
 </p><p>
-3. Animation is also known as _______ in PowerPoint => Transition
+3. Animation is also known as _______ in PowerPoint <br><b>Ans... </b> Transition
 </p><p>
-4. Animation is also known as => Transition
+4. Animation is also known as <br><b>Ans... </b> Transition
 </p><p>
-5. Animation are _______ that are applied to the elements on a slide => Transitions
+5. Animation are _______ that are applied to the elements on a slide <br><b>Ans... </b> Transitions
 </p><p>
-6. Slide Timing can be set for => All Slides Collectively
+6. Slide Timing can be set for <br><b>Ans... </b> All Slides Collectively
 </p><p>
-7. Slide timing can be set for => One slide and Group of slides
+7. Slide timing can be set for <br><b>Ans... </b> One slide and Group of slides
 </p><p>
-8. <img src="/img/smartArt.jpg"> represents => SmartArt (Radial Cycle under SmartArt Graphics)
+8. <img src="/img/smartArt.jpg"> represents <br><b>Ans... </b> SmartArt (Radial Cycle under SmartArt Graphics)
 </p><p>
 9. Which option in powerpoint allows you to create a package of your presentation for showing to another
-computer? => Pack and Go
+computer? <br><b>Ans... </b> Pack and Go
 </p><p>
-10. In cell C5 you want to display the current date and time, what is the formula? => =NOW()
+10. In cell C5 you want to display the current date and time, what is the formula? <br><b>Ans... </b> =NOW()
 </p>
 
              
@@ -393,10 +393,7 @@ computer? => Pack and Go
               
               </div>
               
-           <hr>
-            
- 
-            
+          
             </div>
             
             </div>
