--- a/views/dca103onlineclasschapter3.ejs
+++ b/views/dca103onlineclasschapter3.ejs
@@ -170,13 +170,14 @@ some character combinations in a certain way, like teh as the, (c) as ©, etc.
 2.	<code>Menu path for turning on AutoCorrect is</code>: 
 Office button → Word Options → Proofing → AutoCorrect → Replace text as You Type.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
 1. ________ has a table of common typing errors, which are
-automatically corrected by word => Auto correct
+automatically corrected by word <br><b>Ans... </b> Auto correct
 </p><p>
-2. Common typing/spelling mistakes in word can be corrected using suggestions => Auto correct
+2. Common typing/spelling mistakes in word can be corrected using suggestions <br><b>Ans... </b> Auto correct
 </p>
 
              
@@ -334,10 +335,7 @@ automatically corrected by word => Auto correct
               
               </div>
               
-           <hr>
-            
- 
-            
+       
             </div>
             
             </div>
