--- a/views/dca103onlineclasschapter4.ejs
+++ b/views/dca103onlineclasschapter4.ejs
@@ -198,42 +198,42 @@ Review tab.
 
 10.	<code>Word Count</code> easily counts the number of words present in a document. Just look at the Status bar. Alternatively, Word Count option is also available on the Proofing group of Review tab.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Shortcut key for Spelling and Grammar is => F7
+1. Shortcut key for Spelling and Grammar is <br><b>Ans... </b> F7
 </p><p>
 2. The ________ dialog box displays the number of pages, characters,
-paragraphs and lines included in the word document => Word count option
+paragraphs and lines included in the word document <br><b>Ans... </b> Word count option
 </p><p>
-3. The grammar checker mostly suggests ways to correct the => All of the above <br>
+3. The grammar checker mostly suggests ways to correct the <br><b>Ans... </b> All of the above <br>
 { a. Paragraph construction c. Words b. Sentence construction d. All of the above }
 </p><p>
-4. Open shortcut key is => Ctrl + O
+4. Open shortcut key is <br><b>Ans... </b> Ctrl + O
 </p><p>
-5. Redo shortcut key is => Ctrl + Y
+5. Redo shortcut key is <br><b>Ans... </b> Ctrl + Y
 </p><p>
-6. There are ________ number of default measurement units in MS Word => 5
+6. There are ________ number of default measurement units in MS Word <br><b>Ans... </b> 5
 </p><p>
-7. What is the term used when you press and hold the left mouse key and move the mouse around the slide?
-=> Dragging
+7. What is the term used when you press and hold the left mouse key and move the mouse around the slide? <br><b>Ans... </b> Dragging
 </p><p>
-8. To move to the end of the document, press the ________ key(s) => Ctrl + End
+8. To move to the end of the document, press the ________ key(s) <br><b>Ans... </b> Ctrl + End
 </p><p>
-9. Ctrl + W => Save and close document
+9. Ctrl + W <br><b>Ans... </b> Save and close document
 </p><p>
-10. A screen element of Msword that is usually located below the title bar that provides categorized options is =>
+10. A screen element of Msword that is usually located below the title bar that provides categorized options is <br><b>Ans... </b>
 Menu bar
 </p><p>
-11. <img src="/img/symbolMsword.jpg"> represent => symbol
+11. <img src="/img/symbolMsword.jpg"> represent <br><b>Ans... </b> symbol
 </p><p>
-12. To insert hyperlink => Ctrl + K or Click Insert tab -> hyperlink
+12. To insert hyperlink <br><b>Ans... </b> Ctrl + K or Click Insert tab -> hyperlink
 </p><p>
-13. To select a group of words, ________ => Drag the mouse pointer through the characters to be selected
+13. To select a group of words, ________ <br><b>Ans... </b> Drag the mouse pointer through the characters to be selected
 </p><p>
-14. What is the use of document map? => To quickly navigate the document
+14. What is the use of document map? <br><b>Ans... </b> To quickly navigate the document
 </p><p>
-15. Changin the appearance of a document is called => Formatting
+15. Changin the appearance of a document is called <br><b>Ans... </b> Formatting
 </p>
 
              
@@ -415,10 +415,7 @@ Menu bar
               
               </div>
               
-           <hr>
-            
- 
-            
+    
             </div>
             
             </div>
