--- a/views/dca103onlineclasschapter5.ejs
+++ b/views/dca103onlineclasschapter5.ejs
@@ -189,20 +189,21 @@ lowercase and uppercase with uppercase automatically.
 
 7.	<code>The Replace option</code> is found under Editing group of the Home tab.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Name this  sign <img src="/img/findButton.jpg"> => Find
+1. Name this  sign <img src="/img/findButton.jpg"> <br><b>Ans... </b> Find
 </p><p>
-2. The shortcut key to display find and replace option is => Ctrl + H
+2. The shortcut key to display find and replace option is <br><b>Ans... </b> Ctrl + H
 </p><p>
-3. To change all occurrence of particular word; The replace all option is used.
+3. To change all occurrence of particular word; The ________ option is used <br><b>Ans... </b> Replace all
 </p><p>
-4. To change all the occurrences of a particular word which option is used? => Replace all
+4. To change all the occurrences of a particular word which option is used? <br><b>Ans... </b> Replace all
 </p><p>
-5. Replace all option change all the occurrence of a particular word.
+5. ________ option change all the occurrence of a particular word <br><b>Ans... </b> Replace all
 </p><p>
-6. Replace command's shortcut key is => Ctrl + H
+6. Replace command's shortcut key is <br><b>Ans... </b> Ctrl + H
 
 </p>
 
@@ -361,10 +362,7 @@ lowercase and uppercase with uppercase automatically.
               
               </div>
               
-           <hr>
-            
- 
-            
+         
             </div>
             
             </div>
