--- a/views/dca103onlineclasschapter6.ejs
+++ b/views/dca103onlineclasschapter6.ejs
@@ -224,34 +224,34 @@ for >, <=> for #, etc.
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Word has ________ predefined bullet types => 6
+1. Word has ________ predefined bullet types <br><b>Ans... </b> 6
 </p><p>
 2. Copying a format applied to one section of a document to
-another portion of the document is => Format painter
+another portion of the document is <br><b>Ans... </b> Format painter
 </p><p>
-3. When you want to copy formatting from one item to another we use =>  Format Painter
+3. When you want to copy formatting from one item to another we use <br><b>Ans... </b>  Format Painter
 </p><p>
-4. Symbols and special characters can retrieve from => Insert
+4. Symbols and special characters can retrieve from <br><b>Ans... </b> Insert
 </p><p>
-5. <img src="/img/subscriptSuperscript.jpg"> represent => subscript and superscript
+5. <img src="/img/subscriptSuperscript.jpg"> represent <br><b>Ans... </b> subscript and superscript
 </p><p>
-6. ________ shows margin and tab setting => Ruler
+6. ________ shows margin and tab setting <br><b>Ans... </b> Ruler
 </p><p>
-7. <img src="/img/centerTab.jpg"> represent => Center tab
+7. <img src="/img/centerTab.jpg"> represent <br><b>Ans... </b> Center tab
 </p><p>
-8. Tab positions are arranged in the ________ => Ruler
+8. Tab positions are arranged in the ________ <br><b>Ans... </b> Ruler
 </p><p>
-9. Horizontal page orientation is also called => Landscape
+9. Horizontal page orientation is also called <br><b>Ans... </b> Landscape
 </p><p>
-  10. Portrait and landscape are => page orientation
+  10. Portrait and landscape are <br><b>Ans... </b> page orientation
   </p><p>
-    11. Vertical page orientation is called => Portrait
+    11. Vertical page orientation is called <br><b>Ans... </b> Portrait
     </p><p>
-      12. Page orientation is of ________ types => Two
+      12. Page orientation is of ________ types <br><b>Ans... </b> Two
       </p><p>
-        13. There are two type of page orientation.
+        13. There are ________ type of page orientation <br><b>Ans... </b> two
          </p><p>
-        14. How many different positions can you set for dropcap? => 2
+        14. How many different positions can you set for dropcap? <br><b>Ans... </b> 2
         
 </p>
 
@@ -431,11 +431,7 @@ another portion of the document is => Format painter
               
               </div>
               
-           <hr>
-            
- 
-            
-            </div>
+               </div>
             
             </div>
  
