--- a/views/dca103onlineclasschapter7.ejs
+++ b/views/dca103onlineclasschapter7.ejs
@@ -117,40 +117,40 @@
 												<p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Clipboards store data => temporarily
+1. Clipboards store data <br><b>Ans... </b> temporarily
 </p><p>
-2. <img src="/img/mswordClipart.jpg"> represents => Clipart button
+2. <img src="/img/mswordClipart.jpg"> represents <br><b>Ans... </b> Clipart button
 </p><p>
 3. ________ is a picture or graphic that can be inserted into a word
-processed document => Clipart
+processed document <br><b>Ans... </b> Clipart
 </p><p>
-4. Data stored in the Clipboard is => temporarily
+4. Data stored in the Clipboard is <br><b>Ans... </b> temporarily
 </p><p>
-5. Using word you can add into your document => All of these <br>
+5. Using word you can add into your document <br><b>Ans... </b> All of these <br>
 { a. Graphic c. Wordart b. Picture d. All of these }
 </p><p>
-6. <img src="/img/wordArt.jpg"> represents => WordArt button
+6. <img src="/img/wordArt.jpg"> represents <br><b>Ans... </b> WordArt button
 </p><p>
-7. The decorative text that you can add to a document => WordArt
+7. The decorative text that you can add to a document <br><b>Ans... </b> WordArt
 </p><p>
-8. Insert menu is used to insert objects. <em>(MsOffice 2007 version-ah chuan Menu hi Tab tia sawi a ni.)</em>
+8. ________ is used to insert objects <br><b>Ans... </b> Insert menu <br> <em>(MsOffice 2007 version-ah chuan Menu hi Tab tia sawi a ni.)</em>
 </p><p>
-9. Pictures, Table, Shapes, etc. are inserted from => Insert menu
+9. Pictures, Table, Shapes, etc. are inserted from <br><b>Ans... </b> Insert menu
 </p><p>
-10. Object are inserted from ________ => Insert menu
+10. Object are inserted from ________ <br><b>Ans... </b> Insert menu
 </p><p>
-11. Header and Footer appears in which menu ________ => Insert
+11. Header and Footer appears in which menu ________ <br><b>Ans... </b> Insert
 </p><p>
-12. Pictures can be group with shapes => True
+12. Pictures can be group with shapes <br><b>Ans... </b> True
 </p><p>
-13. Pictures can be deform/resize by ________ tool => Cropping
+13. Pictures can be deform/resize by ________ tool <br><b>Ans... </b> Cropping
 </p><p>
-14. =rand(2,4) enter command automatically displays a set of => 2 Paragraphs and 4 sentences.
+14. =rand(2,4) enter command automatically displays a set of <br><b>Ans... </b> 2 Paragraphs and 4 sentences.
 </p><p>
-15. To select all of the boxes of an orgaization chart => All of the above <br>
-{ a) Right click the chart background and then click select all
-b) Press and hold the Shift key and click each box
-c) click edit and select all
+15. To select all of the boxes of an orgaization chart <br><b>Ans... </b> All of the above <br>
+{ a) Right click the chart background and then click select all <br>
+b) Press and hold the Shift key and click each box <br>
+c) click edit and select all <br>
 d) All of the above }
 </p>
 
@@ -311,10 +311,7 @@ d) All of the above }
               
               </div>
               
-           <hr>
-            
- 
-            
+    
             </div>
             
             </div>
