--- a/views/dca103onlineclasschapter8.ejs
+++ b/views/dca103onlineclasschapter8.ejs
@@ -197,26 +197,26 @@
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Table is formed by a combination of _______ => row and column
+1. Table is formed by a combination of _______ <br><b>Ans... </b> row and column
 </p><p>
-2. The insert table button is used to insert ________ table in a word document => Blank <br>
+2. The insert table button is used to insert ________ table in a word document <br><b>Ans... </b> Blank <br>
 { a. Blank c. Auto-format b. Existing d. None of the above }
 </p><p>
-3. Combination of rows and columns yield => table
+3. Combination of rows and columns yield <br><b>Ans... </b> table
 </p><p>
-4. The tables and borders toolbar has number of components they are => Border style button, line style box, shading box
+4. The tables and borders toolbar has number of components they are <br><b>Ans... </b> Border style button, line style box, shading box
 </p><p>
-5. Cells in a table can be merge using ________ button => Merge cells
+5. Cells in a table can be merge using ________ button <br><b>Ans... </b> Merge cells
 </p><p>
-6. Table is form by a combination of => Row and Column
+6. Table is form by a combination of <br><b>Ans... </b> Row and Column
 </p><p>
-7. Cell is the intersection of ________ => column and row
+7. Cell is the intersection of ________ <br><b>Ans... </b> column and row
 </p><p>
-8. Merge cells join the => column and row
+8. Merge cells join the <br><b>Ans... </b> column and row
 </p><p>
-9. Combining of two or mare rows or columns is => Merging
+9. Combining of two or mare rows or columns is <br><b>Ans... </b> Merging
 </p><p>
-10. Intersection of row and column of a particular place is called => Cell
+10. Intersection of row and column of a particular place is called <br><b>Ans... </b> Cell
 </p>
 
              
@@ -381,10 +381,6 @@
               
               </div>
               
-           <hr>
-            
- 
-            
             </div>
             
             </div>
