--- a/views/dca103onlineclasschapter9.ejs
+++ b/views/dca103onlineclasschapter9.ejs
@@ -210,34 +210,34 @@ button.
   <b>OLD QUESTION:</b>
 </p><p>
 1. In a master document is the one which contain the recipients
-of the letter with place holders for the variable information => Mail merge
+of the letter with place holders for the variable information <br><b>Ans... </b> Mail merge
 </p><p>
-2. Mail merge is use to send or print => multiple letter
+2. Mail merge is use to send or print <br><b>Ans... </b> multiple letter
 </p><p>
-3. Mail merge recipients is limited to => unlimited
+3. Mail merge recipients is limited to <br><b>Ans... </b> unlimited
 </p><p>
-4. Mail merge includes merging of ________ separate documents => 2
+4. Mail merge includes merging of ________ separate documents <br><b>Ans... </b> 2
 </p><p>
-5. ________ is used to create multiple documents at once => Mail merge
+5. ________ is used to create multiple documents at once <br><b>Ans... </b> Mail merge
 </p><p>
-6. Data source is by default saved in ________ => My documents
+6. Data source is by default saved in ________ <br><b>Ans... </b> My documents
 </p><p>
-7. A data source is a document that has the ________ information => variable
+7. A data source is a document that has the ________ information <br><b>Ans... </b> variable
 </p><p>
-8. A feature of MS Word that saves the document automatically after certain interval is available on Save tab on Options dialog box is called Auto Recover.
+8. A feature of MS Word that saves the document automatically after certain interval is available on Save tab on Options dialog box is called <br><b>Ans... </b> Auto Recover.
 </p><p>
-9. A ________ is a collection of predefined design elements and color schemes => Theme
+9. A ________ is a collection of predefined design elements and color schemes <br><b>Ans... </b> Theme
 </p><p>
-10. Which of the following option is not available in Insert menu? => Graph <br>
+10. Which of the following option is not available in Insert menu? <br><b>Ans... </b> Graph <br>
 a) Chart b) Clipart c) WordArt e) Graph
 </p><p>
-11. You can merge the main document with data source in excel. In mail merge operation, word is usually => Client
+11. You can merge the main document with data source in excel. In mail merge operation, word is usually <br><b>Ans... </b> Client
 </p><p>
-12. What happen when you click on Insert > Clipart => It opens clipart task pane
+12. What happen when you click on Insert > Clipart <br><b>Ans... </b> It opens clipart task pane
 </p><p>
-13. Which of the following can be used to navigate documents? => Hyperlinks
+13. Which of the following can be used to navigate documents? <br><b>Ans... </b> Hyperlinks
 </p><p>
-14. Pressing F8 key for three times selects => A paragraph
+14. Pressing F8 key for three times selects <br><b>Ans... </b> A paragraph
 </p>
 
              
@@ -409,10 +409,7 @@ a) Chart b) Clipart c) WordArt e) Graph
               
               </div>
               
-           <hr>
-            
- 
-            
+    
             </div>
             
             </div>
