--- a/views/dca104onlineclasschapter2.ejs
+++ b/views/dca104onlineclasschapter2.ejs
@@ -258,77 +258,60 @@
 29)	The telnet protocol assumes that each end of the connection – the client and the server – is Network Virtual Terminal (NVT)
 </p><p>
 30)	Telnet works with the<code> Terminal Emulation Protocol.</code> 
-</p><p>
-31) The act of exploring the Web is known as surfing.
-</p><p>
-32) Shift + Tab selects the previous tab. 
-</p><p>
-33)	The URL describes the hierarchical directory or folder structure on the host computer that stores the file.
-</p><p>
-34) Computer that holds the file for one or more website is Server.
-</p><p>
-35) AltaVista was a Web search engine established in 1995 created by Digital Electronics Corporation of USA.
-</p><p>
-36) Technology used to provide Internet over the telephone network is DSL.
-</p><p>
-37) Voice over Internet Protocol (VoIP), also called IP telephony, is a method and group of technologies for the delivery of voice communications and multimedia sessions over Internet Protocol (IP) networks, such as the Internet.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. The act of exploring the Web is known as <br><b>Ans... </b> surfing.
 </p><p>
-2. 
+2. Shift + Tab <br><b>Ans... </b> selects the previous tab. 
 </p><p>
-3. 
+3. The URL describes <br><b>Ans... </b> the hierarchical directory or folder structure on the host computer that stores the file.
 </p><p>
-4. 
+4. Computer that holds the file for one or more website is <br><b>Ans... </b> Server.
 </p><p>
-5. 
+5. AltaVista <br><b>Ans... </b> was a Web search engine established in 1995 created by Digital Electronics Corporation of USA.
 </p><p>
-6. 
+6. Technology used to provide Internet over the telephone network is <br><b>Ans... </b> DSL.
 </p><p>
-7. 
+7. Voice over Internet Protocol (VoIP), also called IP telephony, <br><b>Ans... </b> is a method and group of technologies for the delivery of voice communications and multimedia sessions over Internet Protocol (IP) networks, such as the Internet.
 </p><p>
-8. 
+8. Telnet is used for remote login <br><b>Ans... </b> True
 </p><p>
-9. 
+9. A telnet session is established by <br><b>Ans... </b> Telent client
 </p><p>
-10. 
+10. Remote login can be done using? <br><b>Ans... </b> Telnet
 </p><p>
-11. 
+11. ________ is known as the father of World Wide Web <br><b>Ans... </b> Tim Berner Lee
 </p><p>
-12. 
+12. A program the helps the user to navigate the world wide web is? <br><b>Ans... </b> Web browser
 </p><p>
-13. 
+13. W3C <br><b>Ans... </b> World Wide Web Consortium
 </p><p>
-14. 
+14. The FTP was started in the year <br><b>Ans... </b> 1973
 </p><p>
-15. 
+15. Full form of FTP is <br><b>Ans... </b> File Transfer Protocol
 </p><p>
-16. 
+16. Who provide the internet? <br><b>Ans... </b> ISP 
 </p><p>
-17. 
+17. FTP sites expect you to use a special account called <br><b>Ans... </b> Anonymous
 </p><p>
-18. 
+18. USENET <br><b>Ans... </b> User Network
 </p><p>
-19. 
+19. The world's largest electronic discussion forum is? <br><b>Ans... </b> Usenet
 </p><p>
-20. 
+20. Public messaging and bulletin board is? <br><b>Ans... </b> Usenet
 </p><p>
-21. 
+21. Yahoo! Is basically <br><b>Ans... </b> search engine
 </p><p>
-22. 
+22. Software that is used to search through a database of webpages is called <br><b>Ans... </b> search engine
 </p><p>
-23. 
+23. A program which looks through its database for information that matches your request is <br><b>Ans... </b> Search engine
 </p><p>
-24. 
+24. ISP stands for <br><b>Ans... </b> Internet Service Provider
 </p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+25. E-MAIL address is made up of ________ parts <br><b>Ans... </b> two
 </p>
 
              
@@ -506,10 +489,7 @@
               
               </div>
               
-           <hr>
-            
- 
-            
+         
             </div>
             
             </div>
