--- a/views/dca104onlineclasschapter3.ejs
+++ b/views/dca104onlineclasschapter3.ejs
@@ -245,71 +245,76 @@
 23)	IMAP stands for<code> Interactive Mail Access Protocol. </code>
 </p><p>
 24) SMTP is a simple<code> ASCII protocol.</code>
-</p><p>
-24) The personal information of the sender which is written at the bottom of the e-mail message is signature
-</p><p>
-25) Email name syntax doesn't have Space.
-</p><p>
-26) The most common service of the internet is E-mail
-</p><p>
-27) Some older version of SMTP implementations cannot handle messages exceeding 64KB
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. The personal information of the sender which is written at the bottom of the e-mail message is <br><b>Ans... </b> signature
 </p><p>
-2. 
+2. Email name syntax doesn't have <br><b>Ans... </b> Space.
 </p><p>
-3. 
+3. The most common service of the internet is <br><b>Ans... </b> E-mail
 </p><p>
-4. 
+4. Some older version of SMTP implementations cannot handle messages exceeding <br><b>Ans... </b> 64KB
 </p><p>
-5. 
+5. E-Mail (Electronic Mail) was started in the year <br><b>Ans... </b> 1970
 </p><p>
-6. 
+6. E-Mail address/ addresses of secondary recipient(s) to whom copy need to be sent is <br><b>Ans... </b> CC
 </p><p>
-7. 
+7. Which one of the following is an e-mail message is the personal information
+which automatically appears at the bottom of the outgoing message? <br><b>Ans... </b> Signature
 </p><p>
-8. 
+8. Which one of the following translates the alphabetic address into
+numerical address, so e-mail can be sent to the proper location? <br><b>Ans... </b> DNS
 </p><p>
-9. 
+9. Which one of the following is used for opening remote e-mail boxes? <br><b>Ans... </b> POP3
 </p><p>
-10. 
+10. In e-mail our reply includes the original message called? <br><b>Ans... </b> Quoting
 </p><p>
-11. 
+11. Which one of the following is not included in the syntax of an email? <br><b>Ans... </b> Space
 </p><p>
-12. 
+12. POP is the incoming e-mail server <br><b>Ans... </b> True
 </p><p>
-13. 
+13. Once the e-mail is sent, the message is broken into pieces called <br><b>Ans... </b> Packet
 </p><p>
-14. 
+14. Email addresses are <br><b>Ans... </b> not case sensitive. <br>
+Note: <em>Email address hi hawrrawppui leh hawrrawpte-in a ziah ve ve theih. Ka email chu hawrrawp te vek a nia tih kher a ngai lo. A deliver vek thei.</em>
 </p><p>
-15. 
+15. E-mail address is made up of <br><b>Ans... </b> two parts
 </p><p>
-16. 
+16. Exploring web is known as <br><b>Ans... </b> web surfing and browsing
 </p><p>
-17. 
+17. The user name and domain name in an e-mail are separated by a symbol? <br><b>Ans... </b> @
 </p><p>
-18. 
+18. Which one of the following is not out of the five section of an e-mail? <br><b>Ans... </b> Footer <br>
+{ a) Header c) Signature b) Body d) Footer }
 </p><p>
-19. 
+19. The process of translating information from its original form
+into an encoded, incomprehensible form is called <br><b>Ans... </b> Encryption
 </p><p>
-20. 
+20. PKE <br><b>Ans... </b> Public Key Encryption
 </p><p>
-21. 
+21. SSL <br><b>Ans... </b> Secure Sockets Layer
 </p><p>
-22. 
+22. The process of taking data and modifying it so that it cannot be read by
+untrusted users is called? <br><b>Ans... </b> Encryption
 </p><p>
-23. 
+23. Changing the standard code into a different code means <br><b>Ans... </b> Encryption
 </p><p>
-24. 
+24. A word that look underlined on a web page usually is <br><b>Ans... </b>  a link to another webpage
 </p><p>
-25. 
+25. Which is not an advantage of using email? <br><b>Ans... </b> Privacy <br>
+{ A. speed B. Ease of use C. low cost D. Privacy }
 </p><p>
-26. 
+26. A URL is divided into how many part? <br><b>Ans... </b> Four
 </p><p>
-27. 
+27. Communication that do not waste the user's times are considered as <br><b>Ans... </b> Reliable ISP
+</p><p>
+28. The personal information of the sender which is written at the bottom of
+the email message is? <br><b>Ans... </b> Signature
+</p><p>
+29. WWW was started in the year? <br><b>Ans... </b> 1992
 </p>
 
              
@@ -487,9 +492,7 @@
               
               </div>
               
-           <hr>
-            
- 
+           
             
             </div>
             
