--- a/views/dca104onlineclasschapter4.ejs
+++ b/views/dca104onlineclasschapter4.ejs
@@ -226,73 +226,53 @@ Internet), E-Commerce, Collaborative Computing.
 14) Proxy server is a firewall.
 </p><p>
 15) <code>Amazon.com </code>comes under the Business to Consumer (B2C) model.
-</p><p>
-16) Digital Middleman means that a company provides information about several other companies on a website.
-</p><p>
-17) ASCII mode is used for sending text files, altering things such as feed and carriage return.
-</p><p>
-18) E-mail address/ addresses of secondary recipient(s) to whom copy needs to be sent is CC.
-</p><p>
-19) A URL is divided into four parts.
-</p><p>
-20) Video Conference is also known as Whiteboard Application
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. ________ means that a company provides information about several other companies on a website <br><b>Ans... </b> Digital Middleman
 </p><p>
-2. 
+2. ________ mode is used for sending text files, altering things such as feed and carriage return <br><b>Ans... </b> ASCII
 </p><p>
-3. 
+3. Javascript is used for <br><b>Ans... </b> All of the above <br>
+{ A. client-side program B. Creating interactive form C. Data validation D. All of the above }
 </p><p>
-4. 
+4. JavaScript is one of the new breed of web languages called scripting language <br><b>Ans... </b> True
 </p><p>
-5. 
+5. Video Conference is also known as <br><b>Ans... </b> Whiteboard Application
 </p><p>
-6. 
+6. When Java program are run inside a browser they are called <br><b>Ans... </b> applets
 </p><p>
-7. 
+7. The technology that you use your computer to have live video across the internet is <br><b>Ans... </b> Video conferencing
 </p><p>
-8. 
+8. JavaScript can be combined directly with <br><b>Ans... </b> HTML
 </p><p>
-9. 
+9. Which one of the following is called scripting language? <br><b>Ans... </b> JavaScript
 </p><p>
-10. 
+10. Which pair of the following is under HotBot? <br><b>Ans... </b> Ordinary HTML and activeX
 </p><p>
-11. 
+11. High speed connectivity over normal phone line is <br><b>Ans... </b> DSL
 </p><p>
-12. 
+12. The first graphical interface package that was released in the year 1993 was <br><b>Ans... </b> Mosaic
 </p><p>
-13. 
+13. Which is the device that converts computer output into a form that can be
+transmitted over a telephone line <br><b>Ans... </b> Modem
 </p><p>
-14. 
+14. Which transmission mode is used for data communication along telephone lines? <br><b>Ans... </b> Serial
 </p><p>
-15. 
+15. A ________ is a network in which a small number of computer
+share hardware, software and/or information <br><b>Ans... </b> LAN Network
 </p><p>
-16. 
+16. A technology that facilitates an integration of text, data, image graphics,
+audio, videos and animation in digital form in computer is called <br><b>Ans... </b> Multimedia
 </p><p>
-17. 
+17. These days, CEO‟s of the organization are talking face to face to their
+junior officer using web cameras and internet facilities. This is called <br><b>Ans... </b> Net meeting
 </p><p>
-18. 
+18. A collaborative network that uses internet technology to link business with their supplier is <br><b>Ans... </b> Extranet
 </p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+19. The internet is controlled by <br><b>Ans... </b> None
 </p>
 
              
@@ -470,9 +450,7 @@ Internet), E-Commerce, Collaborative Computing.
               
               </div>
               
-           <hr>
-            
- 
+       
             
             </div>
             
