--- a/views/dca104onlineclasschapter6.ejs
+++ b/views/dca104onlineclasschapter6.ejs
@@ -169,140 +169,97 @@
 </p><p>
 2.	Routers: Devices used to direct Internet traffic by  determining  th  optimum path that can be taken by the data to reach from the host computer to the destination computer.
 </p><p>
-3.	Packets: When a computer sends data over the Internet, it is broken up into pieces called packets by the TCP protocol.
+3.	Computer that request information from servers is Client computer.
 </p><p>
-4.	Broadband: A connection that provides faster internet access, enabling users to view web content faster and download or upload files more quickly.
+4.	Unauthorised access to the computer system is called hacking.
 </p><p>
-5.	Computer that request information from servers is Client computer.
+5.	A key which is known only by the owner is called Private Key.
 </p><p>
-6.	Unauthorised access to the computer system is called hacking.
+6.	The World Wide Web Consortium (W3C) develops standards for the  evolution of the fastest growing part of the Internet.
 </p><p>
-7.	A key which is known only by the owner is called Private Key.
+7.	A place on the internet where information about an organization is stored is Website
 </p><p>
-8.	The World Wide Web Consortium (W3C) develops standards for the  evolution of the fastest growing part of the Internet.
+8.	Internet Society, ISOC, an international organization that promotes Internet use and access.
 </p><p>
-9.	A place on the internet where information about an organization is stored is Website
-</p><p>
-10.	Internet Society, ISOC, an international organization that promotes Internet use and access.
-</p><p>
-11.	Data Diddling is unauthorized altering of data before or during entry into a computer system, and then changing it back after processing is done.
+9.	Data Diddling is unauthorized altering of data before or during entry into a computer system, and then changing it back after processing is done.
  </p><p>
-12.	Pages on the Web are built using a markup languange called HyperText Markup Language (HTML).
+10.	Pages on the Web are built using a markup languange called HyperText Markup Language (HTML).
 </p><p>
-13.	FTP sites expect you to use a account called anonymous.
+11.	The web address is expressed as four numbers separated by dots such as 192.168.0.168. It is also called as Internet Protocol (IP) address.
 </p><p>
-14. Some examples of linear texts include novels, poems, letters, textbooks, etc. In contrast, flow charts, knowledge maps, digital texts with hyperlinks, and encyclopedias are some examples of nonlinear text.
+12.	Internet speed is measured in megabits (Mb) per second. It is often abbreviated as “Mbps.”
 </p><p>
-15.	The web address is expressed as four numbers separated by dots such as 192.168.0.168. It is also called as Internet Protocol (IP) address.
+13. The full form of CGI is Common gateway interface.
 </p><p>
-16.	Internet speed is measured in megabits (Mb) per second. It is often abbreviated as “Mbps.”
+14.	FTP – File Transfer Protocol; It is used to download and upload files over the Internet.
 </p><p>
-17. The full form of CGI is Common gateway interface.
+15.	Gopher – A protocol helps in distributing,  searching,  and  retrieving  documents over the Internet.
 </p><p>
-18.	FTP – File Transfer Protocol; It is used to download and upload files over the Internet.
+16.	Instant messaging – Private one-to-one communication between  two  persons.
 </p><p>
-19.	Gopher – A protocol helps in distributing,  searching,  and  retrieving  documents over the Internet.
+17. E-reservation – or Computer Reservations System (CRS)  is  a computerised system used to conduct transactions like  booking  or  cancellation of air, rail or bus tickets.
 </p><p>
-20.	 The technology by which a digital signal is converted to its analog form is called Modulation
+18.	Newsgroup – A forum in which people from all over the world participate in discussions.
 </p><p>
-21.	There are four types
-of hyperlinks.
-• Text hyperlink – Uses a word or phrase to take visitors to another page,
-file or document.
-• Image hyperlink – Uses an image to take visitors to another page, file or
-document.
-• Bookmark hyperlink – Uses text or an image to take visitors to another
-part of a web page.
-• E-mail hyperlink – Allows visitors to send an e-mail message to the
-displayed e-mail address. 
+19.	Plug-in: A piece of software used to display the files that a web browser is unable to display.
 </p><p>
-22.	Instant messaging – Private one-to-one communication between  two  persons.
+20.	Tabbed browsing: Feature that allows several web pages to be opened simultaneously.
 </p><p>
-23. E-learning – It is a wide set of applications and processes which use all available electronic media to deliver education and training.
+21.	InPrivate browsing: Feature that lets users access the Internet without  creating history record of sites visited and saving cookies.
 </p><p>
-24. In computing, tty is a command in Unix and Unix-like operating systems to print the file name of the terminal connected to standard input. tty stands for TeleTYpewriter.
- </p><p>
-25. E-reservation – or Computer Reservations System (CRS)  is  a computerised system used to conduct transactions like  booking  or  cancellation of air, rail or bus tickets.
+22.	Pop-up: A small browser window that appears on the top of the existing browser window.
 </p><p>
-26. A technology that facilitates an integration of text, data, image, graphic etc is Multimedia.
+23.	XML stands for Extensible Markup Language. XML is not replacement of  HTML.
 </p><p>
-27.	Blog – A type of website, maintained by an individual who keeps updating it with his/her views and comments.
+24.	No one actually owns the Internet.
 </p><p>
-28.	Users within corporations and large organizations typically connect to an ISP via a high speed link is called Braodband Connection.
-
-</p><p>
-29.	Newsgroup – A forum in which people from all over the world participate in discussions.
-</p><p>
-30.	Plug-in: A piece of software used to display the files that a web browser is unable to display.
-</p><p>
-31.	Tabbed browsing: Feature that allows several web pages to be opened simultaneously.
-</p><p>
-32.	InPrivate browsing: Feature that lets users access the Internet without  creating history record of sites visited and saving cookies.
-</p><p>
-33.	Pop-up: A small browser window that appears on the top of the existing browser window.
-</p><p>
-34.	XML stands for Extensible Markup Language. XML is not replacement of  HTML.
-</p><p>
-35.	No one actually owns the Internet.
-</p><p>
-36. The study of structure refers to Anatomy.
+25. The study of structure refers to Anatomy.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. If a movie with sound is to be transmitted, which one of the format has to be used? <br><b>Ans... </b> MPEG
 </p><p>
-2. 
+2. Which one of the following is a company that provides access to the internet <br><b>Ans... </b> ISP
 </p><p>
-3. 
+3. Conversion of analog signal to its digital form at the destination is called <br><b>Ans... </b> Demodulation
 </p><p>
-4. 
+4. Which one of the following puts the world of online communication on your computer desktop? <br><b>Ans... </b> Outlook express
 </p><p>
-5. 
+5. The company which developed clients, servers and other web software is called <br><b>Ans... </b> Microsoft corporation
 </p><p>
-6. 
+6. The technique by which a digital signal is converted to its analog form is called? <br><b>Ans... </b> Modulation
 </p><p>
-7. 
+7. Which one of the following is also called crawler, robot or bot? <br><b>Ans... </b> Spider
 </p><p>
-8. 
+8. The full form of CGI is? <br><b>Ans... </b> Common Gateway Interface
 </p><p>
-9. 
+9. Software that is distributed for free on a trial basis is called? <br><b>Ans... </b> Shareware
 </p><p>
-10. 
+10. There are _________ types of hyperlinks <br><b>Ans... </b> Four
 </p><p>
-11. 
+11. Information in a book, magazine, newspaper, etc is <br><b>Ans... </b> Linear
 </p><p>
-12. 
+12. Users within corporations and large organizations typically connect to an ISP via a high speed link is called <br><b>Ans... </b> Braodband Connection.
 </p><p>
-13. 
+13. Which one of the following is the default browser in windows system? <br><b>Ans... </b> Internet Explorer
 </p><p>
-14. 
+14. URL stands for <br><b>Ans... </b> Uniform resource Locator
 </p><p>
-15. 
+15. NVT stand for <br><b>Ans... </b> Network Virtual terminal
 </p><p>
-16. 
+16. Text hyperlinks are generally denotes in <br><b>Ans... </b>  blue color and underlined
 </p><p>
-17. 
+17. IPR stands for <br><b>Ans... </b> Intellectual Property Right
 </p><p>
-18. 
+18. What is the term used for unsolicited e-mail? <br><b>Ans... </b> spam
 </p><p>
-19. 
+19. Scripting language can be used to provide <br><b>Ans... </b> Dynamic feature to the web page
 </p><p>
-20. 
+20. Java was developed by <br><b>Ans... </b> Sun Microsystem
 </p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+21. ZoneAlarm <br><b>Ans... </b> is proud to be the world's first personal firewall ever created for home PCs, and one of the most powerful applications of its kind.
 </p>
 
              
@@ -480,8 +437,7 @@ displayed e-mail address.
               
               </div>
               
-           <hr>
-            
+    
  
             
             </div>
