--- a/views/dca104welcomepage.ejs
+++ b/views/dca104welcomepage.ejs
@@ -41,7 +41,7 @@
             <p class="fw-normal">DCA I Semester hnuaia subject palina (a code hming <code> DCA-104) </code>kan zir dawn a, 
             a subject hming chu  <code> Internet Technology </code> a ni. 
             
-            He subject-ah hian Internet chungchang leh a term pawimawhte kan zir dawn a, syllabus milin kan zir dawn a ni. </p>
+            He subject-ah hian Internet chungchang leh a term pawimawhte kan zir dawn a, syllabus leh question hlui milin kan zir dawn a ni. </p>
             
             <h5 class="text-dark fw-normal mt-4 ">DCA-104 Chapter te</h5>
             
