--- a/views/dca105onlineclasschapter1.ejs
+++ b/views/dca105onlineclasschapter1.ejs
@@ -219,39 +219,41 @@ Components of Photoshop Window, Using the Toolbox, Using Palettes, Opening and S
 
 <p>
 <code>THE TOOLBOX:</code> The toolbox contains the main tools for working on images. A small arrow next to a tool in the toolbox indicates that the tool also has additional options available. In Photoshop, click and hold your mouse on a tool to see its options. You can hide the toolbox by clicking Window → tools.
-</p>
+
                               <figure class="figure">
   
                              <img src="/img/photoshopToolbox.gif" class="float-end img-fluid ps-2 pb-2" width="auto" height="auto" alt="photoshopToolbox" />
                                         
                               <figcaption class="figure-caption ps-2 text-danger">Adobe Photoshop Toolbox </figcaption>
                                         
-                              </figure> 
+                              </figure> </p>
+                              
+                              <hr>
                               
 <p>
  <b> OLD QUESTION: </b>
 </p><p>
-1. 'Save as' Allows you to save a file with a file name  AND Allows you to save the current opened file without providing a filename.
+1. 'Save as' <br><b>Ans... </b> allows you to save a file with a file name  AND Allows you to save the current opened file without providing a filename.
 </p><p>
-2. TIFF image is saved with .TIF
+2. TIFF image is saved with <br><b>Ans... </b> .TIF
 </p><p>
-3. 'Magic wand' in a Photoshop enables you to select consistently colored area without tracing its outline by hand.
+3. 'Magic wand' <br><b>Ans... </b> in a Photoshop enables you to select consistently colored area without tracing its outline by hand.
 </p><p>
-4. Title bar components is not a component of Photoshop window
+4. Title bar <br><b>Ans... </b> components is not a component of Photoshop window
 </p><p>
-5. Menu bar contains various menu option
+5. Menu bar <br><b>Ans... </b> contains various menu option
 </p><p>
-6. Histogram enables you to view the tonal and color information about an image
+6. Histogram <br><b>Ans... </b> enables you to view the tonal and color information about an image
 </p><p>
-7. Move tool  enables you to move a selection in an image
+7. Move tool <br><b>Ans... </b> enables you to move a selection in an image
 </p><p>
-8. Selecting the foreground and background colors with the help of the eyedropper is called Swatches
+8. Selecting the foreground and background colors with the help of the eyedropper is called <br><b>Ans... </b> Swatches
 </p><p>
-9. Vector images are scalable.
+9. Vector images are <br><b>Ans... </b> scalable.
 </p><p>
-10. Toolbox contains tools for selecting, drawing and painting, editing and viewing images
+10. Toolbox <br><b>Ans... </b> contains tools for selecting, drawing and painting, editing and viewing images
 </p><p>
-11. Toolbox contains visible and hidden tools
+11. Toolbox <br><b>Ans... </b> contains visible and hidden tools
 </p>
              
                       </div>
@@ -428,10 +430,7 @@ Components of Photoshop Window, Using the Toolbox, Using Palettes, Opening and S
               
               </div>
               
-           <hr>
-            
- 
-            
+       
             </div>
             
             </div>
