--- a/views/dca105onlineclasschapter10.ejs
+++ b/views/dca105onlineclasschapter10.ejs
@@ -234,42 +234,43 @@ i) Alt + click the Delete icon. OR   <br>
 ii) Drag the channel name in the panel to the Delete icon. OR <br>
 iii) Choose Delete Channel from the Channels panel menu. OR <br>
 iii) Click the Delete icon at the bottom of the panel, and then click Yes.<br>
-</p><p>
+</p>
+<hr><p>
   <b> OLD QUESTION: </b>
 </p><p>
-  1. Which one of the following options of the adjustment submenu allows you to modify a colour channel => Channel mixer
+  1. Which one of the following options of the adjustment submenu allows you to modify a colour channel <br><b>Ans... </b> Channel mixer
   </p><p>
-    2. Which one of the palette menu allows you to create spot channels in Photoshop => Channel pallete menu
+    2. Which one of the palette menu allows you to create spot channels in Photoshop <br><b>Ans... </b> Channel pallete menu
     </p><p>
-      3. The quick mask mode enables you to create a temporary mask to edit a selection without using a channel palette
+      3. The quick mask mode <br><b>Ans... </b> enables you to create a temporary mask to edit a selection without using a channel palette
     </p><p>
-      4. Channel that store spot colors in an image is => Spot channel
+      4. Channel that store spot colors in an image is <br><b>Ans... </b> Spot channel
     </p><p>
-      5. An image can consist up to how many channel => 24
+      5. An image can consist up to how many channel <br><b>Ans... </b> 24
     </p><p>
-      6. When you duplicate alpha channel between images then the channels need to have… => Identical pixels dimensions
+      6. When you duplicate alpha channel between images then the channels need to have… <br><b>Ans... </b> Identical pixels dimensions
     </p><p>
-      7. Permanent mask can be created by storing in which channel => Alpha
+      7. Permanent mask can be created by storing in which channel <br><b>Ans... </b> Alpha
     </p><p>
-      8. 'Channel' enables you to => Create and manage channel
+      8. 'Channel' enables you to <br><b>Ans... </b> Create and manage channel
     </p><p>
-      9. From channel we can adjust red, green and blue color separately
+      9. From channel <br><b>Ans... </b> we can adjust red, green and blue color separately
     </p><p>
-      10. Which one of the following options of the channel palette menu allows you to duplicate channels in Photoshop => Duplicate channel option
+      10. Which one of the following options of the channel palette menu allows you to duplicate channels in Photoshop <br><b>Ans... </b> Duplicate channel option
     </p><p>
-      11. Posterize specify the number of tonal levels for each colour channel.
+      11. Posterize <br><b>Ans... </b> specify the number of tonal levels for each colour channel.
     </p><p>
-      12. Which one of the following represents channel that store selections as 8-bit greyscale images => Alpha
+      12. Which one of the following represents channel that store selections as 8-bit greyscale images <br><b>Ans... </b> Alpha
     </p><p>
-      13. The images that you want to merge using the merging channels features need to be in which mode => grayscale
+      13. The images that you want to merge using the merging channels features need to be in which mode <br><b>Ans... </b> grayscale
     </p><p>
-      14. Which one of the following is used to store spot colors in an image => Spot Channel
+      14. Which one of the following is used to store spot colors in an image <br><b>Ans... </b> Spot Channel
     </p><p>
-      15. An RGB image has three channels: red, green, and blue.
+      15. An RGB image has three channels <br><b>Ans... </b> red, green, and blue.
     </p><p>
-      16. Alpha channel represents store selections of how many bit gray scale images => 8 bit
+      16. Alpha channel represents store selections of how many bit gray scale images <br><b>Ans... </b> 8 bit
       </p><p>
-      17. Which one of the following palettes enable you to record, revert and delete the changes made to an image => History pallette
+      17. Which one of the following palettes enable you to record, revert and delete the changes made to an image <br><b>Ans... </b> History pallette
     
                       </p>
              
@@ -447,10 +448,7 @@ iii) Click the Delete icon at the bottom of the panel, and then click Yes.<br>
               
               </div>
               
-           <hr>
-            
- 
-            
+         
             </div>
             
             </div>
