--- a/views/dca105onlineclasschapter11.ejs
+++ b/views/dca105onlineclasschapter11.ejs
@@ -242,22 +242,23 @@ To save the selection as a channel, try this:<br>
 The Save Selection dialog box appears. Here you can specify the name of your selection and it will appear within the Channels palette.<br>
 2.	Select Select → Deselect from the menu or press Ctrl + D.<br>
 3.	Select Select →Load Selection from the menu. The selection reappears!<br>
-</p><p>
+</p>
+<hr><p>
   <b> OLD QUESTION: </b>
 </p><p>
-  1. <img src="/img/quickMaskTool.jpg"> represents quick mask mode tool.
+  1. <img src="/img/quickMaskTool.jpg"> represents <br><b>Ans... </b> quick mask mode tool.
   </p><p>
-    2. The quick mask mode enables you to create a temporary mask to edit a selection without using a channel palette
+    2. The quick mask mode <br><b>Ans... </b> enables you to create a temporary mask to edit a selection without using a channel palette
   </p><p>
-    3. Masking can be used to protect parts of a layer from being edited.
+    3. Masking <br><b>Ans... </b> can be used to protect parts of a layer from being edited.
   </p><p>
-    4. Permanent mask can be created by storing in which channel => Alpha
+    4. Permanent mask can be created by storing in which channel <br><b>Ans... </b> Alpha
   </p><p>
-    5. Which one of the following represents channel that store selections as 8-bit greyscale images => Alpha
+    5. Which one of the following represents channel that store selections as 8-bit greyscale images <br><b>Ans... </b> Alpha
   </p><p> 
-  6. When you duplicate alpha channels between images then the channels need to have => identical pixels dimensions
+  6. When you duplicate alpha channels between images then the channels need to have <br><b>Ans... </b> identical pixels dimensions
   </p><p> 
-  7. Alpha channel represents store selections of how many bit gray scale images => 8 bit
+  7. Alpha channel represents store selections of how many bit gray scale images <br><b>Ans... </b> 8 bit
 
                       </p>
              
@@ -419,10 +420,7 @@ The Save Selection dialog box appears. Here you can specify the name of your sel
               
               </div>
               
-           <hr>
-            
- 
-            
+          
             </div>
             
             </div>
