--- a/views/dca105onlineclasschapter12.ejs
+++ b/views/dca105onlineclasschapter12.ejs
@@ -214,50 +214,52 @@ a bit different from its original. These kinds of filters create effects, such a
 <code>RENDER FILTERS :</code> The Render filters create 3D shapes, cloud patterns, refraction patterns, and simulated light reflections in an image.
 </p><p>
 <code>THE LIQUIFY: </code>The Liquify filter lets you push, pull, rotate, reflect, pucker, and bloat any area of an image. The distortions you create can be subtle or drastic, which makes the Liquify command a powerful tool for retouching images as well as creating artistic effects.
-</p><p>
+</p>
+<hr>
+<p>
   <b> OLD QUESTION: </b>
 </p><p>
-  1. Which one of the following is not a function of Render filter => Wrap the image with a plastic pattern
+  1. Which one of the following is not a function of Render filter <br><b>Ans... </b> Wrap the image with a plastic pattern
 </p><p>
-  2. Tile filters breakup an image into => square
+  2. Tile filters breakup an image into <br><b>Ans... </b> square
 </p><p>
-  3. Which one of the following filter adds degrees or wiggliness to an image => ripple filter
+  3. Which one of the following filter adds degrees or wiggliness to an image <br><b>Ans... </b> ripple filter
 </p><p>
-  4. The filter which make the image looks as if it were under water is => Ocean ripple
+  4. The filter which make the image looks as if it were under water is <br><b>Ans... </b> Ocean ripple
 </p><p>
-  5. Render filter creates which shape of the following => 3D
+  5. Render filter creates which shape of the following <br><b>Ans... </b> 3D
 </p><p>
-  6. Which one of the following filter breaks up image into square? => Tile filter
+  6. Which one of the following filter breaks up image into square? <br><b>Ans... </b> Tile filter
 </p><p>
-  7. Which one of the filter creates 3D shapes => Render
+  7. Which one of the filter creates 3D shapes <br><b>Ans... </b> Render
 </p><p>
-  8. Which one of the following is not include in Artistic filter? => Brush stroke
+  8. Which one of the following is not include in Artistic filter? <br><b>Ans... </b> Brush stroke
 </p><p>
-  9. The three lens shapes offered by lens flare filter are? => 50-300mm zoom, 55mm prime, 105mm prime
+  9. The three lens shapes offered by lens flare filter are? <br><b>Ans... </b> 50-300mm zoom, 55mm prime, 105mm prime
 </p><p>
-  10. The filter used to change a selection from its rectangular to polar coordinates and vice versa is? => Polar coordinates filter
+  10. The filter used to change a selection from its rectangular to polar coordinates and vice versa is? <br><b>Ans... </b> Polar coordinates filter
 </p><p>
-  11. Gaussian blur is available in filter menu.
+  11. Gaussian blur <br><b>Ans... </b> is available in filter menu.
 </p><p>
-  12. Which one is not a type of filter? => fly filter.
+  12. Which one is not a type of filter? <br><b>Ans... </b> fly filter.
 </p><p>
-  13. Which one of the following geometric shapes is not available in 3D transform filter => Rhombus
+  13. Which one of the following geometric shapes is not available in 3D transform filter <br><b>Ans... </b> Rhombus
   </p><p>
-  14. Destructive filter effect cannot be altered after applying them.
+  14. Destructive filter effect <br><b>Ans... </b> cannot be altered after applying them.
    </p><p>
-   15. Liquify filter is a set of painting tools that allows to distort pixels and transform areas of the image.  
+   15. Liquify filter <br><b>Ans... </b> is a set of painting tools that allows to distort pixels and transform areas of the image.  
    </p><p>
-   16. The filter used to create a cylinder anamorphosis-art is => Polar coordinates filter
+   16. The filter used to create a cylinder anamorphosis-art is <br><b>Ans... </b> Polar coordinates filter
     </p><p>
-    17. Which one of the following in NOT type of filter in a Photoshop? => Reconstructive filter.  
+    17. Which one of the following in NOT type of filter in a Photoshop? <br><b>Ans... </b> Reconstructive filter.  
     </p><p>  
-     18. Spherize filter gives object => a 3D effect
+     18. Spherize filter gives object <br><b>Ans... </b> a 3D effect
       </p><p> 
-      19.  <img src="/img/twirlClockwise.jpg"> represents => Twirl clockwise
+      19.  <img src="/img/twirlClockwise.jpg"> represents <br><b>Ans... </b> Twirl clockwise
        </p><p> 
-       20. Which one of the following pair includes in brush stroke filters? => Crosshatch and ink outlines
+       20. Which one of the following pair includes in brush stroke filters? <br><b>Ans... </b> Crosshatch and ink outlines
        </p><p> 
-       21. A set of painting tools that allows to distort pixels and transform areas of an image is => Liquify filter
+       21. A set of painting tools that allows to distort pixels and transform areas of an image is <br><b>Ans... </b> Liquify filter
        </p>
                         </div>
                   
@@ -433,9 +435,7 @@ a bit different from its original. These kinds of filters create effects, such a
               
               </div>
               
-           <hr>
-            
- 
+       
             
             </div>
             
