--- a/views/dca105onlineclasschapter13.ejs
+++ b/views/dca105onlineclasschapter13.ejs
@@ -225,46 +225,48 @@
 <code>•	Crtl + Shift + E (Merge Visible)</code> — Merges all visible layers into one. Not recommended practice in typical photo editing because you’ll lose layer information.
 </p><p>
 <code>•	SPACEBAR (Temporary Hand Tool)</code> — Hold down the spacebar to temporarily bring up the hand tool so you can move around.
-</p><p>
+</p>
+<hr>
+<p>
   <b> OLD QUESTION: </b>
 </p><p>
-  1. The short cut key for curve tool is => Ctrl + M
+  1. The short cut key for curve tool is <br><b>Ans... </b> Ctrl + M
 </p><p>
-  2. The CMYK acronym stands for Cyan, Magenta, Yellow, and Key. Key is black.
+  2. The CMYK acronym stands for <br><b>Ans... </b> Cyan, Magenta, Yellow, and Key. Key is black.
   </p><p>
-  3. Which one of the following is a graphics package used to create, edit and modify images => Photoshop
+  3. Which one of the following is a graphics package used to create, edit and modify images <br><b>Ans... </b> Photoshop
   </p><p>
-  4. Which one of the following is used to straight-edge and free hand segment of a selection border of an image => Lasso
+  4. Which one of the following is used to straight-edge and free hand segment of a selection border of an image <br><b>Ans... </b> Lasso
   </p><p>
-  5. The process of converting a vector image into a raster image is called Rasterizing.
+  5. The process of converting a vector image into a raster image is called <br><b>Ans... </b> Rasterizing.
   </p><p>
-  6. Which of the following is not a tool that appears in the toolbox? => Pencil
+  6. Which of the following is not a tool that appears in the toolbox? <br><b>Ans... </b> Pencil
   </p><p>
-  7. <img src="/img/defaultForegroundBackground.jpg"> represent default foreground/background color.
+  7. <img src="/img/defaultForegroundBackground.jpg"> represent <br><b>Ans... </b> default foreground/background color.
    </p><p>
-  8. Selecting the foreground and background colors with the help of the eyedropper is called? => Swatches
+  8. Selecting the foreground and background colors with the help of the eyedropper is called? <br><b>Ans... </b> Swatches
   </p><p>
-  9. Pixel refers to => Pixel elements
+  9. Pixel refers to <br><b>Ans... </b> Pixel elements
   </p><p>
-  10. Motion blur provides a distance in pixel between? => 1 to 999
+  10. Motion blur provides a distance in pixel between? <br><b>Ans... </b> 1 to 999
   </p><p>
-  11. Which one of the following enables you to erase a portion of image? => Eraser
+  11. Which one of the following enables you to erase a portion of image? <br><b>Ans... </b> Eraser
 </p><p>
-12. The following enables you to take a sample of an image color to change the foreground and background color? => Eyedropper
+12. The following enables you to take a sample of an image color to change the foreground and background color? <br><b>Ans... </b> Eyedropper
 </p><p>
-13. Which one of the following enables you to specify a direction of movement in pixel from 1 to 999? => Motion blur
+13. Which one of the following enables you to specify a direction of movement in pixel from 1 to 999? <br><b>Ans... </b> Motion blur
 </p><p>
-14. A software that comes with Adobe Photoshop is => Adobe imageReady
+14. A software that comes with Adobe Photoshop is <br><b>Ans... </b> Adobe imageReady
 </p><p>
-15. The resolution of raster image is? => 72 to 96 ppi
+15. The resolution of raster image is? <br><b>Ans... </b> 72 to 96 ppi
 </p><p>
-16. Which one of the following creates tiny horizontal lines in the image to show a wind effect? => Wind
+16. Which one of the following creates tiny horizontal lines in the image to show a wind effect? <br><b>Ans... </b> Wind
 </p><p>
-17. Graphic package used to create, edit and modify images is => Photoshop
+17. Graphic package used to create, edit and modify images is <br><b>Ans... </b> Photoshop
 </p><p>
-18. A set of painting tools that allow to distort pixels and transform areas of an image is => Liquify filter
+18. A set of painting tools that allow to distort pixels and transform areas of an image is <br><b>Ans... </b> Liquify filter
 </p><p>
-19. Small dots of individual colors that appear on the screen is => Pixels
+19. Small dots of individual colors that appear on the screen is <br><b>Ans... </b> Pixels
 </p>
              
                       </div>
@@ -441,10 +443,7 @@
               
               </div>
               
-           <hr>
-            
- 
-            
+          
             </div>
             
             </div>
