--- a/views/dca105onlineclasschapter2.ejs
+++ b/views/dca105onlineclasschapter2.ejs
@@ -219,42 +219,43 @@ Setting Image Size and Mode, Copying and Pasting Images, Cloning Images, Types o
 2.	Press ALT and click where you want to clone.<br>
 3.	Start cloning by clicking where you want to keep the copy.<br>
 </p>
+<hr>
 <p>
   <b> OLD QUESTION: </b>
 </p><p>
-1.  Cloning tool enables you to copy pixels and repair an image.
+1.  Cloning tool <br><b>Ans... </b> enables you to copy pixels and repair an image.
 </p><p>
-2.  Image menus provides the option that enables you to change the size and mode of the image.
+2.  Image menus <br><b>Ans... </b> provides the option that enables you to change the size and mode of the image.
 </p><p>
-3. The images that you want to merge using the merging channels features need to be in grayscale mode.
+3. The images that you want to merge using the merging channels features need to be in <br><b>Ans... </b> grayscale mode.
 </p><p>
-4. The types of images supported in Photoshop are vector and raster image.
+4. The types of images supported in Photoshop are <br><b>Ans... </b> vector and raster image.
 </p><p>
-5. PPI means Pixels per inches
+5. PPI means <br><b>Ans... </b> Pixels per inches
 </p><p>
-6. The raster images are displayed on the monitor with a resolution of 72 to 96 ppi.
+6. The raster images are displayed on the monitor with a resolution of <br><b>Ans... </b> 72 to 96 ppi.
 </p><p>
-7. JPEG stands for Joint Photographic Expert Group
+7. JPEG stands <br><b>Ans... </b> for Joint Photographic Expert Group
 </p><p>
-8. RGB is the color combination of Red Green Blue
+8. RGB is the color combination of <br><b>Ans... </b> Red Green Blue
 </p><p>
-9. CYMK means Cyan, Magenta, Yellow And Black
+9. CYMK means <br><b>Ans... </b> Cyan, Magenta, Yellow And Black
 </p><p>
-10. 3D means 3 dimensional
+10. 3D means <br><b>Ans... </b> 3 dimensional
 </p><p>
-11. EPS means Encapsulated Post Script
+11. EPS means <br><b>Ans... </b> Encapsulated Post Script
 </p><p>
-12. OCR means Optical Character Recognition
+12. OCR means <br><b>Ans... </b> Optical Character Recognition
 </p><p>
-13. TIFF stands for Tagged Image File Format
+13. TIFF stands for <br><b>Ans... </b> Tagged Image File Format
 </p><p>
-14. PNG stands for Portable network graphic
+14. PNG stands for <br><b>Ans... </b> Portable network graphic
 </p><p>
-15. To rotate the image 180<sup>0</sup> => Edit > transform>  rotate 180<sup>0</sup>. 
+15. To rotate the image 180<sup>0</sup> <br><b>Ans... </b> Edit > transform>  rotate 180<sup>0</sup>. 
 </p><p>
-16. Resizing of smart object does not lost image quality.
+16. Resizing of smart object does not lost <br><b>Ans... </b> image quality.
 </p><p>
-17. The image file format that is compressed without any loss of data is => PNG
+17. The image file format that is compressed without any loss of data is <br><b>Ans... </b> PNG
 </p>
 
                       </div>
@@ -431,10 +432,7 @@ Setting Image Size and Mode, Copying and Pasting Images, Cloning Images, Types o
               
               </div>
               
-           <hr>
-            
- 
-            
+        
             </div>
             
             </div>
