--- a/views/dca105onlineclasschapter3.ejs
+++ b/views/dca105onlineclasschapter3.ejs
@@ -241,30 +241,30 @@ iii) Click layer menu and click layer properties… <br>
 <code>• Layer can be hide</code> by clicking on the display layer icon (<i class="fas fa-eye"></i>) icon.<br>
 <code>• Grouping layer</code> implies creating a Set 1 which contains adjacent layers and acts as a folder on the palette. <br>
 </p>
+<hr>
 <p>
   <b> OLD QUESTION: </b>
 </p><p>
-1.  To delete a layers: Select a layer in the layer palette, then =>  Layer > Delete > Yes
+1.  To delete a layers, select a layer in the layer palette, then <br><b>Ans... </b>  Layer > Delete > Yes
  
 </p><p>
-2. In order to hide a layer, which one of the icon has to be selected => Eye icon
+2. In order to hide a layer, which one of the icon has to be selected <br><b>Ans... </b> Eye icon
 </p><p>
-3. Creating and exact copy of a layer is => duplicating
+3. Creating and exact copy of a layer is <br><b>Ans... </b> duplicating
 </p><p>
-4. Layers are identical to non-transparent sheet stacked on top of each other
+4. Layers <br><b>Ans... </b> are identical to non-transparent sheet stacked on top of each other
 </p><p>
-5. To protect layer from being edited is => Locking
+5. To protect layer from being edited is <br><b>Ans... </b> Locking
 </p><p>
-6. Creating a layer set of an image refers to => Grouping
+6. Creating a layer set of an image refers to <br><b>Ans... </b> Grouping
 </p><p>
-7. A group that consists of number of layers in sequences is called => Clipping group
+7. A group that consists of number of layers in sequences is called <br><b>Ans... </b> Clipping group
 </p><p>
-8. Eliminating layers from the layer palette is => Deleting
+8. Eliminating layers from the layer palette is <br><b>Ans... </b> Deleting
 </p><p>
-9. Creating a layer from menu => Layer > New > Layer...
+9. Creating a layer from menu <br><b>Ans... </b> Layer > New > Layer...
 </p><p>
-10. Duplicating layers is a technique that creates an exact copy of a layer
-
+10. Duplicating layers <br><b>Ans... </b> is a technique that creates an exact copy of a layer
 </p>
              
                       </div>
@@ -441,10 +441,7 @@ iii) Click layer menu and click layer properties… <br>
               
               </div>
               
-           <hr>
-            
- 
-            
+         
             </div>
             
             </div>
