--- a/views/dca105onlineclasschapter4.ejs
+++ b/views/dca105onlineclasschapter4.ejs
@@ -241,24 +241,25 @@ double click on the background layer to unlock the layer.<br>
 <code>DISCARDING LAYER MASK:</code> If you don’t like the way a layer mask looks, you can delete it by simply dragging 
 the layer from the Channels palette to the Delete current channel button at the bottom of the palette.<br>
 </p>
+<hr>
 <p>
   <b> OLD QUESTION: </b>
 </p><p>
-1.  Masking stored the image as which one of the bit grayscale channel => 8-bit
+1.  Masking stored the image as which one of the bit grayscale channel <br><b>Ans... </b> 8-bit
 </p><p>
-2. Masking can be used to protect parts of a layer from being edited.
+2. Masking <br><b>Ans... </b> can be used to protect parts of a layer from being edited.
 </p><p>
-3. To apply layer mask: Click the layer mask thumbnail in the layer palette then => Select Layer menu > Remove layer mask > apply
+3. To apply layer mask: Click the layer mask thumbnail in the layer palette then <br><b>Ans... </b> Select Layer menu > Remove layer mask > apply
 </p><p>
-4. Permanent mask can be created by storing in which channel => Alpha
+4. Permanent mask can be created by storing in which channel <br><b>Ans... </b> Alpha
 </p><p>
-5. Layer mask helps in hiding some portion of the image
+5. Layer mask <br><b>Ans... </b> helps in hiding some portion of the image
 </p><p>
-6. Discarding mask makes => no changes
+6. Discarding mask makes <br><b>Ans... </b> no changes
 </p><p>
-7. When a layer is locked; lock icon is displayed to which side => right.
+7. When a layer is locked; lock icon is displayed to which side <br><b>Ans... </b> right.
 </p><p>
-8. A layer mask is a grayscale image that refers to => black and white
+8. A layer mask is a grayscale image that refers to <br><b>Ans... </b> black and white
  </p>
              
                       </div>
@@ -435,10 +436,7 @@ the layer from the Channels palette to the Delete current channel button at the 
               
               </div>
               
-           <hr>
-            
- 
-            
+          
             </div>
             
             </div>
