--- a/views/dca105onlineclasschapter5.ejs
+++ b/views/dca105onlineclasschapter5.ejs
@@ -239,16 +239,17 @@ The <code>second </code>method for applying an adjustment is non-destructive and
 • Or Click Layer Menu > Choose Layer Content Options.<br>
 •	Make the desired changes in the Properties panel.<br>
 </p>
+<hr>
 <p>
   <b> OLD QUESTION: </b>
 </p><p>
-1. Which one of the following palettes enables you to create new fill or adjustment layer => Layers
+1. Which one of the following palettes enables you to create new fill or adjustment layer <br><b>Ans... </b> Layers
 </p><p>
-2. Which of the following will be useful to fill layer as background => Gradient
+2. Which of the following will be useful to fill layer as background <br><b>Ans... </b> Gradient
 </p><p>
-3. The adjustments or fill layers can be merged
+3. The adjustments or fill layers can be <br><b>Ans... </b> merged
 </p><p>
-4. Default value of the adjustment layer or fill layer is => unmask
+4. Default value of the adjustment layer or fill layer is <br><b>Ans... </b> unmask
 </p><p>
 
 
@@ -420,11 +421,7 @@ The <code>second </code>method for applying an adjustment is non-destructive and
               
               </div>
               
-           <hr>
-            
- 
-            
-            </div>
+             </div>
             
             </div>
  
