--- a/views/dca105onlineclasschapter6.ejs
+++ b/views/dca105onlineclasschapter6.ejs
@@ -226,12 +226,13 @@ pointer is over the layer content to which you want to apply the style.
 •	To edit an existing style, double-click an effect displayed below the layer name in the Layers panel. <br>
 • Click the triangle next to the Add a Layer Style icon to display the effects contained in the style.
     </p>
+    <hr>
 <p>
   <b> OLD QUESTION: </b>
 </p><p>
-  1. From shadow highlight we can adjust image for more realistic
+  1. From shadow highlight we can adjust image for more <br><b>Ans... </b> realistic
   </p><p>
-  2. Destructive filter effect cannot be altered after applying them
+  2. Destructive filter effect <br><b>Ans... </b> cannot be altered after applying them
 
                       </p>
              
@@ -396,10 +397,7 @@ pointer is over the layer content to which you want to apply the style.
               
               </div>
               
-           <hr>
-            
- 
-            
+         
             </div>
             
             </div>
