--- a/views/dca105onlineclasschapter7.ejs
+++ b/views/dca105onlineclasschapter7.ejs
@@ -224,20 +224,21 @@ same path. There are sections in a path defined by anchor points.
 •	Curve line can be drawn by adjusting from the direction point.<br>
 •	To adjust direction point, press ctrl and click on the path <br>
 •	We can convert path in selection by right clicking > make selection on the paths while using pen tool.<br>
-  </p><p>
+  </p>
+  <hr><p>
   <b> OLD QUESTION: </b>
 </p><p>
-  1. A curve path consists of two anchor points connected by a =>  Curve segment
+  1. A curve path consists of two anchor points connected by a <br><b>Ans... </b>  Curve segment
     </p><p>
-  2. Which one of the following enables you to draw straight lines and curves => Pen
+  2. Which one of the following enables you to draw straight lines and curves <br><b>Ans... </b> Pen
   </p><p>
-  3. Pen tool can be used to draw not only straight line but also curve line.
+  3. Pen tool <br><b>Ans... </b> can be used to draw not only straight line but also curve line.
   </p><p>
-  4. Which one of the following options is used to convert a selection into a path using path palette menu => make work path
+  4. Which one of the following options is used to convert a selection into a path using path palette menu <br><b>Ans... </b> make work path
   </p><p>
-  5.  <img src="/img/penTool.jpg" > represents pen tool.
+  5.  <img src="/img/penTool.jpg" > represents <br><b>Ans... </b> pen tool.
   </p><p>
-  6.  <img src="/img/pathSelection.jpg" > represents path selection tool.
+  6.  <img src="/img/pathSelection.jpg" > represents <br><b>Ans... </b> path selection tool.
   </p>
              
                       </div>
@@ -414,10 +415,7 @@ same path. There are sections in a path defined by anchor points.
               
               </div>
               
-           <hr>
-            
- 
-            
+       
             </div>
             
             </div>
