--- a/views/dca105onlineclasschapter8.ejs
+++ b/views/dca105onlineclasschapter8.ejs
@@ -211,18 +211,19 @@ Usually, Midtones is the best choice.<br>
 •	Move the Cyan/Red, Magenta/Green, or Yellow/Blue slider to add or subtract color, 
 watching the effects of your adjustments on the original image.<br>
 • The Color Levels boxes show the amount of each color that Photoshop adds and subtracts while you move the sliders.
-</p><p>
+</p>
+<hr><p>
   <b> OLD QUESTION: </b>
 </p><p>
-  1. The color balance command modifies the overall mixtures of color in an image
+  1. The color balance command <br><b>Ans... </b> modifies the overall mixtures of color in an image
   </p><p>
-  2. To open levels panel =>  Image > Adjustments > Levels...
+  2. To open levels panel <br><b>Ans... </b>  Image > Adjustments > Levels...
   </p><p>
-  3. The command modifies the overall mixture of colors in an image is called => Balancing color
+  3. The command modifies the overall mixture of colors in an image is called <br><b>Ans... </b> Balancing color
    </p><p>
-  4. Modification of the overall mixture of colors in an image is called => Color balance
+  4. Modification of the overall mixture of colors in an image is called <br><b>Ans... </b> Color balance
   </p><p>
-  5. CMYK stands for => cyan, magenta, yellow, and key (black)
+  5. CMYK stands for <br><b>Ans... </b> cyan, magenta, yellow, and key (black)
     </p>
 
              
@@ -384,10 +385,7 @@ watching the effects of your adjustments on the original image.<br>
               
               </div>
               
-           <hr>
-            
- 
-            
+       
             </div>
             
             </div>
