--- a/views/dca105onlineclasschapter9.ejs
+++ b/views/dca105onlineclasschapter9.ejs
@@ -208,26 +208,27 @@ To use the Color Variations command:<br>
 •	Specify how much adjustment you want with the Adjust Color Intensity slider.<br>
 •	Drag left to decrease the amount of adjustment and drag right to increase the amount.<br>
 •	If you selected Midtones, Shadows, or Highlights in Step 2, adjust the color by clicking the various Increase or Decrease Color buttons.<br>
-</p><p>
+</p>
+<hr><p>
   <b> OLD QUESTION: </b>
 </p><p>
-  1. Which one of the following is not recommended for high end output => Brightness
+  1. Which one of the following is not recommended for high end output <br><b>Ans... </b> Brightness
   </p><p>
-   2. Brightness and contrast values ranges between => -100 to +100 
+   2. Brightness and contrast values ranges between <br><b>Ans... </b> -100 to +100 
     </p><p>
-      3. The brightness slider enables you to adjust brightness from => -100 to +100 
+      3. The brightness slider enables you to adjust brightness from <br><b>Ans... </b> -100 to +100 
       </p><p>
-        4. Lens flare brightness slider enables you to adjust the brightness from => 10% to 300%
+        4. Lens flare brightness slider enables you to adjust the brightness from <br><b>Ans... </b> 10% to 300%
       </p><p>
-        5. The brightness/contrast command is not recommended for high-end output
+        5. The brightness/contrast command is not recommended for <br><b>Ans... </b> high-end output
         </p><p>
-          6. The measure of distinction between two colors and saturation denotes the purity of a color is => Hue
+          6. The measure of distinction between two colors and saturation denotes the purity of a color is <br><b>Ans... </b> Hue
          </p><p> 
-          7. Modification of the saturation area of an image is => Sponge
+          7. Modification of the saturation area of an image is <br><b>Ans... </b> Sponge
           </p><p> 
-          8. Which one of the following enables you to modify color saturation of an area => Sponge
+          8. Which one of the following enables you to modify color saturation of an area <br><b>Ans... </b> Sponge
           </p><p>
-          9. Midtones show the middle tones of an image – the colours that are in-between. For example, if we had a black and white image, the midtone would be grey
+          9. Midtones <br><b>Ans... </b> show the middle tones of an image – the colours that are in-between. For example, if we had a black and white image, the midtone would be grey
                         </p>
              
                       </div>
@@ -397,10 +398,7 @@ To use the Color Variations command:<br>
               
               </div>
               
-           <hr>
-            
- 
-            
+      
             </div>
             
             </div>
