--- a/views/dca106onlineclasschapter1.ejs
+++ b/views/dca106onlineclasschapter1.ejs
@@ -235,58 +235,58 @@ The Control Palette changes according to the tool selected in the toolbox.
                                       
                               </figure> 
                       </p>
-                      
+                  <hr>    
 <p>
  <b>OLD QUESTION:</b>
   </p><p>
-   1. Shortcut key for display of ruler in the document is => Ctrl + R
+   1. Shortcut key for display of ruler in the document is <br><b>Ans... </b> Ctrl + R
    </p><p>
-   2. ________ are non-printing lines which help you in placing the object on your publication page => Ruler guide
+   2. ________ are non-printing lines which help you in placing the object on your publication page <br><b>Ans... </b> Ruler guide
   </p><p>
-    3. Ctrl+R is used to get => Ruler
+    3. Ctrl+R is used to get <br><b>Ans... </b> Ruler
 
   </p><p>
-    4. In the ________ click one of the font options in the Control palette, Use the toggling buttons to choose the Type style, Case, Position, Type Size, Leading, Expert Tracking, Horizontal Scale, Kerning, and Baseline Shift => Control palette
+    4. In the ________ click one of the font options in the Control palette, Use the toggling buttons to choose the Type style, Case, Position, Type Size, Leading, Expert Tracking, Horizontal Scale, Kerning, and Baseline Shift <br><b>Ans... </b> Control palette
   </p><p>
-    5. To show control palette, press => Shift + Tab
+    5. To show control palette, press <br><b>Ans... </b> Shift + Tab
   </p><p>
-    6. <img src="/img/superScript.jpg"> The figure represent => Superscript
+    6. <img src="/img/superScript.jpg"> The figure represent <br><b>Ans... </b> Superscript
   </p><p>
-    7. <img src="/img/subScript.jpg"> The figure represent => Subscript
+    7. <img src="/img/subScript.jpg"> The figure represent <br><b>Ans... </b> Subscript
   </p><p>
-    8. To show ________ is window>show control palette => Control Palette
+    8. To show ________ is window>show control palette <br><b>Ans... </b> Control Palette
     </p><p>
-      9. The figure represents <img src="/img/save.jpg"> => Save button
+      9. The figure represents <img src="/img/save.jpg"> <br><b>Ans... </b> Save button
       </p><p>
-       10. The figure represents <img src="/img/crop.jpg"> => Crop button
+       10. The figure represents <img src="/img/crop.jpg"> <br><b>Ans... </b> Crop button
        </p><p>
-       11. The figure represents <img src="/img/paragraphSymbol.jpg"> => Paragraph Symbol
+       11. The figure represents <img src="/img/paragraphSymbol.jpg"> <br><b>Ans... </b> Paragraph Symbol
        </p><p>
-       12. There are ________ types of view in Control palette => 2
+       12. There are ________ types of view in Control palette <br><b>Ans... </b> 2
         </p><p> 
-        13. In PageMaker Shortcut key of Superscript is => Ctrl + Shift + \
+        13. In PageMaker Shortcut key of Superscript is <br><b>Ans... </b> Ctrl + Shift + \
          </p><p> 
-        14. The figure represents <img src="/img/printTool.jpg"> => Print button
+        14. The figure represents <img src="/img/printTool.jpg"> <br><b>Ans... </b> Print button
         </p><p>
-        15. The figure represents <img src="/img/spellingButton.jpg"> => Spelling button
+        15. The figure represents <img src="/img/spellingButton.jpg"> <br><b>Ans... </b> Spelling button
         </p><p>
-        16. The figure represents <img src="/img/bulletandNumbering.jpg"> => Bullet and Numbering
+        16. The figure represents <img src="/img/bulletandNumbering.jpg"> <br><b>Ans... </b> Bullet and Numbering
         </p><p>
-        17. Skewing and reflecting are available only on the => Control Palette
+        17. Skewing and reflecting are available only on the <br><b>Ans... </b> Control Palette
         </p><p>
-        18. Case button is in => Control Palette
+        18. Case button is in <br><b>Ans... </b> Control Palette
         </p><p>
-        19. PageMaker was introduced in the year => 1985
+        19. PageMaker was introduced in the year <br><b>Ans... </b> 1985
         </p><p>
-        20. The default file extension of PageMaker file is => .PMD
+        20. The default file extension of PageMaker file is <br><b>Ans... </b> .PMD
          </p><p>
-        21. The shortcut key of 50% zoom view in PageMaker is => Ctrl + 5
+        21. The shortcut key of 50% zoom view in PageMaker is <br><b>Ans... </b> Ctrl + 5
          </p><p>
-        22. The shortcut key for zoom in is => Ctrl + +
+        22. The shortcut key for zoom in is <br><b>Ans... </b> Ctrl + +
          </p><p>
-        23. The shortcut key for actual size is => Ctrl + 1
+        23. The shortcut key for actual size is <br><b>Ans... </b> Ctrl + 1
         </p><p>
-        24. The process of having a document back to the way it was last saved and that deletes everything done since the last save is => Revert
+        24. The process of having a document back to the way it was last saved and that deletes everything done since the last save is <br><b>Ans... </b> Revert
   </p>
              
                       </div>
@@ -463,10 +463,6 @@ The Control Palette changes according to the tool selected in the toolbox.
               
               </div>
               
-           <hr>
-            
- 
-            
             </div>
             
             </div>
