--- a/views/dca106onlineclasschapter10.ejs
+++ b/views/dca106onlineclasschapter10.ejs
@@ -269,36 +269,37 @@ If you do use Change All, select the Whole Word option and review the document t
 7.	Type in a new word or phrase to find and change 
 OR
 Click CLOSE<br>
-</p><p>
+</p>
+<hr><p>
 <b>OLD QUESTION:</b>
   </p><p>
-   1. ________ works best for the initial placement of a large story that makes many pages => Story Editor
+   1. ________ works best for the initial placement of a large story that makes many pages <br><b>Ans... </b> Story Editor
    </p><p>
-   2. ________ provides a blank typing area, like a white sheet of paper, to type on => Story Editor
+   2. ________ provides a blank typing area, like a white sheet of paper, to type on <br><b>Ans... </b> Story Editor
   </p><p>
-    3. In PageMaker Ctrl+E is the shortcut key for => Story Editor
+    3. In PageMaker Ctrl+E is the shortcut key for <br><b>Ans... </b> Story Editor
    </p><p>
-   4. Shortcut key for ________ is Ctrl + J => justify text (Ctrl + Shift + J hi justify text a ni)
+   4. Shortcut key for ________ is Ctrl + J <br><b>Ans... </b> justify text (Ctrl + Shift + J hi justify text a ni)
    </p><p>
-   5. The shortcut key for edit story is => Ctrl + E
+   5. The shortcut key for edit story is <br><b>Ans... </b> Ctrl + E
    </p><p>
-     6. Once you create a story in a story editor, you have to place the story in the => Layout Editor
+     6. Once you create a story in a story editor, you have to place the story in the <br><b>Ans... </b> Layout Editor
    </p><p>
-     7. ________ are program for creating and editing bitmap images => Image Editor
+     7. ________ are program for creating and editing bitmap images <br><b>Ans... </b> Image Editor
    </p><p>
-     8. ________ A program, or image editor, allows you to use tools that stimulate painting on a digital image => Paint
+     8. ________ A program, or image editor, allows you to use tools that stimulate painting on a digital image <br><b>Ans... </b> Paint
    </p><p>
-     9. Which of the following program is not a popular professional image editor program? => Pagemaker
+     9. Which of the following program is not a popular professional image editor program? <br><b>Ans... </b> Pagemaker
    </p><p>
-     10. <img src="/img/spellingButton.jpg"> The figure represent => Spelling
+     10. <img src="/img/spellingButton.jpg"> The figure represent <br><b>Ans... </b> Spelling
      </p><p>
-     11. You can also move object from one layer to another by ________ objects from one layer and pasting them to another layer => Cutting
+     11. You can also move object from one layer to another by ________ objects from one layer and pasting them to another layer <br><b>Ans... </b> Cutting
      </p><p>
-       12. ________ menu contains the Find option in PageMaker => Utilities
+       12. ________ menu contains the Find option in PageMaker <br><b>Ans... </b> Utilities
      </p><p>
-       13. Paste special is inside => Edit menu
+       13. Paste special is inside <br><b>Ans... </b> Edit menu
      </p><p>
-       14. Word Counter option is under ________ menu => Utilities
+       14. Word Counter option is under ________ menu <br><b>Ans... </b> Utilities
      </p>
              
                       </div>
@@ -475,10 +476,7 @@ Click CLOSE<br>
               
               </div>
               
-           <hr>
-            
- 
-            
+        
             </div>
             
             </div>
