--- a/views/dca106onlineclasschapter11.ejs
+++ b/views/dca106onlineclasschapter11.ejs
@@ -236,23 +236,24 @@ from the Next style pull-down listing, make the desired selection.</em><br>
 The Style Palette appears.<br>
 2. Place the insertion point within or highlight the paragraph you want to apply the style to<br>
 3. From the Style Palette, select the appropriate style
- </p><p> 
+ </p>
+ <hr><p> 
 <b>OLD QUESTION:</b>
   </p><p>
-   1. One different between desktop publishing and word processing is => that desktop publishing allows you to create documentsthat
+   1. One different between desktop publishing and word processing is <br><b>Ans... </b> that desktop publishing allows you to create documentsthat
 have professionals-quality layout and types styles.
    </p><p>
-   2. Software that allows the user to create professional quality layout and type styles is =>  Desktop publishing
+   2. Software that allows the user to create professional quality layout and type styles is <br><b>Ans... </b>  Desktop publishing
   </p><p>
-    3. Header and footer styles ensure => Consistency
+    3. Header and footer styles ensure <br><b>Ans... </b> Consistency
    </p><p>
-   4. ________ Buttons: Apply Normal, Bold, Italic, Underline, Reverse or Strikethrough => Type Style
+   4. ________ Buttons: Apply Normal, Bold, Italic, Underline, Reverse or Strikethrough <br><b>Ans... </b> Type Style
    </p><p>
-   5. In the ________ dialog box, select the style that you would like to remove => Define style
+   5. In the ________ dialog box, select the style that you would like to remove <br><b>Ans... </b> Define style
    </p><p>
-     6. Editing style is done in exactly the same as ________ =>  Creating style
+     6. Editing style is done in exactly the same as ________ <br><b>Ans... </b>  Creating style
    </p><p>
-     7. In Page Maker when we copy a document, we _________ copy a style => Automatically
+     7. In Page Maker when we copy a document, we _________ copy a style <br><b>Ans... </b> Automatically
 
 </p>
                       </div>
@@ -413,10 +414,6 @@ have professionals-quality layout and types styles.
               
               </div>
               
-           <hr>
-            
- 
-            
             </div>
             
             </div>
