--- a/views/dca106onlineclasschapter12.ejs
+++ b/views/dca106onlineclasschapter12.ejs
@@ -275,40 +275,41 @@ placed in a new publication for printing.
 </li>
     
   </ol>
- </p><p> 
+ </p>
+ <hr><p> 
 <b>OLD QUESTION:</b>
   </p><p>
-   1. The full form of TOC is => Table of content
+   1. The full form of TOC is <br><b>Ans... </b> Table of content
    </p><p>
-   2. The ________ command is the name that implies to help you in linking chapter or parts of a document => Book
+   2. The ________ command is the name that implies to help you in linking chapter or parts of a document <br><b>Ans... </b> Book
   </p><p>
-    3. ________ is a shade of color, usually expressed as a percentage of a solid color => TINT
+    3. ________ is a shade of color, usually expressed as a percentage of a solid color <br><b>Ans... </b> TINT
    </p><p>
-   4. When the document names are displayed, click each document name and then insert button to add the name to the => Book publication
+   4. When the document names are displayed, click each document name and then insert button to add the name to the <br><b>Ans... </b> Book publication
    </p><p>
-   5. In a document setup if you type 10 in a start page option the numbering of document will start from => 10
+   5. In a document setup if you type 10 in a start page option the numbering of document will start from <br><b>Ans... </b> 10
    </p><p>
-     6. TOC stand for => Table of Content
+     6. TOC stand for <br><b>Ans... </b> Table of Content
      </p><p>
-     7. Make each occurrence of the individual words and phrases to include in the index using the => Index entry
+     7. Make each occurrence of the individual words and phrases to include in the index using the <br><b>Ans... </b> Index entry
      </p><p>
-     8. The short cut for zooming in is =>  Ctrl + Plus
+     8. The short cut for zooming in is <br><b>Ans... </b>  Ctrl + Plus
      </p><p>
-     9. To bring text from back to front, press => Ctrl + Shift + }
+     9. To bring text from back to front, press <br><b>Ans... </b> Ctrl + Shift + }
       </p><p>
-     10. The shortcut key for current page is => Alt + Ctrl + G
+     10. The shortcut key for current page is <br><b>Ans... </b> Alt + Ctrl + G
       </p><p>
-     11. To sent text from front to back, press => Shift + Ctrl + {
+     11. To sent text from front to back, press <br><b>Ans... </b> Shift + Ctrl + {
       </p><p>
-     12. To cycle the units of measure through inches, mm, Cicero and Picas, use => Ctrl + Alt + M
+     12. To cycle the units of measure through inches, mm, Cicero and Picas, use <br><b>Ans... </b> Ctrl + Alt + M
       </p><p>
-     13. The full form of RIP is => Raster Image Processor
+     13. The full form of RIP is <br><b>Ans... </b> Raster Image Processor
      </p><p>
-     14. The shortcut to shrinks the page to a postage-stamp size, and show the entire width of the paste board is => Shift + Ctrl + 0
+     14. The shortcut to shrinks the page to a postage-stamp size, and show the entire width of the paste board is <br><b>Ans... </b> Shift + Ctrl + 0
      </p><p>
-     15. What type of printing is done when using CMYK? => Process color
+     15. What type of printing is done when using CMYK? <br><b>Ans... </b> Process color
      </p><p>
-     16. Red, yellow, and blue are what type of colors? => Primary <br>
+     16. Red, yellow, and blue are what type of colors? <br><b>Ans... </b> Primary <br>
      
      <em>Red, blue and yellow would be the primary colors if we are talking about colors in terms of paint, dyes and pigments. Red, green and blue are the primary colors if talking about additive color mixing.</em>
 </p>
@@ -473,10 +474,7 @@ placed in a new publication for printing.
               
               </div>
               
-           <hr>
-            
- 
-            
+       
             </div>
             
             </div>
