--- a/views/dca106onlineclasschapter13.ejs
+++ b/views/dca106onlineclasschapter13.ejs
@@ -249,34 +249,35 @@ To separate text from a frame<br>
 
 1. Click the frame with the Pointer tool.<br>
 2. Choose Element > Frame > Delete Content in the menu bar. The text will not appear in the frame.             
-</p><p> 
+</p>
+<hr><p> 
 <b>OLD QUESTION:</b>
   </p><p>
-   1. To set the frame options, press => Alt + Ctrl + F
+   1. To set the frame options, press <br><b>Ans... </b> Alt + Ctrl + F
    </p><p>
-   2. The shortcut key of Go to next frame in PageMaker => Ctrl + Alt + ] 
+   2. The shortcut key of Go to next frame in PageMaker <br><b>Ans... </b> Ctrl + Alt + ] 
   </p><p>
-    3. ________ is an area on the PC screen that acts as a space holder for text or a graphic => frame
+    3. ________ is an area on the PC screen that acts as a space holder for text or a graphic <br><b>Ans... </b> frame
    </p><p>
-   4. When a frame is attach to the text or text is attach to the frame they are still ________ object => Separate
+   4. When a frame is attach to the text or text is attach to the frame they are still ________ object <br><b>Ans... </b> Separate
    </p><p>
-   5. Frame option dialog box is in ________ menu => Element
+   5. Frame option dialog box is in ________ menu <br><b>Ans... </b> Element
    </p><p>
-     6. The option which determine the distance between the frame and the graphic is ________ => Inset
+     6. The option which determine the distance between the frame and the graphic is ________ <br><b>Ans... </b> Inset
      </p><p>
-     7. Oval tool creates oval and ________ frames for the text or image => Circular
+     7. Oval tool creates oval and ________ frames for the text or image <br><b>Ans... </b> Circular
      </p><p>
-       8. An area on the PC screen that acts as a place holder for text of graphic. It may or may not have a border => Frame
+       8. An area on the PC screen that acts as a place holder for text of graphic. It may or may not have a border <br><b>Ans... </b> Frame
        </p><p>
-         9. Eclipse frame tool is used to draw => Circle
+         9. Eclipse frame tool is used to draw <br><b>Ans... </b> Circle
          </p><p>
-           10. In the PageMaker you can use any of the frame shapes to enclose attached text, the most common choice is => Rectangle
+           10. In the PageMaker you can use any of the frame shapes to enclose attached text, the most common choice is <br><b>Ans... </b> Rectangle
            </p><p>
-             11. Alt + Ctrl + F is the shortcut key for => Frame option
+             11. Alt + Ctrl + F is the shortcut key for <br><b>Ans... </b> Frame option
           </p><p>   
              12. We can use any of the models to create a process color, but PageMaker
 will convert those values to the approximate ________ values when we
-print separations or color composites => CMYK
+print separations or color composites <br><b>Ans... </b> CMYK
 </p>
                       </div>
                   
@@ -435,10 +436,7 @@ print separations or color composites => CMYK
               
               </div>
               
-           <hr>
-            
- 
-            
+         
             </div>
             
             </div>
