--- a/views/dca106onlineclasschapter14.ejs
+++ b/views/dca106onlineclasschapter14.ejs
@@ -226,34 +226,36 @@ By default layers are named according to the order in which they were created. <
 
 3. Click OK.
 
- </p><p> 
+ </p>
+ <hr>
+ <p> 
 <b>OLD QUESTION:</b>
   </p><p>
-   1. If you press Ctrl+8 the following appears => Layers palette
+   1. If you press Ctrl+8 the following appears <br><b>Ans... </b> Layers palette
    </p><p>
-   2. The key to effectively use layers in PageMaker is the => Layers palette
+   2. The key to effectively use layers in PageMaker is the <br><b>Ans... </b> Layers palette
   </p><p>
-    3. ________ are similar to transparent sheets place on top of the other => Layers
+    3. ________ are similar to transparent sheets place on top of the other <br><b>Ans... </b> Layers
    </p><p>
-   4. You can also move object from one layer to another by ________ objects from one layer and pasting them to another layer => Cutting
+   4. You can also move object from one layer to another by ________ objects from one layer and pasting them to another layer <br><b>Ans... </b> Cutting
    </p><p>
-   5. Second level menu is called => Submenu
+   5. Second level menu is called <br><b>Ans... </b> Submenu
    </p><p>
-   6. ________ is to take out the colouring option of the text or object => Ctrl + J
+   6. ________ is to take out the colouring option of the text or object <br><b>Ans... </b> Ctrl + J
    </p><p>
-    7. Ctrl + U => Fill and Stroke option (Drawing or frame-ah click nung la, fill and stroke option a lo chhuak ang)
+    7. Ctrl + U <br><b>Ans... </b> Fill and Stroke option (Drawing or frame-ah click nung la, fill and stroke option a lo chhuak ang)
    </p><p>
-    8. In text flow option, the first icon is called => Column break.
+    8. In text flow option, the first icon is called <br><b>Ans... </b> Column break.
     </p><p>
-    9. Display the page at higher magnification => Ctrl + +
+    9. Display the page at higher magnification <br><b>Ans... </b> Ctrl + +
     </p><p>
-    10. ________ is correct to last earlier version => Revert
+    10. ________ is correct to last earlier version <br><b>Ans... </b> Revert
     </p><p>
-    11. To change the text to capital we have to press ________ => Ctrl+ K
+    11. To change the text to capital we have to press ________ <br><b>Ans... </b> Ctrl+ K
     </p><p>
-    12. Shortcut key for Character Specification is ________ => Ctrl + T
+    12. Shortcut key for Character Specification is ________ <br><b>Ans... </b> Ctrl + T
     </p><p>
-    13. Restore box is on the ________ of the closed box => Left
+    13. Restore box is on the ________ of the closed box <br><b>Ans... </b> Left
 </p>
              
                       </div>
@@ -414,10 +416,7 @@ By default layers are named according to the order in which they were created. <
               
               </div>
               
-           <hr>
-            
- 
-            
+         
             </div>
             
             </div>
