--- a/views/dca106onlineclasschapter2.ejs
+++ b/views/dca106onlineclasschapter2.ejs
@@ -247,62 +247,62 @@ whether you want them to appear before or after the current page <br>
 3. For example, if you want to remove page 7 only, you would fill in: Remove page 7 through 7 <br>
 4. To confirm that you want to remove those pages, click OK
                       </p>
-             
+             <hr>
     <p>
  <b>OLD QUESTION:</b>
   </p><p>
-   1. In PageMaker recent file can be open through => File menu > Recent publications
+   1. In PageMaker recent file can be open through <br><b>Ans... </b> File menu > Recent publications
    </p><p>
-   2. To create new document, the default orientation is => Tall (Pagemaker-ah chuan portrait hi tall an ti a, landscape hi wide an ti.)
+   2. To create new document, the default orientation is <br><b>Ans... </b> Tall (Pagemaker-ah chuan portrait hi tall an ti a, landscape hi wide an ti.)
   </p><p>
-    3. When starting with a new document, you will see a blank page with/without margin guides set to a size specified in the ________ dialog box => Document Setup (Page setup an ti bawk)
+    3. When starting with a new document, you will see a blank page with/without margin guides set to a size specified in the ________ dialog box <br><b>Ans... </b> Document Setup (Page setup an ti bawk)
    </p><p>
-   4. The Save and _______ commands allow you to store your active publication => Save as.
+   4. The Save and _______ commands allow you to store your active publication <br><b>Ans... </b> Save as.
    </p><p>
-   5. PageMaker publications can be outputted to high-end or low-end printers, saved as HTML files, and may even be saved as PDF
+   5. PageMaker publications <br><b>Ans... </b> can be outputted to high-end or low-end printers, saved as HTML files, and may even be saved as PDF
 files for placement in other applications
 </p><p>
-6. Shift + Ctrl + S is same as => Save as
+6. Shift + Ctrl + S is same as <br><b>Ans... </b> Save as
 </p><p>
-7. The shortcut key to save a PageMaker file => Ctrl + S
+7. The shortcut key to save a PageMaker file <br><b>Ans... </b> Ctrl + S
 </p><p>
-8. The figure represents <img src="/img/save.jpg"> => Save button
+8. The figure represents <img src="/img/save.jpg"> <br><b>Ans... </b> Save button
 
 </p><p>
-  9. We can change the margin of an existing file, from ________ dialog box => Document Setup
+  9. We can change the margin of an existing file, from ________ dialog box <br><b>Ans... </b> Document Setup
   </p><p>
-    10. Distiller is a program that comes with => Pagemaker
+    10. Distiller is a program that comes with <br><b>Ans... </b> Pagemaker
     </p><p>
-      11. The maximum number of page that we can insert in single publication is => 999
+      11. The maximum number of page that we can insert in single publication is <br><b>Ans... </b> 999
     </p><p>
-      12. You can insert a picture in PageMaker using => Picture palette
+      12. You can insert a picture in PageMaker using <br><b>Ans... </b> Picture palette
     </p><p>
-      13. In document setup which one indicates the overall width and height of the paper? => Dimensions
+      13. In document setup which one indicates the overall width and height of the paper? <br><b>Ans... </b> Dimensions
 
     </p><p>
-      14. The default page dimensions in PageMaker is => 8.5 X 11 inches
+      14. The default page dimensions in PageMaker is <br><b>Ans... </b> 8.5 X 11 inches
     </p><p>
-      15. The default page size in PageMaker is => Letter
+      15. The default page size in PageMaker is <br><b>Ans... </b> Letter
     </p><p>
-      16. The distance between the text and the paper edge is => margin
+      16. The distance between the text and the paper edge is <br><b>Ans... </b> margin
     </p><p>
-      17. When line of text are straight on the left and right margins, such as most newspaper columns, the text is => fully justified
+      17. When line of text are straight on the left and right margins, such as most newspaper columns, the text is <br><b>Ans... </b> fully justified
     </p><p>
-      18. We can see Left/ Right margin when ________ option is off => Double-sided.
+      18. We can see Left/ Right margin when ________ option is off <br><b>Ans... </b> Double-sided.
     </p><p>
-      19. We can change the margin of an existing file, from ________ dialog box => Document Setup
+      19. We can change the margin of an existing file, from ________ dialog box <br><b>Ans... </b> Document Setup
     </p><p>
-      20. Ctrl + M is the shortcut key of => Paragraph
+      20. Ctrl + M is the shortcut key of <br><b>Ans... </b> Paragraph
       </p><p>
-        21. When a double-sided as selected, margin are set as => Outside and Inside
+        21. When a double-sided as selected, margin are set as <br><b>Ans... </b> Outside and Inside
         </p><p>
-          22. Printed areas that extend beyond the trim marks of the page is => Bleed
+          22. Printed areas that extend beyond the trim marks of the page is <br><b>Ans... </b> Bleed
           </p><p>
-            23. To change current paper size is => File menu > Document setup
+            23. To change current paper size is <br><b>Ans... </b> File menu > Document setup
             </p><p>
-            24. The father of publishing was called => Aldus Manucius
+            24. The father of publishing was called <br><b>Ans... </b> Aldus Manucius
             </p><p>
-            25. Dimension of A4 size page is => 210 x 297mm
+            25. Dimension of A4 size page is <br><b>Ans... </b> 210 x 297mm
   </p>           
              
              
@@ -482,10 +482,7 @@ files for placement in other applications
               
               </div>
               
-           <hr>
-            
- 
-            
+          
             </div>
             
             </div>
