--- a/views/dca106onlineclasschapter3.ejs
+++ b/views/dca106onlineclasschapter3.ejs
@@ -271,62 +271,62 @@ Line tool, Rectangle tool, Ellipse tool and Polygon tool are four main drawing t
 <br>
 5. The rectangle has been filled with the colour.
 </p>
-
+<hr>
  <p>
  <b>OLD QUESTION:</b>
   </p><p>
-   1. _________ is used to draw rectangle and square => Rectangle tool
+   1. _________ is used to draw rectangle and square <br><b>Ans... </b> Rectangle tool
    </p><p>
-   2. Use ________ to select any kind of object on the page => Pointer tool
+   2. Use ________ to select any kind of object on the page <br><b>Ans... </b> Pointer tool
   </p><p>
-    3. Oval tool creates oval and ________ frames for the text or image => Circular
+    3. Oval tool creates oval and ________ frames for the text or image <br><b>Ans... </b> Circular
    </p><p>
    4. An area on the PC screen that acts as a place holder for text of graphic. It
-may or may not have a border => Frame
+may or may not have a border <br><b>Ans... </b> Frame
    </p><p>
-   5. Eclipse frame tool is used to draw => Circle
+   5. Eclipse frame tool is used to draw <br><b>Ans... </b> Circle
 </p><p>
 6. . In the PageMaker you can use any of the frame shapes to enclose
-attached text, the most common choice is => Rectangle
+attached text, the most common choice is <br><b>Ans... </b> Rectangle
 </p><p>
-  7. By double clicking rectangle tool the following box appear => Rounded Corners
+  7. By double clicking rectangle tool the following box appear <br><b>Ans... </b> Rounded Corners
   </p><p>
-    8. ________ tool is used to draw star shaped objects => Polygon
+    8. ________ tool is used to draw star shaped objects <br><b>Ans... </b> Polygon
     </p><p>
-      9. While drawing polygon a value 0% represent => No Star
+      9. While drawing polygon a value 0% represent <br><b>Ans... </b> No Star
       </p><p>
-        10. We can draw maximum ________ sided Polygon with the help of Polygon tool in PageMaker => 100
+        10. We can draw maximum ________ sided Polygon with the help of Polygon tool in PageMaker <br><b>Ans... </b> 100
         </p><p>
-          11. Fill and stroke shortcut is => Ctrl + U
+          11. Fill and stroke shortcut is <br><b>Ans... </b> Ctrl + U
           </p><p>
-            12. The tool to draw horizontal lines, vertical lines or lines at 45° is => Constrained Line Tool
+            12. The tool to draw horizontal lines, vertical lines or lines at 45° is <br><b>Ans... </b> Constrained Line Tool
             </p><p>
-              13. In PageMaker stroke option is in ________ menu => Element
+              13. In PageMaker stroke option is in ________ menu <br><b>Ans... </b> Element
               </p><p>
-                14. Maximum Stroke weight is ________ in PageMaker => 800
+                14. Maximum Stroke weight is ________ in PageMaker <br><b>Ans... </b> 800
                 </p><p>
-                  15. To quickly paste copies of an object at a specific offset, that is at a specific distance from the original copy, press => Ctrl + Alt + V
+                  15. To quickly paste copies of an object at a specific offset, that is at a specific distance from the original copy, press <br><b>Ans... </b> Ctrl + Alt + V
                    </p><p>   
-                  16. When a frame is attach to the text or text is attach to the frame they are still ________ object => Separate
+                  16. When a frame is attach to the text or text is attach to the frame they are still ________ object <br><b>Ans... </b> Separate
                   </p><p>
-17. PageMaker consider a block of text as an => Object
+17. PageMaker consider a block of text as an <br><b>Ans... </b> Object
 </p><p>
-  18. Cropping tool is used to delete unwanted/ wanted part of an => Image
+  18. Cropping tool is used to delete unwanted/ wanted part of an <br><b>Ans... </b> Image
   </p><p>
-    19. ________ is combining several object as one object => Grouping
+    19. ________ is combining several object as one object <br><b>Ans... </b> Grouping
     </p><p>
-      20. <img src="/img/rotatingObject.jpg"> The figure is used for => Rotating Object
+      20. <img src="/img/rotatingObject.jpg"> The figure is used for <br><b>Ans... </b> Rotating Object
     </p><p>
-      21. Ctrl+] is used to => Bring object to the front
+      21. Ctrl+] is used to <br><b>Ans... </b> Bring object to the front
     </p><p>
-      22. ________is use to select, move and size text objects and graphics => Pointer tool
+      22. ________is use to select, move and size text objects and graphics <br><b>Ans... </b> Pointer tool
     </p><p>
-      23. To delete unwanted parts of an image => Cropping
+      23. To delete unwanted parts of an image <br><b>Ans... </b> Cropping
       </p><p>
       24. To quickly paste copies of an object at a specific offset, that is at a
-specific distance from the original copy, press => Ctrl + Alt + V
+specific distance from the original copy, press <br><b>Ans... </b> Ctrl + Alt + V
 </p><p>
-25. ________ is the fastest way to place a text on a page => Autoflow text
+25. ________ is the fastest way to place a text on a page <br><b>Ans... </b> Autoflow text
     </p>
 
                     </div>
@@ -504,10 +504,7 @@ specific distance from the original copy, press => Ctrl + Alt + V
               
               </div>
               
-           <hr>
-            
- 
-            
+         
             </div>
             
             </div>
