--- a/views/dca106onlineclasschapter4.ejs
+++ b/views/dca106onlineclasschapter4.ejs
@@ -273,44 +273,43 @@ click the pointer tool in the toolbox; no text is deleted.
 3. Click on a spot on the document to place your text. The text will be placed automatically, flowing from one column or page to the next.<br> 
 4. PageMaker will add more pages as needed.
 </p>
-
+<hr>
 <p>
  <b>OLD QUESTION:</b>
   </p><p>
-   1. We get Autoflow option in ________ menu => Layout
+   1. We get Autoflow option in ________ menu <br><b>Ans... </b> Layout
    </p><p>
-   2. ________ works best for the initial placement of a large story that makes many pages => Story Editor
+   2. ________ works best for the initial placement of a large story that makes many pages <br><b>Ans... </b> Story Editor
 
   </p><p>
-    3. ________ is the fastest way to place text on the page => Autoflow
+    3. ________ is the fastest way to place text on the page <br><b>Ans... </b> Autoflow
    </p><p>
-   4. PageMaker consider a block of text as an _________ => Object
+   4. PageMaker consider a block of text as an _________ <br><b>Ans... </b> Object
    </p><p>
-   5. The maximum size of a single text block is little more than => 20" x 20"
+   5. The maximum size of a single text block is little more than <br><b>Ans... </b> 20" x 20"
    
    </p><p>
-     6. ________ are object, therefore they can be size and positioned like graphic object => Text blocks
+     6. ________ are object, therefore they can be size and positioned like graphic object <br><b>Ans... </b> Text blocks
      </p><p>
-       7. Once you create a story in a story editor, you have to place the story in the => Layout editor
+       7. Once you create a story in a story editor, you have to place the story in the <br><b>Ans... </b> Layout editor
        </p><p>
-         8. The PageMaker window is the working space for creating and producing => Document
+         8. The PageMaker window is the working space for creating and producing <br><b>Ans... </b> Document
          </p><p>
-           9. Title bar appears at the _______ of the PageMaker window => Top
+           9. Title bar appears at the _______ of the PageMaker window <br><b>Ans... </b> Top
            
            </p><p>
-   10. Multimedia can contain => graphics, animation, video, music and voice
+   10. Multimedia can contain <br><b>Ans... </b> graphics, animation, video, music and voice
 
    </p><p>
-   11. One difference between desktop publishing and word processing is
-that with desktop publishing you can mix text and graphics
+   11. One difference between desktop publishing and word processing is that <br><b>Ans... </b> with desktop publishing you can mix text and graphics
 
   </p><p>
-    12. PageMaker is an => Application software
+    12. PageMaker is an <br><b>Ans... </b> Application software
    </p><p>
-   13. One difference between desktop publishing and word processing is => that desktop publishing allows you to create documents that have
+   13. One difference between desktop publishing and word processing is <br><b>Ans... </b> that desktop publishing allows you to create documents that have
 professionals-quality layout and types styles
    </p><p>
-   14. What is Desktop Publishing => An application software like PageMaker
+   14. What is Desktop Publishing <br><b>Ans... </b> An application software like PageMaker
            
 </p>
              
@@ -488,10 +487,7 @@ professionals-quality layout and types styles
               
               </div>
               
-           <hr>
-            
- 
-            
+         
             </div>
             
             </div>
