--- a/views/dca106onlineclasschapter5.ejs
+++ b/views/dca106onlineclasschapter5.ejs
@@ -279,50 +279,51 @@ all around</em> <br>
 2. From the Element menu select Text Wrap… The Text Wrap dialog box appears on the screen.<br>
 3. Select no wrap icon<br>
 4. Click OK
- </p>  <p>
+ </p> 
+ <hr><p>
  <b>OLD QUESTION:</b>
   </p><p>
-   1. The cropping tool is used to trim any ________ graphics => imported
+   1. The cropping tool is used to trim any ________ graphics <br><b>Ans... </b> imported
 
    </p><p>
-   2. We get 'High Resolution' option from ________ dialog box => Preference
+   2. We get 'High Resolution' option from ________ dialog box <br><b>Ans... </b> Preference
 
   </p><p>
-    3. We can import graphics through ________ option => Place
+    3. We can import graphics through ________ option <br><b>Ans... </b> Place
    </p><p>
-   4. Text wrap cannot be used in case of ________ graphics => Inline
+   4. Text wrap cannot be used in case of ________ graphics <br><b>Ans... </b> Inline
    </p><p>
-   5. ________ is an area on the PC screen that acts as a space holder for text or a graphic => frame
+   5. ________ is an area on the PC screen that acts as a space holder for text or a graphic <br><b>Ans... </b> frame
    
    </p><p>
-     6. The option which determine the distance between the frame and the graphic is ________ => Inset
+     6. The option which determine the distance between the frame and the graphic is ________ <br><b>Ans... </b> Inset
      </p><p>
-       7. <img src="/img/zoomTool.jpg">The figure is used to => Zoom graphic
+       7. <img src="/img/zoomTool.jpg">The figure is used to <br><b>Ans... </b> Zoom graphic
        </p><p>
-         8. ________ trims away a portion of the graphic, rather than reducing the size of the graphic => Cropping
+         8. ________ trims away a portion of the graphic, rather than reducing the size of the graphic <br><b>Ans... </b> Cropping
          </p><p>
-           9. We can add graphics document to a PageMaker file
+           9. We can add graphics document to a <br><b>Ans... </b> PageMaker file
            </p><p>   
-           10. Graphics programs widely used in the graphics arts profession include => Desktop publishing programs, image editors and
+           10. Graphics programs widely used in the graphics arts profession include <br><b>Ans... </b> Desktop publishing programs, image editors and
 illustration programs
           </p><p>
-    11. ________ is use to select, move and size text objects and graphics => Pointer tool     
+    11. ________ is use to select, move and size text objects and graphics <br><b>Ans... </b> Pointer tool     
             </p><p>
-    12. Cropping trims away the portion of the graphic, rather than reducing the size of the graphic   
+    12. Cropping <br><b>Ans... </b> trims away the portion of the graphic, rather than reducing the size of the graphic   
               </p><p>
-     13. An area on the PC screen that acts as a place holder for text of graphic. It may or may not have a border => Frame
+     13. An area on the PC screen that acts as a place holder for text of graphic. It may or may not have a border <br><b>Ans... </b> Frame
                 </p><p>
-      14. The command controls the way text flows around an independent graphic element => Text wrap
+      14. The command controls the way text flows around an independent graphic element <br><b>Ans... </b> Text wrap
                   </p><p>
-        15. <img src="/img/crop.jpg"> The figure is used to => Crop graphic        
+        15. <img src="/img/crop.jpg"> The figure is used to <br><b>Ans... </b> Crop graphic        
                     </p><p>
-      16. ________ are object, therefore they can be size and positioned like graphic object => Text blocks
+      16. ________ are object, therefore they can be size and positioned like graphic object <br><b>Ans... </b> Text blocks
       </p><p>
-        17. A special effect in which one image seems to melt into another is referred to as => morphing
+        17. A special effect in which one image seems to melt into another is referred to as <br><b>Ans... </b> morphing
       </p><p>
-        18. ________ are non-printing lines which help you in placing the object on your publication page => Ruler guide
+        18. ________ are non-printing lines which help you in placing the object on your publication page <br><b>Ans... </b> Ruler guide
       </p><p>
-        19. Text wrap command was on => Element
+        19. Text wrap command was on <br><b>Ans... </b> Element
                       </p> 
            
            
@@ -503,10 +504,6 @@ illustration programs
               
               </div>
               
-           <hr>
-            
- 
-            
             </div>
             
             </div>
