--- a/views/dca106onlineclasschapter6.ejs
+++ b/views/dca106onlineclasschapter6.ejs
@@ -248,40 +248,41 @@ To do this, select it and choose one of the Bring or Send options on the Element
 <img src="/img/arrangeObject.jpg" class="float-end img-fluid ps-2 pb-2" width="auto" height="auto" alt="arrangeObject" />
 <figcaption class="figure-caption ps-2 text-danger"> Stacking Order of Object </figcaption>
 </figure> 
- </p>  <p>
+ </p> 
+ <hr><p>
  <b>OLD QUESTION:</b>
   </p><p>
    1. Use the
 toggling buttons to choose the Type style, Case, Position, Type Size,
-Leading, Expert Tracking, Horizontal Scale, Kerning, and Baseline Shift => Control palette
+Leading, Expert Tracking, Horizontal Scale, Kerning, and Baseline Shift <br><b>Ans... </b> Control palette
    </p><p>
-   2. To show control palette, press =>  Shift+tab
+   2. To show control palette, press <br><b>Ans... </b>  Shift+tab
   </p><p>
-    3. To show ________ is window > show control palette => Control palette
+    3. To show ________ is window > show control palette <br><b>Ans... </b> Control palette
    </p><p>
-   4. There are ________ types of view in Control palette => 2
+   4. There are ________ types of view in Control palette <br><b>Ans... </b> 2
    </p><p>
-   5. Skewing and reflecting are available only on the => Control palette
+   5. Skewing and reflecting are available only on the <br><b>Ans... </b> Control palette
    </p><p>
-     6. Case button is in => Control palette
+     6. Case button is in <br><b>Ans... </b> Control palette
    </p><p>
-     7. Preference command is mainly used to change the measurement unit.
+     7. Preference command <br><b>Ans... </b> is mainly used to change the measurement unit.
    </p><p>
-     8. In PageMaker the default measurement is => Inches
+     8. In PageMaker the default measurement is <br><b>Ans... </b> Inches
    </p><p>
      9. Rearranging the order of the document page, like page 3 can become
-page 7 etc is done in => Sorting pages
+page 7 etc is done in <br><b>Ans... </b> Sorting pages
    </p><p>
-     10. ________ is combining several object as one object => Grouping
+     10. ________ is combining several object as one object <br><b>Ans... </b> Grouping
    </p><p>
-     11. Given a standard tri-fold brochure with ¾" margins (top, bottom, left and right), what size gutters in inches are needed in following layout rules? => 1½
+     11. Given a standard tri-fold brochure with ¾" margins (top, bottom, left and right), what size gutters in inches are needed in following layout rules? <br><b>Ans... </b> 1½
    </p><p>
-     12. Subscript character ________ the base line => Drop below
+     12. Subscript character ________ the base line <br><b>Ans... </b> Drop below
    </p><p>
-     13. The font type like Normal, bold, italic, underline etc are called ________ => Type style
+     13. The font type like Normal, bold, italic, underline etc are called ________ <br><b>Ans... </b> Type style
    </p><p>
      14. In a document setup if you type 10 in a start page option the numbering
-of document will start from => 10
+of document will start from <br><b>Ans... </b> 10
    </p>
 
 
@@ -462,10 +463,7 @@ of document will start from => 10
               
               </div>
               
-           <hr>
-            
- 
-            
+         
             </div>
             
             </div>
