--- a/views/dca106onlineclasschapter8.ejs
+++ b/views/dca106onlineclasschapter8.ejs
@@ -274,43 +274,45 @@ Master is applied to all pages in your initial publication.<br>
 3. Go to palette pop-pu menu, click apply<br>
 4. In apply master, type page number in page range Eg., 4-10<br>
 5. Click apply button<br>
-</p><p>
+</p>
+<hr>
+<p>
  <b>OLD QUESTION:</b>
   </p><p>
-   1. Master page is common to all pages coming under it.
+   1. Master page <br><b>Ans... </b> is common to all pages coming under it.
    </p><p>
-   2. A design template the defines the overall appearance of every page of a printed document is => Master Page
+   2. A design template the defines the overall appearance of every page of a printed document is <br><b>Ans... </b> Master Page
   </p><p>
-    3. When creating a master page we can specify whether we want single page or ________ => Double page
+    3. When creating a master page we can specify whether we want single page or ________ <br><b>Ans... </b> Double page
    </p><p>
-   4. We get facing Pages option active when ________ option is on => Double-sided
+   4. We get facing Pages option active when ________ option is on <br><b>Ans... </b> Double-sided
    </p><p>
-   5. Number of pages per publication range from => 1 to 999
+   5. Number of pages per publication range from <br><b>Ans... </b> 1 to 999
    </p><p>
-     6. In a long document feature the chapters are usually numbered with => Arabic numerals
+     6. In a long document feature the chapters are usually numbered with <br><b>Ans... </b> Arabic numerals
    </p><p>
-     7. The maximum number of page that we can insert in single publication is => 999
+     7. The maximum number of page that we can insert in single publication is <br><b>Ans... </b> 999
    </p><p>
-     8. ________ is that it adjusts the space between letters => Kerning
+     8. ________ is that it adjusts the space between letters <br><b>Ans... </b> Kerning
    </p><p>
-     9. Shortcut key for adding a page is => Ctrl + Shift + P <br> <em>Note: Page number hi Layout menu > Insert pages... atanga
+     9. Shortcut key for adding a page is <br><b>Ans... </b> Ctrl + Shift + P <br> <em>Note: Page number hi Layout menu > Insert pages... atanga
      belh tur a ni a. Ctrl + Shift + P hmang hian a page a belh ve thei tho a, Document setup a lo chhuak ang a, tah chuan number of page tihah
      page a belh thei a ni.</em>
    </p><p>
-     10. Software that allows the user to create professional quality layout and type styles is =>  desktop publishing
+     10. Software that allows the user to create professional quality layout and type styles is <br><b>Ans... </b>  desktop publishing
    </p><p>
-     11. Fill is in menu of PageMaker => Element
+     11. Fill is in menu of PageMaker <br><b>Ans... </b> Element
    </p><p>
      12. In desktop publishing, the correct order for the five stages of
-development is : =>  Thumbnails, rough layout, comprehensive layout, and final product
+development is : <br><b>Ans... </b>  Thumbnails, rough layout, comprehensive layout, and final product
    </p><p>
-     13. ________ is the placement of design items within the page => Page layout
+     13. ________ is the placement of design items within the page <br><b>Ans... </b> Page layout
    </p><p>
-     14. Page layout is the placement of design items within the => Page
+     14. Page layout is the placement of design items within the <br><b>Ans... </b> Page
    </p><p>
-     15. Paste special is inside => Edit menu
+     15. Paste special is inside <br><b>Ans... </b> Edit menu
    </p><p>
-     16. Which option is used to compress text horizontally by some percentage of the current size? => Kerning
+     16. Which option is used to compress text horizontally by some percentage of the current size? <br><b>Ans... </b> Kerning
    </p>
 
 
@@ -488,10 +490,7 @@ development is : =>  Thumbnails, rough layout, comprehensive layout, and final p
               
               </div>
               
-           <hr>
-            
- 
-            
+     
             </div>
             
             </div>
