--- a/views/dca106onlineclasschapter9.ejs
+++ b/views/dca106onlineclasschapter9.ejs
@@ -280,7 +280,9 @@ If the palette is in character view, click the paragraph – view button to disp
                             <figcaption class="figure-caption ps-2 text-danger"> Control Palette Paragraph Mode</figcaption>
                             </figure>
   
-  </p><p>
+  </p>
+  <hr>
+  <p>
  <b>OLD QUESTION:</b>
   </p><p>
    1. <br>
@@ -288,52 +290,52 @@ If the palette is in character view, click the paragraph – view button to disp
                             <img src="/img/controlPaletteOption.jpg" class="float-end img-fluid ps-2 pb-2" width="auto" height="auto" alt="controlPaletteOption" />
                             <figcaption class="figure-caption ps-2 text-danger"> Control Palette Option</figcaption>
                             </figure></p><p>
-   A. Leading option : Specify the number of spaces between lines <br>
-   B. Baseline-Shift option : Specify the vertical position of text relative to the baseline<br>
-   C. Font Size<br>
-   D. Horizontal Scale option : Type values from 5% to 250% in increments of tenth of 1% (Normal equals 100%, or the character width in the original font design)<br>
-   E. Expert Tracking option : Type or select the amount of space between letters and words.<br>
-   F. Kerning (Rotation) option : Increase, decrease, or view kerning increments.<br>
-   G. Apply button : Click to apply formatting to selected text<br>
-   H. Case button : Specify small caps or all caps, or deselect both buttons for normal case.<br>
-   I. Font<br>
-   J. Character-view and Paragraph view button : Toggle between to kinds of type settings.<br>
+   A. <em>Leading option</em> : Specify the number of spaces between lines <br>
+   B. <em>Baseline-Shift option</em> : Specify the vertical position of text relative to the baseline<br>
+   C. <em>Font Size</em><br>
+   D. <em>Horizontal Scale option</em> : Type values from 5% to 250% in increments of tenth of 1% (Normal equals 100%, or the character width in the original font design)<br>
+   E. <em>Expert Tracking option</em> : Type or select the amount of space between letters and words.<br>
+   F. <em>Kerning (Rotation) option</em> : Increase, decrease, or view kerning increments.<br>
+   G. <em>Apply button</em> : Click to apply formatting to selected text<br>
+   H. <em>Case button</em> : Specify small caps or all caps, or deselect both buttons for normal case.<br>
+   I. <em>Font</em><br>
+   J. <em>Character-view and Paragraph view button</em> : Toggle between to kinds of type settings.<br>
    </p><p>
-   2. <img src="/img/applyButton.jpg"> The figure represent => Apply Button
+   2. <img src="/img/applyButton.jpg"> The figure represent <br><b>Ans... </b> Apply Button
   </p><p>
-    3. Shortcut key for special character copyright symbol is => Alt + G
+    3. Shortcut key for special character copyright symbol is <br><b>Ans... </b> Alt + G
    </p><p>
-   4. Fonts, size, position etc. Were included in => Character Specification
+   4. Fonts, size, position etc. Were included in <br><b>Ans... </b> Character Specification
    </p><p>
-   5. Subscript character ________ the base line => Drop below
+   5. Subscript character ________ the base line <br><b>Ans... </b> Drop below
    </p><p>
-     6. The shortcut key for special character Em dash is => Alt + Shift + (-)
+     6. The shortcut key for special character Em dash is <br><b>Ans... </b> Alt + Shift + (-)
    </p><p>
-     7. <img src="/img/paragraphSymbol.jpg"> The figure represent => Paragraph symbol
+     7. <img src="/img/paragraphSymbol.jpg"> The figure represent <br><b>Ans... </b> Paragraph symbol
    </p><p>
-     8. Paragraph Specification dialog box provides ________ types of Alignment => 5
+     8. Paragraph Specification dialog box provides ________ types of Alignment <br><b>Ans... </b> 5
    </p><p>
-     9. The shortcut used in MS-Word to cut an selected paragraph is => Control + X
+     9. The shortcut used in MS-Word to cut an selected paragraph is <br><b>Ans... </b> Control + X
    </p><p>
-     10. Ctrl + M is the shortcut key of ________ => Paragraph
+     10. Ctrl + M is the shortcut key of ________ <br><b>Ans... </b> Paragraph
      </p><p>
-     11. The default Line style for paragraph is a _______ => One point line (Stroke style hi 1pt a ni. Line style hi stroke style a tihnaah ngai mai ang!)
+     11. The default Line style for paragraph is a _______ <br><b>Ans... </b> One point line (Stroke style hi 1pt a ni. Line style hi stroke style a tihnaah ngai mai ang!)
      </p><p>
-       12. Indents and Tabs option provides ________ types of tab => 4
+       12. Indents and Tabs option provides ________ types of tab <br><b>Ans... </b> 4
      </p><p>
-       13. To set the frame options, press => Alt + Ctrl + F
+       13. To set the frame options, press <br><b>Ans... </b> Alt + Ctrl + F
      </p><p>
-       14. <img src="/img/indentTabSymbol.jpg"> The figure represent => Tab
+       14. <img src="/img/indentTabSymbol.jpg"> The figure represent <br><b>Ans... </b> Tab
      </p><p>
-       15. . In PageMaker US English option is related to => Dictionary
+       15. . In PageMaker US English option is related to <br><b>Ans... </b> Dictionary
      </p><p>
-       16. Force justify is a ________ => Alignment
+       16. Force justify is a ________ <br><b>Ans... </b> Alignment
      </p><p>
-       17. We can set the value of maximum ________ lines for Widow Control => 3
+       17. We can set the value of maximum ________ lines for Widow Control <br><b>Ans... </b> 3
      </p><p>
-       18. ________ is a the space between two lines of type => Leading
+       18. ________ is a the space between two lines of type <br><b>Ans... </b> Leading
      </p><p>
-       19. Leading is the small amounts of space between lines of typeset text.
+       19. Leading <br><b>Ans... </b> is the small amounts of space between lines of typeset text.
    </p>
    
   
@@ -513,10 +515,7 @@ If the palette is in character view, click the paragraph – view button to disp
               
               </div>
               
-           <hr>
-            
- 
-            
+        
             </div>
             
             </div>
