--- a/views/dca1semOnlineLessonChapter1.ejs
+++ b/views/dca1semOnlineLessonChapter1.ejs
@@ -249,7 +249,7 @@
                         
                         </p>
                         
-                        <p><code>Computer Generations</code> -</p>
+                        <p><code>Computer Generations</code> -<br>
                         
                         
                         <ol>
@@ -266,69 +266,71 @@
                           
                           
                         </ol>
+                        </p>
+     <hr>
 <p>
   <b>OLD QUESTION:</b>
   </p><p>
-    1. Fourth Generation of computer are characterized by => ICs with VLSI Technology
+    1. Fourth Generation of computer are characterized by <br><b>Ans... </b> ICs with VLSI Technology
   </p><p>
-    2. Which of the following is not a Super computer? => Sony Series  { A. PARAM Series C. Anupam Series
+    2. Which of the following is not a Super computer? <br><b>Ans... </b> Sony Series <br> { A. PARAM Series C. Anupam Series
 B. Sony Series D. PACE Series }
 
   </p><p>
-    3. A common use of computers in offices is for => Word processing.
+    3. A common use of computers in offices is for <br><b>Ans... </b> Word processing.
   </p><p>
-    4. The computer does not have the following characteristic => Intelligent quotient { a) Intelligent quotient c) Speed
+    4. The computer does not have the following characteristic <br><b>Ans... </b> Intelligent quotient <br> { a) Intelligent quotient c) Speed
 b) Automatic d) Accuracy }
   </p><p>
-    5. Which is not a characteristic of computer? => Error Prone {
+    5. Which is not a characteristic of computer? <br><b>Ans... </b> Error Prone <br> {
 a) Error prone c) Versatility
 b) Speed d) Signal }
   </p><p>
-    6. Which of the following is characteristic of a computer? => Diligence {
+    6. Which of the following is characteristic of a computer? <br><b>Ans... </b> Diligence <br> {
 a) Integrity c) Strong Feeling
 b) Diligence d) Strong IQ }
   </p><p>
-    7. Which of the following is not the characteristic of a Computer => Strong IQ {
+    7. Which of the following is not the characteristic of a Computer <br><b>Ans... </b> Strong IQ <br> {
 a) Accuracy b) Versatility c) No Feeling d) Strong IQ }
   </p><p>
-    8. Charles Babbage develop Differential Engine in the year => 1822
+    8. Charles Babbage develop Differential Engine in the year <br><b>Ans... </b> 1822
   </p><p>
-    9. Who introduced Stored-program concept => John von Neumann
+    9. Who introduced Stored-program concept <br><b>Ans... </b> John von Neumann
   </p><p>
-    10. Who invented the first mechanical adding machine in 1642? => Blaise pascal
+    10. Who invented the first mechanical adding machine in 1642? <br><b>Ans... </b> Blaise pascal
   </p><p>
-    11. First Generation Computer falls in the year => 1942-1955
+    11. First Generation Computer falls in the year <br><b>Ans... </b> 1942-1955
   </p><p>
-    12. Computers are classified into how many generation? => 5
+    12. Computers are classified into how many generation? <br><b>Ans... </b> 5
   </p><p>
-    13. Second Generation Computer are made of => Transistors
+    13. Second Generation Computer are made of <br><b>Ans... </b> Transistors
     </p><p>
-    14. Third generation of computer falls between the period from => 1964-1975
+    14. Third generation of computer falls between the period from <br><b>Ans... </b> 1964-1975
     </p><p>
-    15. This generation is characterized by bulky and unreliable computers => 1<SUP>st</SUP>
+    15. This generation is characterized by bulky and unreliable computers <br><b>Ans... </b> 1<SUP>st</SUP>
     </p><p>
-    16. Unbundling of hardware and software took place in which generation? => 3<sup>rd</sup>
+    16. Unbundling of hardware and software took place in which generation? <br><b>Ans... </b> 3<sup>rd</sup>
     </p><p>
-      17. During which generation of computer thousands of vacuum tubes was used => 1st Generation
+    17. During which generation of computer thousands of vacuum tubes was used <br><b>Ans... </b> 1st Generation
     </p><p>
-      18. What difference does the 5th generation computer have from other generation computers? => Technological Advancement
-
+    18. What difference does the 5th generation computer have from other generation computers? <br><b>Ans... </b> Technological Advancement
     </p><p>
-      19. Computers in the present generation belong to the => Fifth Generation
+    19. Computers in the present generation belong to the <br><b>Ans... </b> Fifth Generation
     </p><p>
-      18. How was the generation of computer classified? => by the device used in memory and processor
+    18. How was the generation of computer classified? <br><b>Ans... </b> by the device used in memory and processor
     </p><p>
-      19. Graphical user Interface was introduces in ________ generation of computer => 4th Generation.
+    19. Graphical user Interface was introduces in ________ generation of computer <br><b>Ans... </b> 4th Generation.
     </p><p>
-      20. Third generations computer were first associated with => Integrated circuit
+    20. Third generations computer were first associated with <br><b>Ans... </b> Integrated circuit
     </p><p>
-      21. Software such as Windows were developed during => 4th generation
+    21. Software such as Windows were developed during <br><b>Ans... </b> 4th generation
     </p><p>
-      22. During which generation of computer magnetic core memories was replaced by semiconductor memories => 4th generation
-      </p><p>
-      23. Store concept was introduced in the late 1940s by John von Neumann.
-      </p><p>
-      24. In the 5th generation, VLSI technology became ULSI (Ultra Large Scale Integration) technology, resulting in the production of microprocessor chips having ten million electronic components.
+    22. During which generation of computer magnetic core memories was replaced by semiconductor memories <br><b>Ans... </b> 4th generation
+    </p><p>
+    23. Store concept was introduced in the late 1940s by <br><b>Ans... </b> John von Neumann.
+    </p><p>
+    24. ________ VLSI technology became ULSI (Ultra Large Scale Integration) technology, resulting in the production of microprocessor chips having ten million electronic components.
+    <br><b>Ans... </b> In the 5th generation
 </p>
 
                       
@@ -508,10 +510,6 @@ a) Accuracy b) Versatility c) No Feeling d) Strong IQ }
               
               </div>
               
-           <hr>
-            
- 
-            
             </div>
             
             </div>
