--- a/views/dca1semOnlineLessonChapter2.ejs
+++ b/views/dca1semOnlineLessonChapter2.ejs
@@ -235,46 +235,46 @@ single ASCII character, like "h". </p>
 <p><code>Output Unit</code> - The output unit would be composed of the devices that provide information back to
 the computer users. Examples are the Computer monitor and the computer printer. 
                       </p>
- 
+ <hr>
  <p>
   <b>OLD QUESTION:</b>
   </p><p>
     <img src="/img/bcoBlank.jpg"> 
   </p><p>
-    1. Storage unit is => 1
+    1. Storage unit is <br><b>Ans... </b> 1
   </p><p>
-    2. Control unit is => 4
+    2. Control unit is <br><b>Ans... </b> 4
   </p><p>
-    3. Output unit is => 9
+    3. Output unit is <br><b>Ans... </b> 9
   </p><p>
-    4. Input unit is => 8
+    4. Input unit is <br><b>Ans... </b> 8
   </p><p>
-    5. Arithmetic logic Unit is => 5
+    5. Arithmetic logic Unit is <br><b>Ans... </b> 5
   </p><p>
-    6. Information unit is => 10
+    6. Information unit is <br><b>Ans... </b> 10
   </p><p>
-    7. Primary Storage unit is => 3
+    7. Primary Storage unit is <br><b>Ans... </b> 3
   </p><p>
-    8. Secondary storage unit is => 2
+    8. Secondary storage unit is <br><b>Ans... </b> 2
   </p><p>
-    9. Data and input unit is => 7
+    9. Data and input unit is <br><b>Ans... </b> 7
   </p><p>
-    10. Central Processing unit is => 6
+    10. Central Processing unit is <br><b>Ans... </b> 6
     </p><p>
-    11. The dotted line indicates => The control exercised by control unit
+    11. The dotted line indicates <br><b>Ans... </b> The control exercised by control unit
   </p><p>
-    12. 1 Megabyte (MB) equals => 1048576 bytes
+    12. 1 Megabyte (MB) equals <br><b>Ans... </b> 1048576 bytes
   </p><p>
-    13. A half byte is known as => Nibble.
+    13. A half byte is known as <br><b>Ans... </b> Nibble.
   </p><p>
-    14. The term gigabyte refers to 1024 megabytes.
+    14. The term gigabyte refers to <br><b>Ans... </b> 1024 megabytes.
     </p><p>
-    15. A kilobytes (KB) equals => 1000 bytes 
+    15. A kilobytes (KB) equals <br><b>Ans... </b> 1000 bytes 
     <br>Note: <em>1000 bytes hi decimal conversion a ni a, 1024 bytes hi binary conversion a ni.</em>
     </p><p>
-      16. A clock speed of Computer is measured in => gigahertz
+      16. A clock speed of Computer is measured in <br><b>Ans... </b> gigahertz
     </p><p>
-      17. In which year BASIC was developed => 1964
+      17. In which year BASIC was developed <br><b>Ans... </b> 1964
 </p>
 
              
@@ -446,27 +446,18 @@ the computer users. Examples are the Computer monitor and the computer printer.
                       </div>
                
                   </div>
-                  
-                  
               
                 </div>
               
               </div>
-              
-           <hr>
-            
- 
             
             </div>
             
             </div>
- 
 
     </main>
     
 </div> <!--end of container-->
-
-
 
     <%- include('layouts/scripts') -%>
     
