--- a/views/dca1semOnlineLessonChapter3.ejs
+++ b/views/dca1semOnlineLessonChapter3.ejs
@@ -265,73 +265,74 @@ extremely fast memory type that acts as a buffer between RAM and the CPU.</p>
 <p><code>HIT/MISS:</code> When the CPU refers to memory and finds the word in cache, it is said to pro
 Otherwise, it is a miss. The performance of cache memory is frequently measured in terms of a quantity
 called hit ratio. Hit ratio = hit / (hit+miss)</p>
+           <hr>
  <p>
   <b>OLD QUESTION:</b>
   </p><p>
-    1. When entire CPU both CU and ALU is contained on a single chip called => Microprocessor
+    1. When entire CPU both CU and ALU is contained on a single chip called <br><b>Ans... </b> Microprocessor
   </p><p>
     2. Cache memory is an extremely fast small memory between CPU and main memory.
   </p><p>
     3. The CPU consists of the ALU and CU.
   </p><p>
-    4. A high speed buffer between the CPU and the Main memory is => Cache Memory
+    4. A high speed buffer between the CPU and the Main memory is <br><b>Ans... </b> Cache Memory
   </p><p>
-    5. When the entire CPU is contained on a single ship, it is called => Microprocessor
+    5. When the entire CPU is contained on a single ship, it is called <br><b>Ans... </b> Microprocessor
   </p><p>
-    6. In basic computer system CPU is formed by combination of => ALU & Control Unit
+    6. In basic computer system CPU is formed by combination of <br><b>Ans... </b> ALU & Control Unit
   </p><p>
     7. A special memory integrated in CPU which hold information on
-temporary basis is known as => Register
+temporary basis is known as <br><b>Ans... </b> Register
   </p><p>
-    8. The section of the CPU that selects, interprets and sees to the execution of program instructions => Control Unit
+    8. The section of the CPU that selects, interprets and sees to the execution of program instructions <br><b>Ans... </b> Control Unit
   </p><p>
     9. All units in a computer other than CPU are called components.
   </p><p>
-    10. Different type of PC chips are neatly assembled on a main circuit board called as => Motherboard
+    10. Different type of PC chips are neatly assembled on a main circuit board called as <br><b>Ans... </b> Motherboard
   </p><p>
-    11. The ALU of a computer normally contain a number of high speed storage element called registers
+    11. The ALU of a computer normally contain a number of high speed storage element called <br><b>Ans... </b> registers
   </p><p>
-    12. The register that holds the data temporarily is =>  memory buffer register
+    12. The register that holds the data temporarily is <br><b>Ans... </b>  memory buffer register
   </p><p>
-    13. Which of the following Register hold current instruction under execution => Instruction Register
+    13. Which of the following Register hold current instruction under execution <br><b>Ans... </b> Instruction Register
     </p><p>
-    14. The execution of instructions during data processing operation in a computer takes place in the => ALU
+    14. The execution of instructions during data processing operation in a computer takes place in the <br><b>Ans... </b> ALU
     </p><p>
-    15. Which of the following register hold the address of next instruction to be executed => Program Control Register
+    15. Which of the following register hold the address of next instruction to be executed <br><b>Ans... </b> Program Control Register
     </p><p>
-    16. A rate at which a computer read/ write data from/ to a memory is known as => Transfer rate
+    16. A rate at which a computer read/ write data from/ to a memory is known as <br><b>Ans... </b> Transfer rate
     </p><p>
-    17. Optical disk compared to magnetic disk => Slower data access speed
+    17. Optical disk compared to magnetic disk <br><b>Ans... </b> Slower data access speed
     </p><p>
-    18. Multiple processors are used through parallelism to upgrade performance of a computer. This technique is known as => Parallels computing
+    18. Multiple processors are used through parallelism to upgrade performance of a computer. This technique is known as <br><b>Ans... </b> Parallels computing
     </p><p>
-    19. A computer is often referred to as a ________ processor because it canstore, process and retrieved data whenever desired => Data
+    19. A computer is often referred to as a ________ processor because it canstore, process and retrieved data whenever desired <br><b>Ans... </b> Data
     </p><p>
     20. A common processor architecture are CISC, RISC and EPIC.
     </p><p>
-    21. The other name of the primary memory of a computer is => Main memory
+    21. The other name of the primary memory of a computer is <br><b>Ans... </b> Main memory
     </p><p>
     22. Which memory is non-volatile and maybe written only once? +> PROM
     </p><p>
-    23. PROM stand for => Programmable Read Only Memory
+    23. PROM stand for <br><b>Ans... </b> Programmable Read Only Memory
     </p><p>
-    24. Memory which is volatile and in which data is stored temporarily is => RAM
+    24. Memory which is volatile and in which data is stored temporarily is <br><b>Ans... </b> RAM
     </p><p>
-    25. If a storage unit can retain data even in case of power failure it is called => Non-Volatile storage
+    25. If a storage unit can retain data even in case of power failure it is called <br><b>Ans... </b> Non-Volatile storage
     </p><p>
-    26. If a memory has 1024 location the address rages from => 0 to 1023
+    26. If a memory has 1024 location the address rages from <br><b>Ans... </b> 0 to 1023
     </p><p>
-    27. Primary storage of a computer system is also known as => Main memory
+    27. Primary storage of a computer system is also known as <br><b>Ans... </b> Main memory
     </p><p>
-    28. Which of the following is the user programmed semiconductor memory? => EPROM
+    28. Which of the following is the user programmed semiconductor memory? <br><b>Ans... </b> EPROM
     </p><p>
     29. Secondary memory is much cheaper than primary memory.
     </p><p>
-    30. A memory in which information can be store and erased multiple time is => EEPROM
+    30. A memory in which information can be store and erased multiple time is <br><b>Ans... </b> EEPROM
     </p><p>
-    31. If a memory has 512 location the address ranges from =>  0 to 511
+    31. If a memory has 512 location the address ranges from <br><b>Ans... </b>  0 to 511
     </p><p>
-    32. Volatile Memory means => Loss data in case of power off
+    32. Volatile Memory means <br><b>Ans... </b> Loss data in case of power off
 </p>
 
              
@@ -509,11 +510,7 @@ temporary basis is known as => Register
                 </div>
               
               </div>
-              
-           <hr>
-            
- 
-            
+
             </div>
             
             </div>
