--- a/views/dca1semOnlineLessonChapter4.ejs
+++ b/views/dca1semOnlineLessonChapter4.ejs
@@ -267,38 +267,39 @@ has the ability to be electronically
 reprogrammed and erased. It is often
 found in USB flash drives, MP3 players,
 digital cameras and solid-state drives.</p>
+           <hr>
  <p>
   <b>OLD QUESTION:</b>
   </p><p>
-    1. Which is a sequential access device? => Magnetic Tape
+    1. Which is a sequential access device? <br><b>Ans... </b> Magnetic Tape
   </p><p>
-    2. Which access method is used for obtaining a record from a cassette tape? => Sequential
+    2. Which access method is used for obtaining a record from a cassette tape? <br><b>Ans... </b> Sequential
   </p><p>
-    3. Which of the following is the most popular direct access secondary storage device => Magnetic Disk
+    3. Which of the following is the most popular direct access secondary storage device <br><b>Ans... </b> Magnetic Disk
   </p><p>
-    4. Which one has the longest life span? => Magnetic drive
+    4. Which one has the longest life span? <br><b>Ans... </b> Magnetic drive
   </p><p>
-    5. Which types of mouse use photo detector => Optical mouse
+    5. Which types of mouse use photo detector <br><b>Ans... </b> Optical mouse
   </p><p>
-    6. Optical disk compared to magnetic disk => Slower data access speed
+    6. Optical disk compared to magnetic disk <br><b>Ans... </b> Slower data access speed
   </p><p>
-    7. Data backup is required to prevent data loss in the event of => Disk Crash, Hardware Malfunction, Virus attack, Natural Disaster
+    7. Data backup is required to prevent data loss in the event of <br><b>Ans... </b> Disk Crash, Hardware Malfunction, Virus attack, Natural Disaster
   </p><p>
-    8. For small backups we normally use => Flash drives
+    8. For small backups we normally use <br><b>Ans... </b> Flash drives
   </p><p>
-    9. A mouse can be connected through => Serial port, Wireless, USB port.
+    9. A mouse can be connected through <br><b>Ans... </b> Serial port, Wireless, USB port.
   </p><p>
-    10. Offline storage is used for transfer data between two computers which are not physically connected.
+    10. Offline storage <br><b>Ans... </b> is used for transfer data between two computers which are not physically connected.
   </p><p>
-    11. Which statement is true of flash drive? => Popular, Compatible, Portable.
+    11. Which statement is true of flash drive? <br><b>Ans... </b> Popular, Compatible, Portable.
   </p><p>
-    12. Where is the BIOS stored? => Flash memory chip
+    12. Where is the BIOS stored? <br><b>Ans... </b> Flash memory chip
   </p><p>
-    13. Access time means => Time required to locate and retrieved stored data
+    13. Access time means <br><b>Ans... </b> Time required to locate and retrieved stored data
     </p><p>
-    14. Full form of FAT is => File Allocation Table
+    14. Full form of FAT is <br><b>Ans... </b> File Allocation Table
     </p><p>
-    15. Full form of RAID is => Redundant Array of Inexpensive Disks / Redundant Array of Independent Disks
+    15. Full form of RAID is <br><b>Ans... </b> Redundant Array of Inexpensive Disks / Redundant Array of Independent Disks
 </p>
 
              
@@ -477,10 +478,7 @@ digital cameras and solid-state drives.</p>
               
               </div>
               
-           <hr>
-            
- 
-            
+    
             </div>
             
             </div>
