--- a/views/dca1semOnlineLessonChapter5.ejs
+++ b/views/dca1semOnlineLessonChapter5.ejs
@@ -310,70 +310,71 @@ speech synthesizer.
 combines basic sound units called phonemes. This is very useful for reading out text information to blind
 persons. 
 </p>
+           <hr>
 <p>
   <b>OLD QUESTION:</b>
   </p><p>
-    1. Which is a character input printer device => Drum printer <br> { a) Laser printer c) Dot-matrix printer b) Inkjet printer d) Drum printer }
+    1. Which is a character input printer device <br><b>Ans... </b> Drum printer <br> { a) Laser printer c) Dot-matrix printer b) Inkjet printer d) Drum printer }
 
   </p><p>
-    2. The process of entering data and instruction into a computer system is known as => Data entry
+    2. The process of entering data and instruction into a computer system is known as <br><b>Ans... </b> Data entry
   </p><p>
-    3. Units called ________ interfaces transform input signal to binary form => input
+    3. Units called ________ interfaces transform input signal to binary form <br><b>Ans... </b> input
   </p><p>
-    4. Which one is not an input device? => Printer <br> { a) Light pen c) Touch screen b) Scanner d) Printer }
+    4. Which one is not an input device? <br><b>Ans... </b> Printer <br> { a) Light pen c) Touch screen b) Scanner d) Printer }
   </p><p>
-    5. Data processing using computer consist of these activities => Capturing input, manipulating and managing output
+    5. Data processing using computer consist of these activities <br><b>Ans... </b> Capturing input, manipulating and managing output
   </p><p>
-    6. Which of the following is not input device? => Printer <br> { a) mouse c) Scanner b) Printer d) keyboard }
+    6. Which of the following is not input device? <br><b>Ans... </b> Printer <br> { a) mouse c) Scanner b) Printer d) keyboard }
   </p><p>
-    7. A device used for converting pictures, maps and drawings into digital form is known as => Digitizer
+    7. A device used for converting pictures, maps and drawings into digital form is known as <br><b>Ans... </b> Digitizer
   </p><p>
-    8. The evolution of objective answer paper is done using => OMR
+    8. The evolution of objective answer paper is done using <br><b>Ans... </b> OMR
   </p><p>
-    9. Which device is popularly used in shopping malls? => Bar-code reader
+    9. Which device is popularly used in shopping malls? <br><b>Ans... </b> Bar-code reader
   </p><p>
-    10. Bank Cheques utilizes => Magnetic Ink Character Recognition
+    10. Bank Cheques utilizes <br><b>Ans... </b> Magnetic Ink Character Recognition
   </p><p>
-    11. OMR => Optical Mark Reader
+    11. OMR <br><b>Ans... </b> Optical Mark Reader
   </p><p>
-    12. OCR stands for => Optical Character Reader
+    12. OCR stands for <br><b>Ans... </b> Optical Character Reader
   </p><p>
-    13. Which of the device is commonly used by Banking industry to process large volume of data => MICR Reader
+    13. Which of the device is commonly used by Banking industry to process large volume of data <br><b>Ans... </b> MICR Reader
     </p><p>
-    14. An ideal output device used by Architecture and Engineer for producing high precision is known as => Plotter
+    14. An ideal output device used by Architecture and Engineer for producing high precision is known as <br><b>Ans... </b> Plotter
     </p><p>
-    15. Most popular from of hard copy is obtained from => Printer
+    15. Most popular from of hard copy is obtained from <br><b>Ans... </b> Printer
     </p><p>
-    16. Which of the following provide us a screen with graphic icon or menus for user convenient => GUI
+    16. Which of the following provide us a screen with graphic icon or menus for user convenient <br><b>Ans... </b> GUI
     </p><p>
-    17. Which one is not system software => MS Office 10 <br> { a) MS Office 2010 c) Resource Monitor b) Windows 10 d) Even Viewer }
+    17. Which one is not system software <br><b>Ans... </b> MS Office 10 <br> { a) MS Office 2010 c) Resource Monitor b) Windows 10 d) Even Viewer }
     </p><p>
-    18. Which of the following peripherals cannot be attached to a personal computer? => Bus card <br> 
+    18. Which of the following peripherals cannot be attached to a personal computer? <br><b>Ans... </b> Bus card <br> 
 { a) Network Interface Card b) Bus Card b) Graphic Card d) Data Card }
     </p><p>
-    19. Full form of NIC is => Network Interface Card
+    19. Full form of NIC is <br><b>Ans... </b> Network Interface Card
     </p><p>
-    20. An example for non-impact printer is the => Laser <br> 
+    20. An example for non-impact printer is the <br><b>Ans... </b> Laser <br> 
 { a) Dot matrix c) Inkjet b) Laser d) Plotter }
     </p><p>
-    21. The dot per inch of an inkjet printer are _______ than a laser printer => Lower
+    21. The dot per inch of an inkjet printer are _______ than a laser printer <br><b>Ans... </b> Lower
     </p><p>
-    22. Which of the following is not an output device? => Digitizer <br>
+    22. Which of the following is not an output device? <br><b>Ans... </b> Digitizer <br>
 { a) Printer c) Monitor b) Digitizer d) Projector }
 </p><p>
-23. Most popular from of hard copy is obtained from => Printer
+23. Most popular from of hard copy is obtained from <br><b>Ans... </b> Printer
 </p><p>
-24. Which of the following printer if the fastest? => Laser printer <br>
+24. Which of the following printer if the fastest? <br><b>Ans... </b> Laser printer <br>
 { a) Inkjet c) Dot-matrix b) Drum d) laser printer }
 </p><p>
-25. The output quality of a printer is measured by dots per inch.
+25. The output quality of a printer is measured by <br><b>Ans... </b> dots per inch.
 </p><p>
-26. . Laser printer is a type of => Non-impact printer
+26. . Laser printer is a type of <br><b>Ans... </b> Non-impact printer
 </p><p>
-27. Which is a page printer => Laser printer <br>
+27. Which is a page printer <br><b>Ans... </b> Laser printer <br>
 Note: <em>A page printer is a computer printer which processes and prints a, whole page at a time.</em>
 </p><p>
-28. Which among the following printing device prints one character at a time => Dot-matrix printer <br>
+28. Which among the following printing device prints one character at a time <br><b>Ans... </b> Dot-matrix printer <br>
 { a) Plotter c) Dot-Matrix Printer b) Inkjet Printer d) Drum Printer }
 </p>
  
@@ -550,10 +551,7 @@ Note: <em>A page printer is a computer printer which processes and prints a, who
               
               </div>
               
-           <hr>
-            
- 
-            
+   
             </div>
             
             </div>
