--- a/views/dca1semOnlineLessonChapter6.ejs
+++ b/views/dca1semOnlineLessonChapter6.ejs
@@ -244,54 +244,52 @@ sits in the middle, between the
 operating system and applications.
 In general, middleware is a set of tools and data that helps applications use networked resources and
 services. </p>
-
+<hr>
 <p>
   <b>OLD QUESTION:</b>
   </p><p>
-    1. A set of one or more programs, which controls the operation of a computer is known as => System Software
+    1. A set of one or more programs, which controls the operation of a computer is known as <br><b>Ans... </b> System Software
   </p><p>
-    2. CASE => Computer aided Software Engineering
+    2. CASE <br><b>Ans... </b> Computer aided Software Engineering
   </p><p>
-    3. Spread sheet software is a type of application software.
+    3. Spread sheet software is a type of <br><b>Ans... </b> application software.
   </p><p>
-    4. Another name of Public Domain Software is => All of the above <br>
+    4. Another name of Public Domain Software is <br><b>Ans... </b> All of the above <br>
 { a) Freeware c) Open Source Software b) Shareware d) All of the above }
   </p><p>
-    5. Which of the following is not an application software? => Operating System <br>
+    5. Which of the following is not an application software? <br><b>Ans... </b> Operating System <br>
 { a) Spreadsheet software c) Operating System b) Graphic Software d) Database software }
   </p><p>
-    6. The operating system is a => System Software
+    6. The operating system is a <br><b>Ans... </b> System Software
   </p><p>
-    7. Firmware is => Software and Hardware
+    7. Firmware is <br><b>Ans... </b> Software and Hardware
   </p><p>
-    8. Which type of software is most expensive? => Patented Software
+    8. Which type of software is most expensive? <br><b>Ans... </b> Patented Software
   </p><p>
-    9. Which of the following software is not among Application Software =>  Utility Program Software <br>
+    9. Which of the following software is not among Application Software <br><b>Ans... </b>  Utility Program Software <br>
 { a) Word Processing Software c) Personal Assistance Software b) Utility Program Software d) Spreadsheet Software }
   </p><p>
-    10. A software package is => Group of programs that solve specific Problem
+    10. A software package is <br><b>Ans... </b> Group of programs that solve specific Problem
   </p><p>
-    11. The main aim of Software engineering is to produce a system having these properties => Correctness, Usability and Cost-effectiveness
+    11. The main aim of Software engineering is to produce a system having these properties <br><b>Ans... </b> Correctness, Usability and Cost-effectiveness
   </p><p>
-    12. Programs designed to perform specific tasks is called known as => Application Software
+    12. Programs designed to perform specific tasks is called known as <br><b>Ans... </b> Application Software
   </p><p>
-    13. SDLC => Software Development Life Cycle
+    13. SDLC <br><b>Ans... </b> Software Development Life Cycle
     </p><p>
-    14. Which one is not a software company in India? => Reliance<br>
+    14. Which one is not a software company in India? <br><b>Ans... </b> Reliance <br>
 { a) Infosys c) Reliance b) Wipro d) TCS }
     </p><p>
-    15. Software used for internet application is => Java
+    15. Software used for internet application is <br><b>Ans... </b> Java
     </p><p>
-    16. A firmware is => A software substitute for Hardware
+    16. A firmware is <br><b>Ans... </b> A software substitute for Hardware
     </p><p>
-    17. Which of the following software is used for creating computerized ledger => Spreadsheet software
+    17. Which of the following software is used for creating computerized ledger <br><b>Ans... </b> Spreadsheet software
     </p><p>
-    18. This type of software allows user to edit, modify and distribute modified source code => Open source software
+    18. This type of software allows user to edit, modify and distribute modified source code <br><b>Ans... </b> Open source software
     </p><p>
-    19. A firmware refers to sequence of instruction substituted for => Hardware
+    19. A firmware refers to sequence of instruction substituted for <br><b>Ans... </b> Hardware
 </p>
- 
-
              
                       </div>
                   
@@ -468,10 +466,7 @@ services. </p>
               
               </div>
               
-           <hr>
-            
- 
-            
+
             </div>
             
             </div>
