--- a/views/dca1semOnlineLessonChapter7.ejs
+++ b/views/dca1semOnlineLessonChapter7.ejs
@@ -252,63 +252,64 @@ machine language and executes it immediately. </p>
 whenever needed without rewriting. We refer to a subprogram by different names in different
 programming languages. For example, other names used for it are subroutine, subprocedure, and
 function. </p>
+           <hr>
 <p>
   <b>OLD QUESTION:</b>
   </p><p>
-    1. A compiler is a translator program that converts a high-level
+    1. A ________ is a translator program that converts a high-level
 language program into its equivalent machine language program
-and executes it immediately
+and executes it immediately <br><b>Ans... </b> compiler
   </p><p>
-    2. Computer language is not classified as => medium level language
+    2. Computer language is not classified as <br><b>Ans... </b> medium level language
   </p><p>
     3. A translator program that translate and assembly language program into
-its equivalent machine language program is => Assembler
+its equivalent machine language program is <br><b>Ans... </b> Assembler
   </p><p>
-    4. Compiler translate a _______ language into equivalent machine language program => High level
+    4. Compiler translate a _______ language into equivalent machine language program <br><b>Ans... </b> High level
   </p><p>
-    5. Disadvantages of machine language are => Difficult to program
+    5. Disadvantages of machine language are <br><b>Ans... </b> Difficult to program
   </p><p>
-    6. Assembler converts assembly language to => Machine Language Program
+    6. Assembler converts assembly language to <br><b>Ans... </b> Machine Language Program
   </p><p>
-    7. Which statement is not correct with respect to machine language? => Easy to modify
+    7. Which statement is not correct with respect to machine language? <br><b>Ans... </b> Easy to modify
   </p><p>
-    8. IBM stands for => International Business Machine
+    8. IBM stands for <br><b>Ans... </b> International Business Machine
   </p><p>
-    9. To convert high level language to machine language we use => Compiler
+    9. To convert high level language to machine language we use <br><b>Ans... </b> Compiler
   </p><p>
-    10. Every Computer understand only one language without using any translator which is => Machine Language
+    10. Every Computer understand only one language without using any translator which is <br><b>Ans... </b> Machine Language
   </p><p>
-    11. A computer program that converts an entire program into machine language is called a/an => compiler
+    11. A computer program that converts an entire program into machine language is called a/an <br><b>Ans... </b> compiler
   </p><p>
-    12. Conversion of Assembly language program to machine language program is performed by => Assembler
+    12. Conversion of Assembly language program to machine language program is performed by <br><b>Ans... </b> Assembler
   </p><p>
-    13. A program written in 0's and 1's are known as => Machine language (Binary code an ti bawk).
+    13. A program written in 0's and 1's are known as <br><b>Ans... </b> Machine language (Binary code an ti bawk).
     </p><p>
-    14. The advantage of High level language is => Machine Independent
+    14. The advantage of High level language is <br><b>Ans... </b> Machine Independent
     </p><p>
-    15. FORTRAN => Formula Translation
+    15. FORTRAN <br><b>Ans... </b> Formula Translation
     </p><p>
-    16. Which of the following computer language is used for artificial intelligence? => PROLOG
+    16. Which of the following computer language is used for artificial intelligence? <br><b>Ans... </b> PROLOG
     </p><p>
-    17. The language that generate output report resulting from processing of common business application is => COBOL
+    17. The language that generate output report resulting from processing of common business application is <br><b>Ans... </b> COBOL
     </p><p>
-    18. COBOL stands for => Common Business Oriented Language
+    18. COBOL stands for <br><b>Ans... </b> Common Business Oriented Language
     </p><p>
-    19. Full form of BASIC is => Beginner All-purpose Symbolic Instruction Codes
+    19. Full form of BASIC is <br><b>Ans... </b> Beginner All-purpose Symbolic Instruction Codes
     </p><p>
-    20. The first high level language to be introduced in personal computer is BASIC.
+    20. The first high level language to be introduced in personal computer is <br><b>Ans... </b> BASIC.
     </p><p>
-    21. Software used for internet application is => Java
+    21. Software used for internet application is <br><b>Ans... </b> Java
     </p><p>
-    22. RPG => Report Program Generator, a programming language developed by IBM in the mid-60's for developing business applications
+    22. RPG <br><b>Ans... </b> Report Program Generator, a programming language developed by IBM in the mid-60's for developing business applications
 </p><p>
-23. LISP => List processing is the second-oldest high-level programming language in widespread use today. Only Fortran is older, by one year. Developed in 1959 by John McCarthy.
+23. LISP <br><b>Ans... </b> List processing is the second-oldest high-level programming language in widespread use today. Only Fortran is older, by one year. Developed in 1959 by John McCarthy.
 </p><p>
-24. SNOBOL => String Oriented Symbolic Language
+24. SNOBOL <br><b>Ans... </b> String Oriented Symbolic Language
 </p><p>
-25. The C programming language was developed in 1972 by Dennis Ritchie and Brian Kernighan
+25. The C programming language was developed in 1972 by <br><b>Ans... </b> Dennis Ritchie and Brian Kernighan
 </p><p>
-26. The limitation of writing instruction in machine language includes => Error prone, difficult to program, machine dependent.
+26. The limitation of writing instruction in machine language includes <br><b>Ans... </b> Error prone, difficult to program, machine dependent.
 </p>
 
  
@@ -489,10 +490,7 @@ its equivalent machine language program is => Assembler
               
               </div>
               
-           <hr>
-            
- 
-            
+   
             </div>
             
             </div>
