--- a/views/dca1semOnlineLessonChapter8.ejs
+++ b/views/dca1semOnlineLessonChapter8.ejs
@@ -227,44 +227,45 @@ with each other.</p>
 <p><code>Handheld Computers </code> – A handheld computer is a device whose size, weight, and design are such
 that a user can use it comfortably by holding it in hand. It is also known as palmtop because it can be
 kept on palm and operated. E.g., Tablet PC, PDA/Pocket PC, smartphone etc.</p>
+           <hr>
 <p>
   <b>OLD QUESTION:</b>
   </p><p>
-    1. A portable computer used by people who need computing resources whenever they go are known as => Notebook Computer
+    1. A portable computer used by people who need computing resources whenever they go are known as <br><b>Ans... </b> Notebook Computer
   </p><p>
-    2. Which computer has expansion slot? => Desktop Computers
+    2. Which computer has expansion slot? <br><b>Ans... </b> Desktop Computers
   </p><p>
-    3. Which is not a portable computer? => Desktop <br>
+    3. Which is not a portable computer? <br><b>Ans... </b> Desktop <br>
 { a) Laptop c) Pocket PC b) Tablet d) Desktop }
   </p><p>
-    4. A personal computer is => micro computer
+    4. A personal computer is <br><b>Ans... </b> micro computer
   </p><p>
-    5. A workstation differs from a personal computer in => All of the above <br>
+    5. A workstation differs from a personal computer in <br><b>Ans... </b> All of the above <br>
 { a) Processing power c) Operating system b) Storage capacity d) All of the above }
   </p><p>
-    6. PDA stands for => Personal Digital Assistant
+    6. PDA stands for <br><b>Ans... </b> Personal Digital Assistant
   </p><p>
-    7. Personal computers use a number of chips mounted on a main circuit board called motherboard.
+    7. Personal computers use a number of chips mounted on a main circuit board called <br><b>Ans... </b> motherboard.
   </p><p>
-    8. The first high level language to be introduced in personal computer is BASIC.
+    8. The first high level language to be introduced in personal computer is <br><b>Ans... </b> BASIC.
   </p><p>
-    9. Workstation are normally used for => All of the above <br> 
+    9. Workstation are normally used for <br><b>Ans... </b> All of the above <br> 
 { a) Computer Aided Designed c) Multimedia Applications b) Scientific simulations d) All of the above }
   </p><p>
-    10. The main characteristic Workstation Computer is => processing power is more
+    10. The main characteristic Workstation Computer is <br><b>Ans... </b> processing power is more
   </p><p>
-    11. Mainframe computer are used in => Banks
+    11. Mainframe computer are used in <br><b>Ans... </b> Banks
   </p><p>
-    12. Banks, Hospital and Railways usually used one type of the following computer system => Mainframe Computer
+    12. Banks, Hospital and Railways usually used one type of the following computer system <br><b>Ans... </b> Mainframe Computer
   </p><p>
-    13. To simulate airflow in different speed and different altitude an Aerospace Industry use => Supercomputer
+    13. To simulate airflow in different speed and different altitude an Aerospace Industry use <br><b>Ans... </b> Supercomputer
      </p><p>
-    14. Number cruncher is the informal name for supercomputer
+    14. Number cruncher is the informal name for <br><b>Ans... </b> supercomputer
      </p><p>
-    15. Supercomputer are not used in => Garment Industry <br>
+    15. Supercomputer are not used in <br><b>Ans... </b> Garment Industry <br>
 { a) Petroleum Industry c) Aerospace Industry b) Garment Industry d) Automobile Industry }
      </p><p>
-    16. . Which of the following provides central storage facility to store files of several user on a network => File server <br>
+    16. . Which of the following provides central storage facility to store files of several user on a network <br><b>Ans... </b> File server <br>
 { a) Database Server c) print server b) File server d) Networked }
 </p>
  
@@ -445,10 +446,7 @@ kept on palm and operated. E.g., Tablet PC, PDA/Pocket PC, smartphone etc.</p>
               
               </div>
               
-           <hr>
-            
- 
-            
+   
             </div>
             
             </div>
