--- a/views/dca1semOnlineLessonChapter9.ejs
+++ b/views/dca1semOnlineLessonChapter9.ejs
@@ -217,40 +217,41 @@ Information Technology (Intermediary Guidelines) Rules 2011.</li>
 features are - Kiosk Machine gives an accurate and precise detail about the product and services in a
 descriptive manner. It is mainly targeted to implement this machine where there is a large number of a
 crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
+           <hr>
 <p>
   <b>OLD QUESTION:</b>
   </p><p>
-    1. Information Technology Act in India was amended in the year 2008.
+    1. Information Technology Act in India was amended in the year <br><b>Ans... </b> 2008 and 2021
   </p><p>
-    2. When did the IT Act come into effect? => October 17 2000
+    2. When did the IT Act come into effect? <br><b>Ans... </b> 17th October, 2000
   </p><p>
-    3. The information Technology Act 2000 (ITA-2000) amendment Bill 2006 has been passed by Indian parliament on => 23rd December 2008
+    3. The information Technology Act 2000 (ITA-2000) amendment Bill 2006 has been passed by Indian parliament on <br><b>Ans... </b> 23rd December 2008
   </p><p>
-    4. The information Technology Act 200 (ITA-2000) is an act of Indian Parliament => Number 21 of 2000
+    4. The information Technology Act 200 (ITA-2000) is an act of Indian Parliament <br><b>Ans... </b> Number 21 of 2000
   </p><p>
-    5. The ITA 2000 consist of 94 section and => 4 Schedules
+    5. The ITA 2000 consist of 94 section and <br><b>Ans... </b> 4 Schedules
   </p><p>
-    6. The ITA 2000 consist of => The original Act contained 94 sections, divided into 13 chapters and 4 schedules.
+    6. The ITA 2000 consist of <br><b>Ans... </b> The original Act contained 94 sections, divided into 13 chapters and 4 schedules.
   </p><p>
-    7. Copy Right grants exclusive rights to use the work such as => All of the above <br>
+    7. Copy Right grants exclusive rights to use the work such as <br><b>Ans... </b> All of the above <br>
 { a) Distributing c) Modifying b) Copying d) All of the above }
   </p><p>
-    8. IPR => Intellectual Property Right
+    8. IPR <br><b>Ans... </b> Intellectual Property Right
   </p><p>
-    9. ________ corresponds to the exclusive right granted to creators of original works => Intellectual property Rights
+    9. ________ corresponds to the exclusive right granted to creators of original works <br><b>Ans... </b> Intellectual property Rights
   </p><p>
-    10. Which of the following is not application of Information Technology (IT) => Resource Utilization management
+    10. Which of the following is not application of Information Technology (IT) <br><b>Ans... </b> Resource Utilization management
   </p><p>
-    11. UNIVAC stand for => Universal Automatic Computer
+    11. UNIVAC stand for <br><b>Ans... </b> Universal Automatic Computer
   </p><p>
-    12. RISC stand for => Reduced Instruction set computer
+    12. RISC stand for <br><b>Ans... </b> Reduced Instruction set computer
   </p><p>
-    13. Information kiosks are generally found in => All of the above <br>
+    13. Information kiosks are generally found in <br><b>Ans... </b> All of the above <br>
 { a) Mails c) Hotels b) Airports d) All of the above }
 </p><p>
-14. Which of the following is best suitable for the term ‘software piracy’? => Counterfeiting of original product and Illegal copying of genuine software.
+14. Which of the following is best suitable for the term ‘software piracy’? <br><b>Ans... </b> Counterfeiting of original product and Illegal copying of genuine software.
 </p><p>
-15. To be considered a cyber-crime, what needs to be involved in the crime? => Network/Internet
+15. To be considered a cyber-crime, what needs to be involved in the crime? <br><b>Ans... </b> Network/Internet
 </p>
  
 
@@ -430,10 +431,7 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
               
               </div>
               
-           <hr>
-            
- 
-            
+          
             </div>
             
             </div>
