--- a/views/dca103onlineclasschapter14.ejs
+++ b/views/dca103onlineclasschapter14.ejs
@@ -212,66 +212,66 @@ Conditional function) (2 MARKS)
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. <img src="/img/insertFormulaButton.jpg"> represents => Insert Function
+1. <img src="/img/insertFormulaButton.jpg"> represents <br><b>Ans... </b> Insert Function
 </p><p>
-2. The function executes if and only if the condition statement is true => IF()
+2. The function executes if and only if the condition statement is true <br><b>Ans... </b> IF()
 </p><p>
-3. The sum ( ) function has => More than one argument <br>
+3. The sum ( ) function has <br><b>Ans... </b> More than one argument <br>
 Note: <em>Braket () hi function/method an ti a, a chhunga number or data awm hi argument an ti.</em>
 </p><p>
-4. Sum ( ) function has how many argument(s)? => more than one
+4. Sum ( ) function has how many argument(s)? <br><b>Ans... </b> more than one
 </p><p>
-5. How many argument is needed in the =SUM() function? => Depends on size
+5. How many argument is needed in the =SUM() function? <br><b>Ans... </b> Depends on size
 </p><p>
-6. <img src="/img/autoSum.jpg"> represents => AutoSum
+6. <img src="/img/autoSum.jpg"> represents <br><b>Ans... </b> AutoSum
 </p><p>
-7. Summation of values from multiple sheet is not possible in MS Excel => False
+7. Summation of values from multiple sheet is not possible in MS Excel <br><b>Ans... </b> False
 </p><p>
-8. A series if number can easily be added up using => AutoSum
+8. A series if number can easily be added up using <br><b>Ans... </b> AutoSum
 </p><p>
-9. The sum ( ) function has more than one argument => True
+9. The sum ( ) function has more than one argument <br><b>Ans... </b> True
 </p><p>
-10. Given: Cell A1 to A10 values. Then, formula to find average is => =AVERAGE(A1:A10)
+10. Given: Cell A1 to A10 values. Then, formula to find average is <br><b>Ans... </b> =AVERAGE(A1:A10)
 </p><p>
-11. Given cell A1=10; b1=5. Then, FX=B1/A1*100 give the => Percentage
+11. Given cell A1=10; b1=5. Then, FX=B1/A1*100 give the <br><b>Ans... </b> Percentage
 </p><p>
 12. A1 to J1 contains mark obtained by CCA student June 2016
-Exam. What is the average mark obtained? => Fx=Average(A1:J1) <br>
+Exam. What is the average mark obtained? <br><b>Ans... </b> Fx=Average(A1:J1) <br>
 { a. Fx=average(A1 to J1) c. Fx=Average(A1;J1) b. Fx=average(A1,J1) d. Fx=Average(A1:J1) }
 </p><p>
-13. Average is calculated using => =Average(C6:G6)
+13. Average is calculated using <br><b>Ans... </b> =Average(C6:G6)
 </p><p>
 14. A1 to A10 contains an array of marks Obtained by DCA studentsJune
-2018 Exam. Find the higher mark Obtain? => =MAX(A1:A10) <br>
+2018 Exam. Find the higher mark Obtain? <br><b>Ans... </b> =MAX(A1:A10) <br>
 { a) =HIGH(A1:A10) c) =HIGH(A1-A10) b) =MAX(A1:A10) d) =MAX(A1-A10) }
 
 </p><p>
-15. To select all, which key is used? => Ctrl + A
+15. To select all, which key is used? <br><b>Ans... </b> Ctrl + A
 </p><p>
-16. From the list of value C6 to C14 largest number is formed using => =MAX(C6:C14) 
+16. From the list of value C6 to C14 largest number is formed using <br><b>Ans... </b> =MAX(C6:C14) 
 </p><p>
-17. <img src="/img/conditionalFormatting.jpg"> represents => Conditional Formatting
+17. <img src="/img/conditionalFormatting.jpg"> represents <br><b>Ans... </b> Conditional Formatting
 </p><p>
-18. Given: cell A1=1; then, IF(A1 < 10,"1 digit","2 or more digits"), What is the output? =><b> 1 digit</b> <br>
+18. Given: cell A1=1; then, IF(A1 < 10,"1 digit","2 or more digits"), What is the output? <br><b>Ans... </b><b> 1 digit</b> <br>
 { a) 1 digit c) No output b) 2 or more digits d) Both (a) and (b) } <br>
 Note: <em>IF() hi excel function chi khat a ni a, if() chhunga condition azirin answer a rawn insiam thin. Tunah hian A1 chu 1 a ni a,
 tichuan, 1 < 10 (1 is less than 10) a ti a. Chu chu a dik (true) avangin a piah chiaha 1 digit chu a display tawp mai a ni. 1 > 10 chu ni se,
 a dik lo (false) dawn a, 2 or more digits tih hi a in display tawp thung ang.</em>
 <img src="/img/ifCondition.jpg" class="img-fluid">
 </p><p>
-19. Given: cell A1=10; then IF(A1 < 10,"1 digit", "2 or more digits"), what is the output? => <b>2 or more digits</b> <br>
+19. Given: cell A1=10; then IF(A1 < 10,"1 digit", "2 or more digits"), what is the output? <br><b>Ans... </b> <b>2 or more digits</b> <br>
 { a. 1 digit c. No Output b. 2 or more digit d. Both a & b  }
 </p><p>
 20. =IF(A1 < B1,"A1 is greater than B1","") give ________ as output. (Given that
-Cell A1=5 and B1=7) => <b>A1 is greater than B1 </b><br>
+Cell A1=5 and B1=7) <br><b>Ans... </b> <b>A1 is greater than B1 </b><br>
 { 1) A is greater than B 3) A and B are equal 2) B is greater than A 4) Print nothing }
 </p><p>
 21. If mark obtained is 85 or above it is graded "outstanding" else it is
 graded passed. What is the output of the IF statement? <em>=IF(G6 > 85,"outstanding","Passed").</em> 
-Given: student X's mark Obtained is 72 => <b>Passed</b> <br>
+Given: student X's mark Obtained is 72 <br><b>Ans... </b> <b>Passed</b> <br>
 { a) Outstanding c) Passed b) First division d) Second division }
 </p><p>
-22. Which of the following is correct syntax in Excel? =>
+22. Which of the following is correct syntax in Excel? <br><b>Ans... </b>
 =IF(LogicalTest, TrueResult, FalseResult)
 </p>
 
@@ -451,10 +451,7 @@ Given: student X's mark Obtained is 72 => <b>Passed</b> <br>
               
               </div>
               
-           <hr>
-            
- 
-            
+         
             </div>
             
             </div>
