--- a/views/dca103onlineclasschapter15.ejs
+++ b/views/dca103onlineclasschapter15.ejs
@@ -221,12 +221,12 @@
   <b>OLD QUESTION:</b>
 </p><p>
 1. _______ permits the user to change a set of data and view the
-corresponding changes to a relative set of data => What-if analysis
+corresponding changes to a relative set of data <br><b>Ans... </b> What-if analysis
 </p><p>
-2. Which of the following is correct? => =power(2,3) <br>
+2. Which of the following is correct? <br><b>Ans... </b> =power(2,3) <br>
 a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
 </p><p>
-3. <img src="/img/sortAndFilter.jpg"> represents => Sort and Filter
+3. <img src="/img/sortAndFilter.jpg"> represents <br><b>Ans... </b> Sort and Filter
 </p>
 
              
@@ -398,10 +398,7 @@ a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
               
               </div>
               
-           <hr>
-            
- 
-            
+     
             </div>
             
             </div>
