--- a/views/dca104onlineclasschapter1.ejs
+++ b/views/dca104onlineclasschapter1.ejs
@@ -217,116 +217,123 @@ Cyber Crime).
 </p><p>
 8)	The equipment needed to allow most home computers to connect to    the Internet is called a<code> MODEM.</code>
 </p><p>
-9)	The excellent browser for browsing text only is Lynx.
+9)	The process of determining the identity of a user who is attempting to access a system is called Authentication.
 </p><p>
-10)	The process of determining the identity of a user who is attempting to access a system is called Authentication.
+10) A set of rules is known as protocol.
 </p><p>
-11)	A common encoding scheme used on newsgroups is called uuencode.
+11)	The<code> URL </code>specifies the Internet address of a file stored on a host computer connected to the Internet.
 </p><p>
-12) A set of rules is known as protocol.
+12)	When the cursor pointer changes to a hand, you are over a  <code>hyperlink.</code>
 </p><p>
-13)	The<code> URL </code>specifies the Internet address of a file stored on a host computer connected to the Internet.
+13)	<code>Tim Berner-Lee</code> is the “Father of the WWW”.
 </p><p>
-14)	When the cursor pointer changes to a hand, you are over a  <code>hyperlink.</code>
-</p><p>
-15)	<code>Tim Berner-Lee</code> is the “Father of the WWW”.
-</p><p>
-16)	The term “thumbnail”, refers to a small version of a large graphical image that you can usually click to display the full-sized image.
+14)	The term “thumbnail”, refers to a small version of a large graphical image that you can usually click to display the full-sized image.
  </p><p>
-17)	The conventional rules for correct behavior on the internet is called <code>Netiquette.</code>
+15)	The conventional rules for correct behavior on the internet is called <code>Netiquette.</code>
 </p><p>
-18)	<code>Internet</code> is network of networks.
+16)	<code>Internet</code> is network of networks.
 </p><p>
-19)	Remote login can be done using Telnet
+17)	<code>Ping command</code> is used to check the connectivity of a live network. 
 </p><p>
-20)	<code>Ping command</code> is used to check the connectivity of a live network. 
+18)	<code>Compress </code>refers to shrink and store data in less space.
 </p><p>
-21)	<code>Compress </code>refers to shrink and store data in less space.
+19)	A company that offers Internet access is known as Internet Service Provider (ISP).
 </p><p>
-22) Browsers are sometimes referred to as Web clients.
+20)	<code>A Packet Switching system </code>permits multiple pairs of computers to communicate across a shared network with minimal delay.
 </p><p>
-23)	A company that offers Internet access is known as Internet Service Provider (ISP).
+21)	The most common transfer protocol used on the Internet is<code> HTTP. </code>
 </p><p>
-24)	<code>A Packet Switching system </code>permits multiple pairs of computers to communicate across a shared network with minimal delay.
+22) <code>A Web Browser</code> is an application that displays Web pages.
 </p><p>
-25)	The most common transfer protocol used on the Internet is<code> HTTP. </code>
-</p><p>
-26) <code>A Web Browser</code> is an application that displays Web pages.
-</p><p>
-27)	<code>A packet sniffer </code>is a program that captures data from information packets as they travel over the network.
-</p><p>
-28)	<code>E-commerce</code> or electronic commerce means  buying  and  selling items online.
-</p><p>
-29)	The expanding rate of the internet per month is 12%
-</p><p>
-30)	In Cyber Law terminology 'DOS' means Distant Operator Service.
-</p><p>
-33) Software that is distributed for free on a trial basis is called shareware.
-</p><p>
-34) Hyperlink changes an arrow of a mouse to a pointing hand.
-</p><p>
-35) When someone is TYPING AN ENTIRE SENTENCE IN ALL CAPITAL LETTERS, that person is SHOUTING. It is not proper netiquette to TYPE IN ALL CAPS, especially in e-mail.
-</p><p>
-36) Cryptography, or cryptology is the practice and study of techniques for secure communication in the presence of third parties called adversaries.
-</p><p>
-37) Cyberstalking is the use of the Internet or other electronic means to stalk or harass an individual, group, or organization. It may include false accusations, defamation, slander and libel.
+23)	<code>A packet sniffer </code>is a program that captures data from information packets as they travel over the network.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. E-commerce or electronic commerce means <br><b>Ans... </b> buying  and  selling items online.
 </p><p>
-2. 
+2. The expanding rate of the internet per month is <br><b>Ans... </b> 12%
 </p><p>
-3. 
+3. In Cyber Law terminology 'DOS' means <br><b>Ans... </b> Distant Operator Service.
 </p><p>
-4. 
+4. Software that is distributed for free on a trial basis is called <br><b>Ans... </b> shareware.
 </p><p>
-5. 
+5. ________ changes an arrow of a mouse to a pointing hand <br><b>Ans... </b>
 </p><p>
-6. 
+6. When someone is TYPING AN ENTIRE SENTENCE IN ALL CAPITAL LETTERS, that person is <br><b>Ans... </b> SHOUTING. <br> <em>It is not proper netiquette to TYPE IN ALL CAPS, especially in e-mail.</em>
 </p><p>
-7. 
+7. Protocols are <br><b>Ans... </b> set of rules
 </p><p>
-8. 
+8. Cyberstalking <br><b>Ans... </b> is the use of the Internet or other electronic means to stalk or harass an individual, group, or organization. It may include false accusations, defamation, slander and libel.
 </p><p>
-9. 
+9. The right to copy or duplicate material can be granted only by the owner of
+the information is called <br><b>Ans... </b> Copyright
 </p><p>
-10. 
+10. Which one of the following refers to the study of structure? <br><b>Ans... </b> Anatomy
 </p><p>
-11. 
+11. Cryptography is the science of information security <br><b>Ans... </b> True
 </p><p>
-12. 
+12. The study of encryption is called <br><b>Ans... </b> Cryptography
 </p><p>
-13. 
+13. E-banking is also known as <br><b>Ans... </b> Internet Banking.
 </p><p>
-14. 
+14. Credit Card is also known as <br><b>Ans... </b> plastic money.
 </p><p>
-15. 
+15. ERP stands for <br><b>Ans... </b> Enterprise Resource Planning
 </p><p>
-16. 
+16. WWW <br><b>Ans... </b> World Wide Web
 </p><p>
-17. 
+17. Which of the following URL is the correct? <br><b>Ans... </b> http://www.google.com
 </p><p>
-18. 
+18. Network of network is called a/an <br><b>Ans... </b> Internet
 </p><p>
-19. 
+19. VoIP <br><b>Ans... </b> Voice over Internet Protocol
 </p><p>
-20. 
+20. Which of the following protocol is used for WWW? <br><b>Ans... </b> http
 </p><p>
-21. 
+21. HTTP <br><b>Ans... </b> Hypertext Transfer Protocol
 </p><p>
-22. 
+22. The excellent browser for browsing text only is <br><b>Ans... </b> Lynx.
 </p><p>
-23. 
+23. A common encoding scheme used on newsgroups is called <br><b>Ans... </b> uuencode.
 </p><p>
-24. 
+24. Browsers are sometimes referred to as <br><b>Ans... </b>  Web clients.
 </p><p>
-25. 
+25. Remote login can be done using <br><b>Ans... </b> Telnet
 </p><p>
-26. 
+26. Which one of the following changes an arrow of a mouse to a pointing hand? <br><b>Ans... </b> Hyperlink
 </p><p>
-27. 
+27. The conventional rules for correct behavior on the internet is? <br><b>Ans... </b> Netiquette
+</p><p>
+28. What is Netiquette? <br><b>Ans... </b> The proper use of manners and etiquette on the internet
+</p><p>
+29. ________  is maintaining business relationship and selling information <br><b>Ans... </b> E-Commerce
+</p><p>
+30. Buying and selling the product over electronic system like Internet is called <br><b>Ans... </b> e-commerce
+</p><p>
+31. Buying and selling items on the Net is called <br><b>Ans... </b> E-commerce
+</p><p>
+32. The internet started as a U.S government project in the year 1969 called <br><b>Ans... </b> ARPANET
+</p><p>
+33. The internet is controlled by <br><b>Ans... </b> None
+</p><p>
+34. To join the Internet, the computer has to be connected to a <br><b>Ans... </b> internet service provider
+</p><p>
+35. Which one of the following attack is normally prevalent in financial
+institutions or for purpose of committing financial crime? <br><b>Ans... </b> Salami Attack
+</p><p>
+36. IRC stands for <br><b>Ans... </b> internet relay chat
+</p><p>
+37. “Unlawful acts wherein the computer is either a tool or target or both” means? <br><b>Ans... </b> Cyber crime
+</p><p>
+38. Unauthorized access to computer system or network is referred to as <br><b>Ans... </b> Hacking
+</p><p>
+39. Network are vulnerable to computer crime like <br><b>Ans... </b> Hacking, Viruses, software piracy
+</p><p>
+40. The process of determining the identity of a user who is attempting to access a system is called <br><b>Ans... </b> Authentication
+</p><p>
+41. Password is a method of authentication <br><b>Ans... </b> True
 </p>
 
              
@@ -504,10 +511,7 @@ Cyber Crime).
               
               </div>
               
-           <hr>
-            
- 
-            
+          
             </div>
             
             </div>
