--- a/views/dca104onlineclasschapter5.ejs
+++ b/views/dca104onlineclasschapter5.ejs
@@ -238,69 +238,79 @@ Information Privacy, Copyright Issues, Basics of Asymmetric Cryptosystems.
 20) The Information Technology Act (ITA), 2000 consists of <code>94 sections.</code>
 </p><p>
 21) <code>Intellectual Property Right</code> deals with trademark, patent and design rights.
-</p><p>
-22) Unlawful acts wherein the computer is either a tool or target or both means Cyber crime.
-</p><p>
-23) The right to copy or duplicate material can be granted only by the owner of the information is called copyright
-</p><p>
-24) IMAP4 stands for Internet Mail Access Protocol version 4, is an Internet standard protocol for storing and retrieving messages from Simple Mail Transfer Protocol (SMTP) hosts.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Unlawful acts wherein the computer is either a tool or target or both means <br><b>Ans... </b> Cyber crime.
 </p><p>
-2. 
+2. The right to copy or duplicate material can be granted only by the owner of the information is called <br><b>Ans... </b> copyright
 </p><p>
-3. 
+3. Firewall are used to protect againts <br><b>Ans... </b> unauthorized attack
 </p><p>
-4. 
+4. The most common form of security is <br><b>Ans... </b> Password
 </p><p>
-5. 
+5. Accurate and complete data enters the system for processing and
+remains accurate thereafter, is said to have <br><b>Ans... </b> Data Integrity
 </p><p>
-6. 
+6. Which from the following is a threat to user on the internet? <br><b>Ans... </b> All of the above <br>
+{ a) worms b) Trojan c) virus d) All of the above }
 </p><p>
-7. 
+7. Firewall is hardware or software designed to protect against network hackers <br><b>Ans... </b> True
 </p><p>
-8. 
+8. Proxy server is a firewall <br><b>Ans... </b> True
 </p><p>
-9. 
+9. Which one of the following is a combination of hardware and software
+that are used to protect the network? <br><b>Ans... </b> Firewall
 </p><p>
-10. 
+10. Hardware and software combination that are built using routers, servers and a
+variety of software is called? <br><b>Ans... </b> Firewall
 </p><p>
-11. 
+11. SNMP <br><b>Ans... </b> Simple network management Protoco
 </p><p>
-12. 
+12. OSI <br><b>Ans... </b> Open Systems Interconnection
 </p><p>
-13. 
+13. IMAP <br><b>Ans... </b> Internet Mail Access Protocol
 </p><p>
-14. 
+14. ROFL <br><b>Ans... </b> Rolling On Floor Laughing
 </p><p>
-15. 
+15. FAQ <br><b>Ans... </b> Frequently Ask Question
 </p><p>
-16. 
+16. ASAP <br><b>Ans... </b> As Soon as Possible
 </p><p>
-17. 
+17. ADSL <br><b>Ans... </b> Asymmetric Digital Subscriber Line
 </p><p>
-18. 
+18. ASCII <br><b>Ans... </b> American Standard Code for Information Interchange
 </p><p>
-19. 
+19. ICANN <br><b>Ans... </b> Internet Corporation for Assigned Names and Numbers
 </p><p>
-20. 
+20. Who invented the modem? <br><b>Ans... </b> AT&T Information Systems, USA
 </p><p>
-21. 
+21. RSS feed web technology <br><b>Ans... </b> provides news that can automatically download right to your desktop
 </p><p>
-22. 
+22. Bitcoin <br><b>Ans... </b> is a payment system introduced as open-source software in
+2009 by developer Satoshi Nakamoto.
 </p><p>
-23. 
+23. Email spoofing refers to <br><b>Ans... </b> email that appears to have been originated
+from one source when it was actually sent from another source.
 </p><p>
-24. 
+24. IMAP <br><b>Ans... </b> Internet Mail Access Protocol
 </p><p>
-25. 
+25. Which one of the following is a valid IP address <br><b>Ans... </b> 192.168.50.110 <br>
+{ a) 350.12.555.50 b) 1.777.215.4545 c) 192.168.350.20 d) 192.168.50.110 }
 </p><p>
-26. 
+26. The file extension name of HTML is .html <br><b>Ans... </b> True
 </p><p>
-27. 
+27. Moving a file from a remote computer to one‟s computer is called <br><b>Ans... </b> Transferring
+</p><p>
+28. ASP means <br><b>Ans... </b> Active Server Page 
+</p><p>
+29. Access of web information from any computer hardware running any OS
+using any type of display is called <br><b>Ans... </b> Cross-platform
+</p><p>
+30. Which one of the following generic term is used to describe a client,
+server, or network? <br><b>Ans... </b> Nodes
 </p>
 
              
@@ -478,9 +488,7 @@ Information Privacy, Copyright Issues, Basics of Asymmetric Cryptosystems.
               
               </div>
               
-           <hr>
-            
- 
+          
             
             </div>
             
