--- a/views/dca106onlineclasschapter7.ejs
+++ b/views/dca106onlineclasschapter7.ejs
@@ -328,45 +328,46 @@ Steps:<br>
 8. Then set fill and line attributes such as line, weight and fill color.<br>
 9. Select a position for the key line in front of the object.<br>
 10. Click on the ok button.
-</p><p>
+</p>
+<hr><p>
  <b>OLD QUESTION:</b>
   </p><p>
-   1. PageMaker 6.5 publications can be outputted to high-end or lowend printers, saved as HTML files, and may even be saved as PDF
+   1. PageMaker publications <br><b>Ans... </b> can be outputted to high-end or low end printers, saved as HTML files, and may even be saved as PDF
 files for placement in other applications. 
    </p><p>
-   2. The long form of PDF is => Portable Document Format
+   2. The long form of PDF is <br><b>Ans... </b> Portable Document Format
   </p><p>
-    3. PDF file are => Not editable
+    3. PDF file are <br><b>Ans... </b> Not editable
    </p><p>
-   4. Fonts, size, position etc. Were included in => Character specification
+   4. Fonts, size, position etc. Were included in <br><b>Ans... </b> Character specification
    </p><p>
-   5. The font type like Normal, bold, italic, underline etc are called => Type style
+   5. The font type like Normal, bold, italic, underline etc are called <br><b>Ans... </b> Type style
    </p><p>
-     6. Header and footer styles ensure => Consistency
+     6. Header and footer styles ensure <br><b>Ans... </b> Consistency
    </p><p>
-     7. TOC stand for => Table of Content
+     7. TOC stand for <br><b>Ans... </b> Table of Content
    </p><p>
-     8. The full form of TIF format is => Tagged-image file
+     8. The full form of TIF format is <br><b>Ans... </b> Tagged-image file
    </p><p>
-     9. Rearranging the order of the document page, like page 3 can become page 7 etc is done in => Sorting pages
+     9. Rearranging the order of the document page, like page 3 can become page 7 etc is done in <br><b>Ans... </b> Sorting pages
    </p><p>
      10. When line of text are straight on the left and right margins, such as most
-newspaper columns, the text is => fully justified
+newspaper columns, the text is <br><b>Ans... </b> fully justified
    </p><p>
-     11. You can create up to ________ columns in a page in PageMaker => 20
+     11. You can create up to ________ columns in a page in PageMaker <br><b>Ans... </b> 20
    </p><p>
-     12. In PageMaker space between two columns is called => Gutter
+     12. In PageMaker space between two columns is called <br><b>Ans... </b> Gutter
    </p><p>
-     13. Use the pointer tool to select two or more columns within the same story.
+     13. Use the pointer tool to select two or more columns <br><b>Ans... </b> within the same story.
    </p><p>
-     14. In Page Maker we can have ________ column => Multi
+     14. In Page Maker we can have ________ column <br><b>Ans... </b> Multi
    </p><p>
      15. In PageMaker, we can create the border automatically around the object
-by using option from Utilities > Plug-ins => Keyline
+by using option from Utilities > Plug-ins <br><b>Ans... </b> Keyline
 </p><p>
-  16. <img src="/img/bulletandNumbering.jpg"> The figure represent => Bullets and Numbering
+  16. <img src="/img/bulletandNumbering.jpg"> The figure represent <br><b>Ans... </b> Bullets and Numbering
 </p><p>
-  17. The shortcut key for special character Em dash is => Alt + Shift + (-)
+  17. The shortcut key for special character Em dash is <br><b>Ans... </b> Alt + Shift + (-)
    </p>
   
                       </div>
@@ -543,10 +544,7 @@ by using option from Utilities > Plug-ins => Keyline
               
               </div>
               
-           <hr>
-            
- 
-            
+       
             </div>
             
             </div>
